--- a/drivers/htc/resources/localization/localization_fr_FR.json
+++ b/drivers/htc/resources/localization/localization_fr_FR.json
@@ -1,22 +1,22 @@
 {
 	"language_tag": "fr_FR",
 	"vive_controller": "Contrôleur Vive",
-	"vive_pro": "Vive Pro",
+	"vive_pro": "VIVE Pro",
 	"vive": "Vive",
-	"vive_tracker": "Vive Tracker",
-	"vive_tracker_handed": "Vive Tracker en main",
-	"vive_tracker_left_foot": "Vive Tracker sur le pied gauche",
-	"vive_tracker_right_foot": "Vive Tracker sur le pied droit",
-	"vive_tracker_left_shoulder": "Vive Tracker sur l'épaule gauche",
-	"vive_tracker_right_shoulder": "Vive Tracker sur l'épaule droite",
-	"vive_tracker_left_elbow": "Vive Tracker sur le coude gauche",
-	"vive_tracker_right_elbow": "Vive Tracker sur le coude droit",
-	"vive_tracker_left_knee": "Vive Tracker sur le genou gauche",
-	"vive_tracker_right_knee": "Vive Tracker sur le genou droit",
-	"vive_tracker_waist": "Vive Tracker sur la taille",
-	"vive_tracker_chest": "Vive Tracker sur la poitrine",
-	"vive_tracker_camera": "Vive Tracker sur la caméra",
-	"vive_tracker_keyboard": "Vive Tracker sur le clavier",
+	"vive_tracker": "VIVE Tracker",
+	"vive_tracker_handed": "VIVE Tracker en main",
+	"vive_tracker_left_foot": "VIVE Tracker sur le pied gauche",
+	"vive_tracker_right_foot": "VIVE Tracker sur le pied droit",
+	"vive_tracker_left_shoulder": "VIVE Tracker sur l'épaule gauche",
+	"vive_tracker_right_shoulder": "VIVE Tracker sur l'épaule droite",
+	"vive_tracker_left_elbow": "VIVE Tracker sur le coude gauche",
+	"vive_tracker_right_elbow": "VIVE Tracker sur le coude droit",
+	"vive_tracker_left_knee": "VIVE Tracker sur le genou gauche",
+	"vive_tracker_right_knee": "VIVE Tracker sur le genou droit",
+	"vive_tracker_waist": "VIVE Tracker sur la taille",
+	"vive_tracker_chest": "VIVE Tracker sur la poitrine",
+	"vive_tracker_camera": "VIVE Tracker sur la caméra",
+	"vive_tracker_keyboard": "VIVE Tracker sur le clavier",
 	"/input/trigger": "Gâchette",
 	"/input/volume_up": "Volume +",
 	"/input/volume_down": "Volume -",
