--- a/drivers/htc/resources/localization/localization_pt_BR.json
+++ b/drivers/htc/resources/localization/localization_pt_BR.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "Rastreador do Vive no pé direito",
 	"vive_tracker_left_shoulder": "Rastreador do Vive no ombro esquerdo",
 	"vive_tracker_right_shoulder": "Rastreador do Vive no ombro direito",
-	"vive_tracker_left_elbow": "Detector Vive no cotovelo esquerdo",
-	"vive_tracker_right_elbow": "Detector Vive no cotovelo direito",
-	"vive_tracker_left_knee": "Detector Vive no joelho esquerdo",
-	"vive_tracker_right_knee": "Detector Vive no joelho direito",
+	"vive_tracker_left_elbow": "Rastreador do Vive no cotovelo esquerdo",
+	"vive_tracker_right_elbow": "Rastreador do Vive no cotovelo direito",
+	"vive_tracker_left_knee": "Rastreador do Vive no joelho esquerdo",
+	"vive_tracker_right_knee": "Rastreador do Vive no joelho direito",
 	"vive_tracker_waist": "Rastreador do Vive na cintura",
 	"vive_tracker_chest": "Rastreador do Vive no peito",
 	"vive_tracker_camera": "Rastreador do Vive na câmera",
