--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json
@@ -8,7 +8,7 @@
 	"pairing_nofreedongles_title": "Parear controle",
 	"pairing_nofreedongles_desc": "Parece que os controles já estão conectados!",
 	"pairing_nofreedongles_instr": "Para parear um controle novo, <span class=\"Highlight\">desligue um dos controles existentes</span>.",
-	"pairing_nodongles_title": "Nenhum dispositivo emparelhável detectado",
+	"pairing_nodongles_title": "Nenhum dispositivo pareável detectado",
 	"pairing_nodongles_desc": "O SteamVR não encontrou um aparelho com o qual parear os controles.",
 	"pairing_nodongles_instr": "Confirme que o headset está conectado.",
 	"pairing_selectdevice_title": "Selecione o tipo do controle",
@@ -17,11 +17,11 @@
 	"pairingdevice_vivetracker_shortname": "Rastreador HTC Vive",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
 	"pairingdevice_a_knuckles_controllername": "um controle do Valve Index",
-	"pairingdevice_a_vivewand_shortname": "um Controle HTC Vive",
-	"pairingdevice_a_vivetracker_shortname": "um Rastreador HTC Vive",
+	"pairingdevice_a_vivewand_shortname": "um controle HTC Vive",
+	"pairingdevice_a_vivetracker_shortname": "um rastreador HTC Vive",
 	"pairingdevice_a_logitechvrinkpilotedition_shortname": "um Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "Parear %1$s",
-	"pairinginstructions_generic_desc": "Coloque o seu controle no modo de emparelhamento",
+	"pairinginstructions_generic_desc": "Coloque o seu controle no modo de pareamento",
 	"pairsuccess_title": "Sucesso!",
 	"pairsuccess_desc": "O controle foi conectado.",
 	"pairing_button_system": "Botão System",
