--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_romanian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_romanian.json
@@ -4,22 +4,22 @@
 	"pairing_start_failed_desc": "Asocierea nu a putut să înceapă.",
 	"pairing_initializing_title": "Inițializarea",
 	"pairing_initializing_desc": "Se caută hardware-ul tău de RV.",
-	"pairing_initializing_instr": "Asigură-te că headsetul tău este conectat sau că adaptorii tăi wireless sunt alimentați și porniți.",
+	"pairing_initializing_instr": "Asigură-te că ai casca virtuală conectată sau că adaptoarele wireless sunt alimentate și pornite.",
 	"pairing_nofreedongles_title": "Asociază un controler",
 	"pairing_nofreedongles_desc": "Se pare că ai controlerele conectate deja!",
 	"pairing_nofreedongles_instr": "Pentru a asocia un controler nou, <span class=\"Highlight\">oprește unul dintre controlerele tale existente</span>.",
 	"pairing_nodongles_title": "Nu a fost detectat niciun dispozitiv care poate fi asociat",
 	"pairing_nodongles_desc": "SteamVR nu poate găsi niciun hardware cu care să asocieze controlerele.",
-	"pairing_nodongles_instr": "Asigură-te că headsetul este conectat.",
+	"pairing_nodongles_instr": "Asigură-te că ai conectat casca virtuală.",
 	"pairing_selectdevice_title": "Selectează tipul tău de controler",
-	"pairingdevice_knuckles_controllername": "Valve Index Controller",
+	"pairingdevice_knuckles_controllername": "Controler Valve Index",
 	"pairingdevice_vivewand_shortname": "Controler HTC Vive",
 	"pairingdevice_vivetracker_shortname": "Tracker HTC Vive",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
-	"pairingdevice_a_knuckles_controllername": "a Valve Index Controller",
+	"pairingdevice_a_knuckles_controllername": "un controler Valve Index",
 	"pairingdevice_a_vivewand_shortname": "un controler HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "un tracker HTC Vive",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "a Logitech VR Ink Pilot Edition",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "un Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "Asociază %1$s",
 	"pairinginstructions_generic_desc": "Activează modul de asociere pentru controlerul tău",
 	"pairsuccess_title": "Succes!",
@@ -28,14 +28,14 @@
 	"pairing_button_menu": "Butonul de meniu",
 	"pairing_button_b": "Butonul B",
 	"pairing_knuckles_instructions_press": "Apasă și menține apăsat %1$s și %2$s până când lumina de pe controler începe să fie albastră și intermitentă...",
-	"pairing_pen_instructions_press": "Press and hold both the %1$s and %2$s until the light on the pen begins blinking blue...",
+	"pairing_pen_instructions_press": "Apasă și menține apăsat %1$s și %2$s până când lumina de pe stylus începe să fie albastră și intermitentă...",
 	"pairing_tracker_instructions_press": "Apasă și menține apăsat %1$s până când lumina de pe tracker începe să fie albastră și intermitentă...",
 	"pairing_button_differentcontroller": "Vreau să asociez un alt tip de controler...",
 	"pairing_button_done": "Terminat",
 	"pairing_button_cancel": "Anuleazǎ",
 	"pairing_success_again": "Asociază un alt controler...",
-	"pairing_try_again": "Try again...",
-	"pairing_error_title": "Something went wrong",
-	"pairing_timed_out_desc": "The controller timed out.",
+	"pairing_try_again": "Încearcă din nou...",
+	"pairing_error_title": "A apărut o eroare",
+	"pairing_timed_out_desc": "A expirat timpul de conectare cu controlerul.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
