--- a/resources/webinterface/dashboard/localization/bindingui_brazilian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_brazilian.json
@@ -66,10 +66,10 @@
   "SourceInputMode_scroll_tooltip": "Use este controle como uma roda de rolagem. Indica valores de rolagem horizontal e vertical.",
   "SourceInputMode_Force_Sensor_tooltip": "Atribui a ações analógicas um valor de 0 a 1, indicando a força aplicada ao controle.",
   "SourceInputMode_trigger_tooltip": "Use este controle como um gatilho. Toque (ou pressione) e clique (se houver um botão na extremidade do gatilho). Indica um valor de 0 a 1 dependendo da pressão aplicada.",
-  "SourceInputMode_Grab_tooltip": "Combina os sensores capacitivos e os sensores de força para que o agarrar seja mais confiável.",
-  "SourceInputMode_Scalar_Constant_tooltip": "Permite o uso de um controle digital (on/off) para definir um valor analógico (0-1).",
-  "SourceInputMode_Click_tooltip": "Para controles que são botões físicos, é preciso pressionar para ativar. Caso contrário, a ativação acontece quando um limiar configurável for ultrapassado.",
-  "SourceInputMode_TriggerClick_tooltip": "O clique físico ao pressionar o gatilho até o fim.",
+  "SourceInputMode_Grab_tooltip": "Combina os sensores capacitivos e os sensores de força para que o agarrar seja mais responsivo.",
+  "SourceInputMode_Scalar_Constant_tooltip": "Permite o uso de um controle digital (ligado/desligado) para definir um valor analógico (0 a 1).",
+  "SourceInputMode_Click_tooltip": "Para controles que são botões físicos, a ativação ocorre ao pressionar. Caso contrário, a ativação acontece quando um limiar configurável for ultrapassado.",
+  "SourceInputMode_TriggerClick_tooltip": "O clique físico ao pressionar um gatilho até o fim.",
   "SourceInputMode_Touch_tooltip": "Ativado quando o controle estiver sendo tocado.",
   "SourceInputMode_Held_tooltip": "Ativado enquanto o botão estiver pressionado até passar o tempo especificado do \"Atraso do pressionar longo\".",
   "SourceInputMode_Single_tooltip": "Para controles que são botões físicos, é preciso pressionar para ativar. Caso contrário, a ativação acontece quando um limiar configurável for ultrapassado.",
