--- a/resources/webinterface/dashboard/localization/bindingui_french.json
+++ b/resources/webinterface/dashboard/localization/bindingui_french.json
@@ -279,7 +279,7 @@
   "BindingUI_Chord_SelectActionModalHeader": "Choisir une action pour ce raccourci",
   "BindingUI_ExportBindingFile": "Exporter le fichier de configuration",
   "BindingUI_ReplaceDefaultFile": "Remplacer la configuration par défaut",
-  "BindingUI_MirrorMode": "Mode miroir",
+  "BindingUI_MirrorMode": "Mode duplication",
   "BindingUI_LeftHandController": "%1$s gauche",
   "BindingUI_RightHandController": "%1$s droit",
   "BindingUI_Binding_Name": "Nom :",
@@ -295,7 +295,7 @@
   "BindingUI_PageSubTitle_WithVariant": "%3$s pour %1$s (%4$s) dans %2$s",
   "BindingUI_BindingType_autosave": "Modifications locales",
   "BindingUI_BindingType_personal": "Configuration personnelle",
-  "BindingUI_BindingType_developer": "Configuration du développeur",
+  "BindingUI_BindingType_developer": "Configuration de l'équipe de développement",
   "BindingUI_BindingType_developer_legacy": "Anciennes configurations par défaut",
   "BindingUI_BindingType_local_file": "Configuration locale",
   "BindingUI_BindingType_public": "Configuration publique",
@@ -361,7 +361,7 @@
   "BindingUI_List_Select_Confirm_Convert": "Certaines modifications ont été apportées à cette configuration et n'ont pas été enregistrées. En mettant à jour cette configuration, ces modifications seront ignorées. Voulez-vous enregistrer ces modifications comme configuration personnelle avant de mettre à jour cette configuration ?",
   "BindingUI_List_Upgrade_Confirm": "Cette configuration a été créée avec une version obsolète de %1$s. Vous devrez peut-être associer de nouvelles actions pour que cette configuration fonctionne.",
   "BindingUI_List_Developer_Binding_Title": "Configurations officielles pour %1$s",
-  "BindingUI_List_Developer_Binding_Description": "Voici les configurations officielles publiées par le développeur de ce jeu",
+  "BindingUI_List_Developer_Binding_Description": "Voici les configurations officielles publiées par l'équipe de développement de ce jeu",
   "BindingUI_List_Legacy_Binding_Title": "Configurations par défaut pour %1$s",
   "BindingUI_List_Legacy_Binding_Description": "Voici les configurations par défaut du jeu.",
   "BindingUI_List_PublishedBy": "Créée par %1$s",
@@ -465,7 +465,7 @@
   "Settings_General_Cancel": "Annuler",
   "Settings_General_Confirm": "Confirmer",
   "Settings_General_Calibrate": "Calibrer",
-  "Settings_General_NotEnoughSamples": "Veuillez déplacer le stick analogique vers le haut %1$s fois de plus pour terminer la calibration.",
+  "Settings_General_NotEnoughSamples": "Veuillez déplacer le stick analogique vers le haut %1$s fois de plus pour terminer le calibrage.",
   "Settings_General_InviteMoreSamples": "Angle calculé : %1$s degrés. Continuez à déplacer le stick analogique vers le haut pour obtenir une valeur plus précise ou appuyez sur Confirmer pour continuer.",
   "Settings_General_LeftThumbstickAngle": "Angle du stick analogique gauche : %1$s°",
   "Settings_General_RightThumbstickAngle": "Angle du stick analogique droit : %1$s°",
