--- a/resources/webinterface/dashboard/localization/bindingui_greek.json
+++ b/resources/webinterface/dashboard/localization/bindingui_greek.json
@@ -347,7 +347,7 @@
   "AppSelect_CurrentApp": "Τρέχουσα εφαρμογή",
   "AppSelect_LastRunApp": "Τελευταία εφαρμογή που έτρεξε",
   "AppSelect_RecentApp": "Πρόσφατες εφαρμογές",
-  "AppSelect_CompositorName": "Πίνακας SteamVR",
+  "AppSelect_CompositorName": "Μπάρα SteamVR",
   "AppSelect_CoreSteamVRApps": "Κύριες εφαρμογές SteamVR",
   "AppSelect_ControllerTester": "Έλεγχος χειριστηρίου",
   "AppSelect_LegacyDebug": "Παραδοσιακή καθυστέρηση αποσφαλμάτωσης",
