--- a/resources/webinterface/dashboard/localization/bindingui_korean.json
+++ b/resources/webinterface/dashboard/localization/bindingui_korean.json
@@ -83,7 +83,7 @@
   "SourceInputMode_Position_tooltip": "터치패드에서 터치하고 있는 방향 또는 조이스틱을 움직인 방향.",
   "SourceInputMode_Pull_tooltip": "트리거 누르는 양을 표시하는 값 (0-1).",
   "SourceInputMode_Force_tooltip": "컨트롤에 적용된 힘의 양 (0-1).",
-  "SourceInputMode_Proximity_tooltip": "컨트롤의 물체에 가까울 때 true로 설정.",
+  "SourceInputMode_Proximity_tooltip": "컨트롤이 물체에 가까울 때 true로 설정.",
   "SourceInputMode_ClickActivateThreshold_tooltip": "클릭 동작이 true를 반환하기 위해 반드시 충족해야 하는 임계값.",
   "SourceInputMode_TouchActivateThreshold_tooltip": "터치 동작이 true를 반환하기 위해 반드시 충족해야 하는 임계값.",
   "SourceInputMode_ClickDeactivateThreshold_tooltip": "클릭 동작이 false를 반환하기 위해 초과해서는 안되는 임계값.",
@@ -343,7 +343,7 @@
   "BindingUI_SelectAction_Suggested": "권장",
   "SaveError_BindingWriteFailed": "바인딩 파일을 작성하지 못했습니다. 읽기 전용 파일인가요?",
   "SaveError_ActionManifestWriteFailed": "동작 매니페스트 파일을 작성하지 못했습니다. 읽기 전용 파일인가요?",
-  "AppSelect_Title": "수정할 애플리케이션을 선택하세요",
+  "AppSelect_Title": "컨트롤러 설정",
   "AppSelect_CurrentApp": "현재 애플리케이션",
   "AppSelect_LastRunApp": "마지막으로 실행한 애플리케이션",
   "AppSelect_RecentApp": "최근 애플리케이션",
@@ -388,7 +388,7 @@
   "InputDebugger_ActiveActionSets": "활성 액션 세트",
   "InputDebugger_NoActiveActionSets": "애플리케이션에 활성 동작 세트가 없습니다",
   "InputDebugger_None": "없음",
-  "InputDebugger_ActionSetName": "액션 세트",
+  "InputDebugger_ActionSetName": "동작 세트",
   "InputDebugger_SecondaryActionSetName": "보조 동작 세트",
   "InputDebugger_Device": "기기에 한정",
   "InputDebugger_Priority": "중요도",
@@ -403,7 +403,7 @@
   "InputDebugger_ActiveOrigin": "원점:",
   "InputDebugger_UpdateTime": "최근 업데이트:",
   "InputDebugger_Value": "값:",
-  "InputDebugger_ActionUnbound": "액션이 바인딩 되지 않음",
+  "InputDebugger_ActionUnbound": "동작이 바인딩 되지 않음",
   "InputDebugger_Parameters": "매개 변수",
   "InputDebugger_Inputs": "입력:",
   "InputDebugger_Outputs": "출력:",
@@ -426,7 +426,7 @@
   "DisplaySettings_DisplayBrightness": "디스플레이 밝기",
   "DisplaySettings_IndexColumnCorrection": "Index 디스플레이 열 수정",
   "DisplaySettings_ColumnCorrection": "열 수정",
-  "DisplaySettings_ColumnCorrectionDesc": "열 수정은 머리를 움직이는 동안 수직 '스크린 도어 효과'를 완화해줍니다. 대부분의 사용자는 이 기능을 미세 조정 0으로 활성화된 상태로 두어야 합니다.",
+  "DisplaySettings_ColumnCorrectionDesc": "열 수정은 머리를 움직이는 동안 수직 '스크린 도어 효과'를 완화해줍니다. 대부분의 사용자는 이 기능을 0으로 미세 조정하여 활성화된 상태로 두어야 합니다.",
   "DisplaySettings_ColumnCorrectionEdit": "편집",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "디스플레이 맞춤 설정을 활성화하려면 펌웨어 업데이트가 필요합니다.",
   "DisplaySettings_EnableColumnCorrection": "열 수정",
@@ -449,15 +449,15 @@
   "ShowActionButton": "표시",
   "HideActionButton": "숨기기",
   "LegacySetup_SimulatedActionHeader": "시뮬레이션된 동작",
-  "LegacySetup_ActionAliasesHeader": "동작 별명",
+  "LegacySetup_ActionAliasesHeader": "동작 별칭",
   "SimulatedAction_FakeTrigger": "시뮬레이션된 트리거 당기기",
   "SimulatedAction_FakeTrackpadClick": "시뮬레이션된 트랙패드 클릭",
   "TrackpadClickLeft": "왼쪽 트랙패드",
   "TrackpadClickRight": "오른쪽 트랙패드",
   "TrackpadClickNone": "트랙패드 선택",
   "SecondaryControllerTab": "추가 설정",
-  "SecondaryController_ReturnWithLeftHand": "왼손 바인딩으로 반환",
-  "SecondaryController_ReturnWithRightHand": "오른손 바인딩으로 반환",
+  "SecondaryController_ReturnWithLeftHand": "왼손으로 바인딩 반환",
+  "SecondaryController_ReturnWithRightHand": "오른손으로 바인딩 반환",
   "SecondaryController_ReturnWithHead": "HMD를 사용한 바인딩 반환",
   "Settings_ThumbstickDeadzone_Text": "엄지스틱 데드존:",
   "Settings_ControllerSettings_Title": "엄지스틱 설정",
