--- a/resources/webinterface/dashboard/localization/bindingui_portuguese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_portuguese.json
@@ -295,7 +295,7 @@
   "BindingUI_PageSubTitle_WithVariant": "%3$s para \"%1$s\" (%4$s) no \"%2$s\"",
   "BindingUI_BindingType_autosave": "Alterações locais",
   "BindingUI_BindingType_personal": "Config. pessoal",
-  "BindingUI_BindingType_developer": "Config. de desenvolvedor",
+  "BindingUI_BindingType_developer": "Config. de developer",
   "BindingUI_BindingType_developer_legacy": "Predefinições clássicas",
   "BindingUI_BindingType_local_file": "Config. local",
   "BindingUI_BindingType_public": "Config. pública",
@@ -361,7 +361,7 @@
   "BindingUI_List_Select_Confirm_Convert": "A configuração atual tem alterações que ainda não foram guardadas. Atualizar esta configuração irá descartar essas alterações, ou podes guardá-las numa configuração pessoal antes de atualizares esta.",
   "BindingUI_List_Upgrade_Confirm": "Esta configuração é para uma versão antiga de %1$s. Pode ser preciso configurar ações adicionais para que funcione.",
   "BindingUI_List_Developer_Binding_Title": "Configurações oficiais de %1$s",
-  "BindingUI_List_Developer_Binding_Description": "Estas são as configurações oficiais publicadas pelo desenvolvedor deste jogo",
+  "BindingUI_List_Developer_Binding_Description": "Estas são as configurações oficiais publicadas pelo criador deste jogo",
   "BindingUI_List_Legacy_Binding_Title": "Configurações predefinidas de %1$s",
   "BindingUI_List_Legacy_Binding_Description": "Estas são as configurações predefinidas deste jogo.",
   "BindingUI_List_PublishedBy": "Autor: %1$s",
