--- a/resources/webinterface/dashboard/localization/bindingui_schinese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_schinese.json
@@ -32,7 +32,7 @@
   "SourceInputMode_Scroll": "滚动",
   "SourceInputMode_Trackpad_Scroll": "滚动",
   "SourceInputMode_Position": "位置",
-  "SourceInputMode_Pull": "拉动",
+  "SourceInputMode_Pull": "扣动",
   "SourceInputMode_Force": "力度",
   "SourceInputMode_Proximity": "临近",
   "SourceInputMode_Edit": "编辑",
@@ -108,7 +108,7 @@
   "SourceInputMode_ForceReleaseThreshold_tooltip": "为停用操作而必须释放的压力水平。",
   "SourceInputMode_DowngradeSpeed_tooltip": "在已达到力度抓取临界值，但当前仅达到电容感应器临界值时，控制器为了维持抓取而可以移动的最大速度（米/秒）。",
   "SourceInputMode_DropSpeed_tooltip": "在已释放压力，但尚未达到电容式感应器停用临界值时，控制器为了强制掉落而可以移动的最小速度（米/秒）。",
-  "SourceInputMode_ScalarValue_tooltip": "基于布尔值设置一个模拟操作。（例如：A 键按下时设置扳机键拉动为 1）",
+  "SourceInputMode_ScalarValue_tooltip": "基于布尔值设置一个模拟操作。（例如：A 键按下时设置扳机键扣动为 1）",
   "SourceInputMode_ScalarOnX_tooltip": "此控件触发时待设置的模拟 X 值。（例如按下按键）",
   "SourceInputMode_ScalarOffX_tooltip": "此控件停用时待设置的模拟 X 值。（例如松开按键）",
   "SourceInputMode_ScalarOnY_tooltip": "此控件触发时待设置的模拟 Y 值。（例如按下按键）",
@@ -450,7 +450,7 @@
   "HideActionButton": "隐藏",
   "LegacySetup_SimulatedActionHeader": "模拟操作",
   "LegacySetup_ActionAliasesHeader": "操作别名",
-  "SimulatedAction_FakeTrigger": "模拟扳机拉动",
+  "SimulatedAction_FakeTrigger": "模拟扳机扣动",
   "SimulatedAction_FakeTrackpadClick": "模拟触控板点击",
   "TrackpadClickLeft": "左触控板",
   "TrackpadClickRight": "右触控板",
