--- a/resources/webinterface/dashboard/localization/bindingui_thai.json
+++ b/resources/webinterface/dashboard/localization/bindingui_thai.json
@@ -6,7 +6,7 @@
   "SourceInputMode_SelectMode": "ใช้ %1$s เป็น %2$s...",
   "SourceInputMode_none": "ไม่ได้ใช้",
   "SourceInputMode_button": "ปุ่ม",
-  "SourceInputMode_trackpad": "แทร็คแพด",
+  "SourceInputMode_trackpad": "แทร็กแพด",
   "SourceInputMode_joystick": "จอยสติก",
   "SourceInputMode_complex_button": "ปุ่มแบบซับซ้อน",
   "SourceInputMode_toggle_button": "ปุ่มสลับ",
@@ -57,7 +57,7 @@
   "SourceInputMode_DoublePressDelay": "หน่วงการกดสองครั้ง:",
   "SourceInputMode_DeadZone": "เดดโซน",
   "SourceInputMode_button_tooltip": "ใช้ตัวควบคุมนี้เหมือนปุ่ม จัดการกับการสัมผัส การคลิก การจับยึด การคลิกสองครั้ง และการกดนาน",
-  "SourceInputMode_trackpad_tooltip": "ใช้ตัวควบคุมนี้เหมือนแทร็คแพด การกำหนดตำแหน่ง XY การสัมผัส และการกด",
+  "SourceInputMode_trackpad_tooltip": "ใช้ตัวควบคุมนี้เหมือนแทร็กแพด การกำหนดตำแหน่ง XY การสัมผัส และการกด",
   "SourceInputMode_joystick_tooltip": "ใช้ตัวควบคุมนี้เหมือนจอยสติก การกำหนดตำแหน่ง XY การสัมผัส และการกด",
   "SourceInputMode_toggle_button_tooltip": "ใช้ตัวควบคุมนี้เหมือนการกดสลับ กดหนึ่งครั้งเพื่อเปิดใช้งาน กดหนึ่งครั้งเพื่อปิดใช้งาน",
   "SourceInputMode_dpad_click_tooltip": "ใช้ตัวควบคุมนี้เหมือนกำลังคลิก DPAD การคลิกในซีกเหนือ ซีกตะวันออก ซีกใต้ และซีกตะวันตก",
@@ -118,8 +118,8 @@
   "SourceInputMode_HapticAmplitude_tooltip": "แฮปติกจะมีระดับความแรงเท่านี้",
   "SourceInputMode_HapticDuration_tooltip": "ระยะเวลาที่แฮปติกจะคงอยู่",
   "SourceInputMode_HapticFrequency_tooltip": "จำนวนครั้งที่แฮปติกจะกระทบระหว่างช่วงเวลานั้น",
-  "SourceInputMode_ScrollMode_tooltip": "ประเภทการเลื่อนที่คุณชอบใช้ (แทร็คแพด หรือล้อของเมาส์)",
-  "SourceInputMode_SmoothScroll_TrackpadAspectRatio_tooltip": "อัตราส่วนกว้างยาวที่คุณต้องการให้พื้นผิวของแทร็คแพดใช้ประโยชน์ได้ (กว้าง/สูง)",
+  "SourceInputMode_ScrollMode_tooltip": "ประเภทการเลื่อนที่คุณชอบใช้ (แทร็กแพด หรือล้อของเมาส์)",
+  "SourceInputMode_SmoothScroll_TrackpadAspectRatio_tooltip": "อัตราส่วนกว้างยาวที่คุณต้องการให้พื้นผิวของแทร็กแพดใช้ประโยชน์ได้ (กว้าง/สูง)",
   "SourceInputMode_SmoothScroll_Multiplier_tooltip": "การเคลื่อนที่แต่ละครั้งจะเลื่อนได้มากน้อยเท่าใด",
   "SourceInputMode_SmoothScroll_AccelerationPower_tooltip": "การเลื่อนจะเพิ่มความเร็วได้มากเท่าใด",
   "SourceInputMode_SmoothScroll_NotchesPerTouchpad_tooltip": "จำนวนครั้งที่แฮปติกควรยิงเมื่อเลื่อนนิ้วมือของคุณไปตลอดความยาวของทัชแพด",
@@ -152,20 +152,20 @@
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled_tooltip": "เปิดใช้งานการเลื่อนแบบต่อเนื่องหลังจากที่เลื่อนไปยังขอบและพักไว้",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor_tooltip": "พลังของการขยับให้เลื่อนขณะกดค้างแต่ละครั้ง",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate_tooltip": "การเลื่อนขณะกดค้างจะขยับได้เร็วเท่าใด",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop_tooltip": "พื้นที่ของแทร็คแพดตรงส่วนบนสุดที่การพักการเลื่อนจะทำงาน",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom_tooltip": "พื้นที่ของแทร็คแพดตรงส่วนล่างสุดที่การพักการเลื่อนจะทำงาน",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop_tooltip": "พื้นที่ของแทร็กแพดตรงส่วนบนสุดที่การพักการเลื่อนจะทำงาน",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom_tooltip": "พื้นที่ของแทร็กแพดตรงส่วนล่างสุดที่การพักการเลื่อนจะทำงาน",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled_tooltip": "ก่อให้เกิดพัลส์แฮปติกสำหรับการขยับให้เลื่อนขณะกดค้าง",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor_tooltip": "ความเร็วในการเลื่อน",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor_tooltip": "จะเลื่อนได้มากแค่ไหนในแต่ละขั้น",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal_tooltip": "เปอร์เซ็นต์การเคลื่อนที่จากข้างหนึ่งไปยังอีกข้างหนึ่งที่สติกจะไม่เลื่อน",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical_tooltip": "เปอร์เซ็นต์จากบนสุดสู่ล่างสุดที่สติกจะไม่เลื่อน",
   "SourceInputMode_ScrollMode": "โหมดเลื่อน:",
-  "SourceInputMode_ScrollMode_Smooth": "ราบรื่น (เหมือนแทร็คแพด)",
+  "SourceInputMode_ScrollMode_Smooth": "ราบรื่น (เหมือนแทร็กแพด)",
   "SourceInputMode_ScrollMode_Discrete": "แยบยล (เหมือนล้อของเมาส์)",
-  "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "อัตราส่วนแทร็คแพด (w/h):",
+  "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "อัตราส่วนแทร็กแพด (w/h):",
   "SourceInputMode_SmoothScroll_Multiplier": "ตัวเลื่อนทวีคูณ:",
   "SourceInputMode_SmoothScroll_AccelerationPower": "พลังเร่งความเร็ว:",
-  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "แฮปติกนอทช์ต่อความสูงแทร็คแพด:",
+  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "แฮปติกนอทช์ต่อความสูงแทร็กแพด:",
   "SourceInputMode_SmoothScroll_StartDistance": "ระยะการเลื่อนขั้นต่ำ:",
   "SourceInputMode_SmoothScroll_MinThrowVelocity": "ความเร็วระยะขว้างขั้นต่ำ:",
   "SourceInputMode_SmoothScroll_MaxScrollVelocity": "ความเร็วการเลื่อนสูงสุด:",
@@ -451,10 +451,10 @@
   "LegacySetup_SimulatedActionHeader": "คำสั่งแบบจำลอง",
   "LegacySetup_ActionAliasesHeader": "คำสั่งสมนาม",
   "SimulatedAction_FakeTrigger": "เหนี่ยวทริกเกอร์แบบจำลอง",
-  "SimulatedAction_FakeTrackpadClick": "คลิกแทร็คแพดแบบจำลอง",
-  "TrackpadClickLeft": "แทร็คแพดซ้าย",
-  "TrackpadClickRight": "แทร็คแพดขวา",
-  "TrackpadClickNone": "เลือกแทร็คแพด",
+  "SimulatedAction_FakeTrackpadClick": "คลิกแทร็กแพดแบบจำลอง",
+  "TrackpadClickLeft": "แทร็กแพดซ้าย",
+  "TrackpadClickRight": "แทร็กแพดขวา",
+  "TrackpadClickNone": "เลือกแทร็กแพด",
   "SecondaryControllerTab": "การตั้งค่าพิเศษ",
   "SecondaryController_ReturnWithLeftHand": "คืนค่าการกำหนดปุ่มด้วยมือซ้าย",
   "SecondaryController_ReturnWithRightHand": "คืนค่าการกำหนดปุ่มด้วยมือขวา",
