--- a/resources/webinterface/dashboard/localization/dashboard_brazilian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_brazilian.json
@@ -11,7 +11,7 @@
   "GoHome": "Ir para o Início",
   "QuitApp": "Sair do aplicativo",
   "DashboardPower_Header": "Sistema",
-  "BindingCallout_Header": "Exibir controlos",
+  "BindingCallout_Header": "Exibir controles",
   "MutedLabel": "Silenciado",
   "MuteAudioMirror": "Silenciar espelhamento de áudio",
   "UnmuteAudioMirror": "Reativar espelhamento de áudio",
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Configurações de vídeo",
   "Desktop": "Área de trabalho",
   "Desktop_X": "Áreas de trabalho %1$s",
+  "NoDesktopFound": "Nenhuma área de trabalho encontrada.",
+  "DesktopViewsUpdating": "Atualizando visões da área de trabalho...",
+  "AddView": "Adicionar visão",
+  "CloseView": "Fechar visão",
+  "DockHere": "Ancorar aqui",
+  "DockOnLeftController": "Ancorar no controle esquerdo",
+  "UndockFromLeftController": "Desancorar do controle esquerdo",
+  "DockedOnLeftController": "Ancorado no controle esquerdo.",
+  "DockOnRightController": "Ancorar no controle direito",
+  "UndockFromRightController": "Desancorar do controle esquerdo",
+  "DockedOnRightController": "Ancorado no controle direito.",
+  "Undock": "Desancorar",
   "ShowKeyboardLabel": "Teclado",
   "ShowKeyboardTooltip": "Mostrar teclado",
   "HideKeyboardTooltip": "Ocultar teclado",
   "Size": "Tamanho",
+  "Move": "Mover",
   "Mute": "Silenciar",
   "Unmute": "Reativar voz",
   "Mute_Headset": "Silenciar headset",
