--- a/resources/webinterface/dashboard/localization/dashboard_bulgarian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_bulgarian.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Видео настройки",
   "Desktop": "Работен плот",
   "Desktop_X": "Работен плот %1$s",
+  "NoDesktopFound": "Няма открит настолен компютър.",
+  "DesktopViewsUpdating": "Обновяване на изгледа за работния плот…",
+  "AddView": "Добавяне на изглед",
+  "CloseView": "Затваряне на изглед",
+  "DockHere": "Закрепостяване тук",
+  "DockOnLeftController": "Закрепостяване на ляв контролер",
+  "UndockFromLeftController": "Разкрепостяване от ляв контролер",
+  "DockedOnLeftController": "Закрепостен на левия контролер.",
+  "DockOnRightController": "Закрепостяване на десен контролер",
+  "UndockFromRightController": "Разкрепостяване от десен контролер",
+  "DockedOnRightController": "Закрепостен на десния контролер.",
+  "Undock": "Разкрепостяване",
   "ShowKeyboardLabel": "Клавиатура",
   "ShowKeyboardTooltip": "Показване на клавиатурата",
   "HideKeyboardTooltip": "Скриване на клавиатурата",
   "Size": "Размер",
+  "Move": "Преместване",
   "Mute": "Заглушаване",
   "Unmute": "Премахване на заглушаването",
   "Mute_Headset": "Заглушаване на ВР шлема",
