--- a/resources/webinterface/dashboard/localization/dashboard_czech.json
+++ b/resources/webinterface/dashboard/localization/dashboard_czech.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Nastavení obrazu",
   "Desktop": "Plocha",
   "Desktop_X": "Plocha %1$s",
+  "NoDesktopFound": "Nebyla nalezena žádná plocha.",
+  "DesktopViewsUpdating": "Náhledy plochy jsou aktualizovány...",
+  "AddView": "Přidat náhled",
+  "CloseView": "Zavřít náhled",
+  "DockHere": "Ukotvit zde",
+  "DockOnLeftController": "Ukotvit k levému ovladači",
+  "UndockFromLeftController": "Oddělit od levého ovladače",
+  "DockedOnLeftController": "Ukotveno k levému ovladači.",
+  "DockOnRightController": "Ukotvit k pravému ovladači",
+  "UndockFromRightController": "Oddělit od pravého ovladače",
+  "DockedOnRightController": "Ukotveno k pravému ovladači.",
+  "Undock": "Oddělit",
   "ShowKeyboardLabel": "Klávesnice",
   "ShowKeyboardTooltip": "Zobrazit klávesnici",
   "HideKeyboardTooltip": "Skrýt klávesnici",
   "Size": "Velikost",
+  "Move": "Přesunout",
   "Mute": "Umlčet",
   "Unmute": "Zrušit umlčení",
   "Mute_Headset": "Umlčet headset",
