--- a/resources/webinterface/dashboard/localization/dashboard_danish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_danish.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Videoindstillinger",
   "Desktop": "Skrivebord",
   "Desktop_X": "Stationær computer %1$s",
+  "NoDesktopFound": "Intet skrivebord fundet.",
+  "DesktopViewsUpdating": "Opdaterer skrivebordsvisninger...",
+  "AddView": "Tilføj visning",
+  "CloseView": "Luk visning",
+  "DockHere": "Fastgør her",
+  "DockOnLeftController": "Fastgør på venstre controller",
+  "UndockFromLeftController": "Frigør fra venstre controller",
+  "DockedOnLeftController": "Fastgjort på venstre controller.",
+  "DockOnRightController": "Fastgjort på højre controller",
+  "UndockFromRightController": "Frigør fra højre controller",
+  "DockedOnRightController": "Fastgjort på højre controller.",
+  "Undock": "Frigør",
   "ShowKeyboardLabel": "Tastatur",
   "ShowKeyboardTooltip": "Vis tastatur",
   "HideKeyboardTooltip": "Skjul tastatur",
   "Size": "Størrelse",
+  "Move": "Flyt",
   "Mute": "Dæmp",
   "Unmute": "Fjern dæmpning",
   "Mute_Headset": "Dæmp headset",
