--- a/resources/webinterface/dashboard/localization/dashboard_finnish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_finnish.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Videoasetukset",
   "Desktop": "Työpöytä",
   "Desktop_X": "Pöytäkone %1$s",
+  "NoDesktopFound": "Työpöytää ei löytynyt.",
+  "DesktopViewsUpdating": "Työpöytänäkymiä päivitetään...",
+  "AddView": "Lisää näkymä",
+  "CloseView": "Sulje näkymä",
+  "DockHere": "Kiinnitä tähän",
+  "DockOnLeftController": "Kiinnitä vasempaan ohjaimeen",
+  "UndockFromLeftController": "Poista kiinnitys vasemmasta ohjaimesta",
+  "DockedOnLeftController": "Kiinnitetty vasempaan ohjaimeen.",
+  "DockOnRightController": "Kiinnitä oikeaan ohjaimeen",
+  "UndockFromRightController": "Poista kiinnitys oikeasta ohjaimesta",
+  "DockedOnRightController": "Kiinnitetty oikeaan ohjaimeen.",
+  "Undock": "Poista kiinnitys",
   "ShowKeyboardLabel": "Näppäimistö",
   "ShowKeyboardTooltip": "Näytä näppäimistö",
   "HideKeyboardTooltip": "Piilota näppäimistö",
   "Size": "Koko",
+  "Move": "Siirrä",
   "Mute": "Mykistä",
   "Unmute": "Poista mykistys",
   "Mute_Headset": "Mykistä VR-lasit",
