--- a/resources/webinterface/dashboard/localization/dashboard_french.json
+++ b/resources/webinterface/dashboard/localization/dashboard_french.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Paramètres vidéo",
   "Desktop": "Bureau",
   "Desktop_X": "Bureau %1$s",
+  "NoDesktopFound": "Aucun bureau trouvé.",
+  "DesktopViewsUpdating": "Mise à jour des vues bureau...",
+  "AddView": "Ajouter une vue",
+  "CloseView": "Fermer la vue",
+  "DockHere": "Ancrer ici",
+  "DockOnLeftController": "Ancrer sur le contrôleur gauche",
+  "UndockFromLeftController": "Détacher du contrôleur gauche",
+  "DockedOnLeftController": "Vue ancrée sur le contrôleur gauche.",
+  "DockOnRightController": "Ancrer sur le contrôleur droit",
+  "UndockFromRightController": "Détacher du contrôleur droit",
+  "DockedOnRightController": "Vue ancrée sur le contrôleur droit.",
+  "Undock": "Détacher",
   "ShowKeyboardLabel": "Clavier",
   "ShowKeyboardTooltip": "Afficher le clavier",
   "HideKeyboardTooltip": "Masquer le clavier",
   "Size": "Taille",
+  "Move": "Déplacer",
   "Mute": "Désactiver le son",
   "Unmute": "Réactiver le son",
   "Mute_Headset": "Couper le son du casque",
