--- a/resources/webinterface/dashboard/localization/dashboard_german.json
+++ b/resources/webinterface/dashboard/localization/dashboard_german.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Videoeinstellungen",
   "Desktop": "Desktop",
   "Desktop_X": "Desktop %1$s",
+  "NoDesktopFound": "Keine Desktop gefunden.",
+  "DesktopViewsUpdating": "Desktop-Ansichten werden aktualisiert …",
+  "AddView": "Ansicht hinzufügen",
+  "CloseView": "Ansicht schließen",
+  "DockHere": "Hier andocken",
+  "DockOnLeftController": "Am linken Controller andocken",
+  "UndockFromLeftController": "Vom linken Controller abdocken",
+  "DockedOnLeftController": "Am linken Controller angedockt",
+  "DockOnRightController": "Am rechten Controller andocken",
+  "UndockFromRightController": "Vom rechten Controller abdocken",
+  "DockedOnRightController": "Am rechten Controller angedockt",
+  "Undock": "Abdocken",
   "ShowKeyboardLabel": "Tastatur",
   "ShowKeyboardTooltip": "Tastatur anzeigen",
   "HideKeyboardTooltip": "Tastatur ausblenden",
   "Size": "Größe",
+  "Move": "Verschieben",
   "Mute": "Stumm",
   "Unmute": "Stummschaltung aufheben",
   "Mute_Headset": "VR-Headset stummschalten",
