--- a/resources/webinterface/dashboard/localization/dashboard_greek.json
+++ b/resources/webinterface/dashboard/localization/dashboard_greek.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Ρυθμίσεις βίντεο",
   "Desktop": "Επιτραπέζιος",
   "Desktop_X": "Επιτραπέζιος %1$s",
+  "NoDesktopFound": "Δεν βρέθηκε επιφάνεια εργασίας.",
+  "DesktopViewsUpdating": "Ενημέρωση προβολών επιφάνειας εργασίας…",
+  "AddView": "Προσθήκη προβολής",
+  "CloseView": "Κλείσιμο προβολής",
+  "DockHere": "Αγκύρωση εδώ",
+  "DockOnLeftController": "Αγκύρωση στο αριστερό χειριστήριο",
+  "UndockFromLeftController": "Απαγκύρωση από αριστερό χειριστήριο",
+  "DockedOnLeftController": "Αγκυρώθηκε στο αριστερό χειριστήριο.",
+  "DockOnRightController": "Αγκύρωση στο δεξί χειριστήριο",
+  "UndockFromRightController": "Απαγκύρωση από δεξί χειριστήριο",
+  "DockedOnRightController": "Αγκυρώθηκε στο δεξί χειριστήριο.",
+  "Undock": "Απαγκύρωση",
   "ShowKeyboardLabel": "Πληκτρολόγιο",
   "ShowKeyboardTooltip": "Εμφάνιση πληκτρολογίου",
   "HideKeyboardTooltip": "Απόκρυψη πληκτρολογίου",
   "Size": "Μέγεθος",
+  "Move": "Μετακίνηση",
   "Mute": "Σίγαση",
   "Unmute": "Κατάργηση σίγασης",
   "Mute_Headset": "Σίγαση Headset",
