--- a/resources/webinterface/dashboard/localization/dashboard_hungarian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_hungarian.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Képi beállítások",
   "Desktop": "Asztal",
   "Desktop_X": "Asztal %1$s",
+  "NoDesktopFound": "Nem található Asztal.",
+  "DesktopViewsUpdating": "Az asztali nézetek frissülnek...",
+  "AddView": "Nézet hozzáadása",
+  "CloseView": "Nézet bezárása",
+  "DockHere": "Dokkolás",
+  "DockOnLeftController": "Dokkolás a bal játékvezérlőre",
+  "UndockFromLeftController": "Leválasztás a bal játékvezérlőről",
+  "DockedOnLeftController": "Dokkolva a bal játékvezérlőre.",
+  "DockOnRightController": "Dokkolás a jobb játékvezérlőre",
+  "UndockFromRightController": "Leválasztás a jobb játékvezérlőről",
+  "DockedOnRightController": "Dokkolva a jobb játékvezérlőre.",
+  "Undock": "Leválasztás",
   "ShowKeyboardLabel": "Billentyűzet",
   "ShowKeyboardTooltip": "Billentyűzet mutatása",
   "HideKeyboardTooltip": "Billentyűzet elrejtése",
   "Size": "Méret",
+  "Move": "Mozgatás",
   "Mute": "Némítás",
   "Unmute": "Némítás feloldása",
   "Mute_Headset": "Fejszett némítása",
