--- a/resources/webinterface/dashboard/localization/dashboard_italian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_italian.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Impostazioni video",
   "Desktop": "Desktop",
   "Desktop_X": "Desktop %1$s",
+  "NoDesktopFound": "Nessun desktop trovato.",
+  "DesktopViewsUpdating": "Aggiornamento viste del desktop...",
+  "AddView": "Aggiungi vista",
+  "CloseView": "Chiudi vista",
+  "DockHere": "Aggancia qui",
+  "DockOnLeftController": "Aggancia sul controller sinistro",
+  "UndockFromLeftController": "Sgancia dal controller sinistro",
+  "DockedOnLeftController": "Agganciato sul controller sinistro.",
+  "DockOnRightController": "Aggancia sul controller destro",
+  "UndockFromRightController": "Sgancia dal controller destro",
+  "DockedOnRightController": "Agganciato sul controller destro.",
+  "Undock": "Sgancia",
   "ShowKeyboardLabel": "Tastiera",
   "ShowKeyboardTooltip": "Mostra la tastiera",
   "HideKeyboardTooltip": "Nascondi tastiera",
   "Size": "Dimensioni",
+  "Move": "Sposta",
   "Mute": "Silenzia",
   "Unmute": "Attiva voce",
   "Mute_Headset": "Audio visore: no",
