--- a/resources/webinterface/dashboard/localization/dashboard_japanese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_japanese.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "動画設定",
   "Desktop": "デスクトップ",
   "Desktop_X": "デスクトップ%1$s",
+  "NoDesktopFound": "デスクトップが見つかりません。",
+  "DesktopViewsUpdating": "デスクトップビューを更新中...",
+  "AddView": "ビューを追加",
+  "CloseView": "ビューを閉じる",
+  "DockHere": "ここにドッキング",
+  "DockOnLeftController": "左コントローラにドッキング",
+  "UndockFromLeftController": "左コントローラからドッキングを解除",
+  "DockedOnLeftController": "左コントローラにドッキング済み。",
+  "DockOnRightController": "右コントローラにドッキング",
+  "UndockFromRightController": "右コントローラからドッキング解除",
+  "DockedOnRightController": "右コントローラにドッキング済み。",
+  "Undock": "ドッキング解除",
   "ShowKeyboardLabel": "キーボード",
   "ShowKeyboardTooltip": "キーボードを表示",
   "HideKeyboardTooltip": "キーボードを非表示",
   "Size": "サイズ",
+  "Move": "移動",
   "Mute": "ミュート",
   "Unmute": "ミュート解除",
   "Mute_Headset": "ヘッドセットをミュート",
