--- a/resources/webinterface/dashboard/localization/dashboard_korean.json
+++ b/resources/webinterface/dashboard/localization/dashboard_korean.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "비디오 설정",
   "Desktop": "데스크톱",
   "Desktop_X": "데스크톱 %1$s",
+  "NoDesktopFound": "데스크톱을 찾을 수 없습니다.",
+  "DesktopViewsUpdating": "데스트톱 보기 업데이트 중...",
+  "AddView": "보기 추가",
+  "CloseView": "보기 닫기",
+  "DockHere": "여기에 고정",
+  "DockOnLeftController": "왼손용 컨트롤러에 고정",
+  "UndockFromLeftController": "왼손용 컨트롤러에서 고정 해제",
+  "DockedOnLeftController": "왼손용 컨트롤러에 고정되었습니다.",
+  "DockOnRightController": "오른손용 컨트롤러에 고정",
+  "UndockFromRightController": "오른손용 컨트롤러에서 고정 해제",
+  "DockedOnRightController": "오른손용 컨트롤러에 고정되었습니다.",
+  "Undock": "고정 해제",
   "ShowKeyboardLabel": "키보드",
   "ShowKeyboardTooltip": "키보드 보기",
   "HideKeyboardTooltip": "키보드 숨기기",
   "Size": "크기",
+  "Move": "이동",
   "Mute": "음소거",
   "Unmute": "소리 켜기",
   "Mute_Headset": "헤드셋 음소거",
