--- a/resources/webinterface/dashboard/localization/dashboard_latam.json
+++ b/resources/webinterface/dashboard/localization/dashboard_latam.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Ajustes de video",
   "Desktop": "Escritorio",
   "Desktop_X": "Escritorio %1$s",
+  "NoDesktopFound": "No se encontró el escritorio.",
+  "DesktopViewsUpdating": "Actualizando las vistas del escritorio...",
+  "AddView": "Añadir vista",
+  "CloseView": "Cerrar vista",
+  "DockHere": "Acoplar aquí",
+  "DockOnLeftController": "Acoplar en el control izquierdo",
+  "UndockFromLeftController": "Desacoplar del control izquierdo",
+  "DockedOnLeftController": "Acoplado en el control izquierdo.",
+  "DockOnRightController": "Acoplar en el control derecho",
+  "UndockFromRightController": "Desacoplar del control derecho",
+  "DockedOnRightController": "Acoplado en el control derecho.",
+  "Undock": "Desacoplar",
   "ShowKeyboardLabel": "Teclado",
   "ShowKeyboardTooltip": "Mostrar el teclado",
   "HideKeyboardTooltip": "Ocultar el teclado",
   "Size": "Tamaño",
+  "Move": "Mover",
   "Mute": "Silenciar",
   "Unmute": "Dejar de silenciar",
   "Mute_Headset": "Silenciar el visor",
