--- a/resources/webinterface/dashboard/localization/dashboard_norwegian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_norwegian.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Videoinnstillinger",
   "Desktop": "Skrivebord",
   "Desktop_X": "Skrivebord %1$s",
+  "NoDesktopFound": "Fant ingen skrivebord.",
+  "DesktopViewsUpdating": "Oppdaterer skrivebordsvisninger …",
+  "AddView": "Legg til visning",
+  "CloseView": "Lukk visning",
+  "DockHere": "Fest her",
+  "DockOnLeftController": "Fest på venstre kontroller",
+  "UndockFromLeftController": "Løsne fra venstre kontroller",
+  "DockedOnLeftController": "Festet på venstre kontroller.",
+  "DockOnRightController": "Fest på høyre kontroller",
+  "UndockFromRightController": "Løsne fra høyre kontroller",
+  "DockedOnRightController": "Festet på høyre kontroller.",
+  "Undock": "Løsne",
   "ShowKeyboardLabel": "Tastatur",
   "ShowKeyboardTooltip": "Vis tastatur",
   "HideKeyboardTooltip": "Skjul tastatur",
   "Size": "Størrelse",
+  "Move": "Flytt",
   "Mute": "Demp",
   "Unmute": "Fjern demping",
   "Mute_Headset": "Demp hodesett",
