--- a/resources/webinterface/dashboard/localization/dashboard_polish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_polish.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Ustawienia obrazu",
   "Desktop": "Pulpit",
   "Desktop_X": "Pulpit %1$s",
+  "NoDesktopFound": "Nie znaleziono pulpitu.",
+  "DesktopViewsUpdating": "Aktualizowanie widoków pulpitu...",
+  "AddView": "Dodaj widok",
+  "CloseView": "Zamknij widok",
+  "DockHere": "Zadokuj tutaj",
+  "DockOnLeftController": "Zadokuj w lewym kontrolerze",
+  "UndockFromLeftController": "Usuń dokowanie dla lewego kontrolera",
+  "DockedOnLeftController": "Zadokowano w lewym kontrolerze.",
+  "DockOnRightController": "Zadokuj w prawym kontrolerze",
+  "UndockFromRightController": "Usuń dokowanie dla prawego kontrolera",
+  "DockedOnRightController": "Zadokowano w prawym kontrolerze.",
+  "Undock": "Usuń dokowanie",
   "ShowKeyboardLabel": "Klawiatura",
   "ShowKeyboardTooltip": "Pokaż klawiaturę",
   "HideKeyboardTooltip": "Ukryj klawiaturę",
   "Size": "Rozmiar",
+  "Move": "Przenieś",
   "Mute": "Wycisz",
   "Unmute": "Wył. wyciszenie",
   "Mute_Headset": "Wycisz gogle",
