--- a/resources/webinterface/dashboard/localization/dashboard_portuguese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_portuguese.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Definições de vídeo",
   "Desktop": "Ambiente de trabalho",
   "Desktop_X": "Ambiente de trabalho %1$s",
+  "NoDesktopFound": "Nenhum ambiente de trabalho encontrado.",
+  "DesktopViewsUpdating": "A atualizar vistas de ambiente de trabalho...",
+  "AddView": "Adicionar vista",
+  "CloseView": "Fechar vista",
+  "DockHere": "Fixar aqui",
+  "DockOnLeftController": "Fixar no comando esquerdo",
+  "UndockFromLeftController": "Separar do comando esquerdo",
+  "DockedOnLeftController": "Fixa no comando esquerdo.",
+  "DockOnRightController": "Fixar no comando direito",
+  "UndockFromRightController": "Separar do comando direito",
+  "DockedOnRightController": "Fixa no comando direito.",
+  "Undock": "Separar",
   "ShowKeyboardLabel": "Teclado",
   "ShowKeyboardTooltip": "Mostrar teclado",
   "HideKeyboardTooltip": "Ocultar teclado",
   "Size": "Tamanho",
+  "Move": "Mover",
   "Mute": "Silenciar",
   "Unmute": "Remover silêncio",
   "Mute_Headset": "Silenciar headset",
