--- a/resources/webinterface/dashboard/localization/dashboard_russian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_russian.json
@@ -1,6 +1,6 @@
 {
   "UI_Unknown": "Неизвестно",
-  "Now_Starting": "Далее",
+  "Now_Starting": "Подготовка",
   "Now_Starting_HomeApp": "Переход домой:",
   "Now_Playing": "Запущено",
   "Now_Playing_HomeApp": "Домашний мир",
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Настройки изображения",
   "Desktop": "Рабочий стол",
   "Desktop_X": "Рабочий стол %1$s",
+  "NoDesktopFound": "Рабочий стол не найден.",
+  "DesktopViewsUpdating": "Обновление обзоров рабочего стола...",
+  "AddView": "Добавить обзор",
+  "CloseView": "Закрыть обзор",
+  "DockHere": "Закрепить здесь",
+  "DockOnLeftController": "Закрепить на левом контроллере",
+  "UndockFromLeftController": "Открепить с левого контроллера",
+  "DockedOnLeftController": "Закреплено на левом контроллере.",
+  "DockOnRightController": "Закрепить на правом контроллере",
+  "UndockFromRightController": "Открепить с правого контроллера",
+  "DockedOnRightController": "Закреплено на правом контроллере.",
+  "Undock": "Открепить",
   "ShowKeyboardLabel": "Клавиатура",
   "ShowKeyboardTooltip": "Показать клавиатуру",
   "HideKeyboardTooltip": "Скрыть клавиатуру",
   "Size": "Размер",
+  "Move": "Переместить",
   "Mute": "Заглушить",
   "Unmute": "Включить звук",
   "Mute_Headset": "Заглушить шлем",
