--- a/resources/webinterface/dashboard/localization/dashboard_schinese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_schinese.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "视频设置",
   "Desktop": "桌面",
   "Desktop_X": "桌面 %1$s",
+  "NoDesktopFound": "未找到桌面。",
+  "DesktopViewsUpdating": "正在更新桌面视角……",
+  "AddView": "添加视角",
+  "CloseView": "关闭视角",
+  "DockHere": "在此处停靠",
+  "DockOnLeftController": "在左控制器停靠",
+  "UndockFromLeftController": "从左控制器取消停靠",
+  "DockedOnLeftController": "已停靠于左控制器。",
+  "DockOnRightController": "在右控制器停靠",
+  "UndockFromRightController": "从右控制器取消停靠",
+  "DockedOnRightController": "已停靠于右控制器",
+  "Undock": "取消停靠",
   "ShowKeyboardLabel": "键盘",
   "ShowKeyboardTooltip": "显示键盘",
   "HideKeyboardTooltip": "隐藏键盘",
   "Size": "大小",
+  "Move": "移动",
   "Mute": "静音",
   "Unmute": "取消静音",
   "Mute_Headset": "将头戴式显示器静音",
