--- a/resources/webinterface/dashboard/localization/dashboard_spanish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_spanish.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Ajustes de vídeo",
   "Desktop": "Escritorio",
   "Desktop_X": "Escritorio %1$s",
+  "NoDesktopFound": "No se ha encontrado el escritorio.",
+  "DesktopViewsUpdating": "Actualizando las vistas del escritorio...",
+  "AddView": "Añadir vista",
+  "CloseView": "Cerrar vista",
+  "DockHere": "Acoplar aquí",
+  "DockOnLeftController": "Acoplar en mando izquierdo",
+  "UndockFromLeftController": "Desacoplar del mando izquierdo",
+  "DockedOnLeftController": "Acoplado en el mando izquierdo.",
+  "DockOnRightController": "Acoplar en mando derecho",
+  "UndockFromRightController": "Desacoplar del mando derecho",
+  "DockedOnRightController": "Acoplado en el mando derecho.",
+  "Undock": "Desacoplar",
   "ShowKeyboardLabel": "Teclado",
   "ShowKeyboardTooltip": "Mostrar el teclado",
   "HideKeyboardTooltip": "Ocultar el teclado",
   "Size": "Tamaño",
+  "Move": "Mover",
   "Mute": "Silenciar",
   "Unmute": "Dejar de silenciar",
   "Mute_Headset": "Silenciar el visor",
