--- a/resources/webinterface/dashboard/localization/dashboard_swedish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_swedish.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Videoinställningar",
   "Desktop": "Skrivbord",
   "Desktop_X": "Skrivbord %1$s",
+  "NoDesktopFound": "Inget skrivbord hittades.",
+  "DesktopViewsUpdating": "Skrivbordsvy uppdateras ...",
+  "AddView": "Lägg till vy",
+  "CloseView": "Stäng vy",
+  "DockHere": "Koppla ihop här",
+  "DockOnLeftController": "Koppla till vänster kontroll",
+  "UndockFromLeftController": "Koppla bort från vänster kontroll",
+  "DockedOnLeftController": "Kopplad till vänster kontroll.",
+  "DockOnRightController": "Koppla till höger kontroll",
+  "UndockFromRightController": "Koppla bort från höger kontroll",
+  "DockedOnRightController": "Kopplad till höger kontroll.",
+  "Undock": "Koppla bort",
   "ShowKeyboardLabel": "Tangentbord",
   "ShowKeyboardTooltip": "Visa tangentbord",
   "HideKeyboardTooltip": "Dölj tangentbord",
   "Size": "Storlek",
+  "Move": "Flytta",
   "Mute": "Stäng av ljud",
   "Unmute": "Sätt på ljud",
   "Mute_Headset": "Ljud av för headset",
