--- a/resources/webinterface/dashboard/localization/dashboard_tchinese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_tchinese.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "視訊設定",
   "Desktop": "桌面",
   "Desktop_X": "桌面 %1$s",
+  "NoDesktopFound": "未找到桌面。",
+  "DesktopViewsUpdating": "正在更新桌面顯示…",
+  "AddView": "新增顯示",
+  "CloseView": "關閉顯示",
+  "DockHere": "固定於此",
+  "DockOnLeftController": "固定於左控制器",
+  "UndockFromLeftController": "取消固定於左控制器",
+  "DockedOnLeftController": "已固定於左控制器。",
+  "DockOnRightController": "固定於右控制器",
+  "UndockFromRightController": "取消固定於右控制器",
+  "DockedOnRightController": "已固定於右控制器。",
+  "Undock": "取消固定",
   "ShowKeyboardLabel": "鍵盤",
   "ShowKeyboardTooltip": "顯示鍵盤",
   "HideKeyboardTooltip": "隱藏鍵盤",
   "Size": "大小",
+  "Move": "移動",
   "Mute": "靜音",
   "Unmute": "解除靜音",
   "Mute_Headset": "靜音頭戴顯示器",
