--- a/resources/webinterface/dashboard/localization/dashboard_thai.json
+++ b/resources/webinterface/dashboard/localization/dashboard_thai.json
@@ -24,7 +24,7 @@
   "Exit_SteamVR_Home": "ออกจากหน้าหลัก SteamVR",
   "Exit_Game": "ออกจากเกม",
   "Menu": "เมนู",
-  "Desktops": "เดสก์ทอป",
+  "Desktops": "เดสก์ท็อป",
   "Volume": "ระดับเสียง",
   "X_More_Overlays": "%1$s โอเวอร์เลย์เพิ่มเติม",
   "Store": "ร้านค้า",
@@ -39,12 +39,25 @@
   "Return_To_Home": "กลับสู่หน้าหลัก",
   "Controller_Bindings": "การกำหนดปุ่มคอนโทรลเลอร์",
   "App_Video_Settings": "การตั้งค่าวิดีโอ",
-  "Desktop": "เดสก์ทอป",
-  "Desktop_X": "เดสก์ทอป %1$s",
+  "Desktop": "เดสก์ท็อป",
+  "Desktop_X": "เดสก์ท็อป %1$s",
+  "NoDesktopFound": "ไม่พบเดสก์ท็อป",
+  "DesktopViewsUpdating": "กำลังอัปเดตมุมมองเดสก์ท็อป...",
+  "AddView": "เพิ่มมุมมอง",
+  "CloseView": "ปิดมุมมอง",
+  "DockHere": "ต่อที่นี่",
+  "DockOnLeftController": "ต่อบนคอนโทรลเลอร์ซ้าย",
+  "UndockFromLeftController": "ถอดจากคอนโทรลเลอร์ซ้าย",
+  "DockedOnLeftController": "ต่อบนคอนโทรลเลอร์ซ้าย",
+  "DockOnRightController": "ต่อบนคอนโทรลเลอร์ขวา",
+  "UndockFromRightController": "ถอดจากคอนโทรลเลอร์ขวา",
+  "DockedOnRightController": "ต่อบนคอนโทรลเลอร์ขวา",
+  "Undock": "ถอดออก",
   "ShowKeyboardLabel": "คีย์บอร์ด",
   "ShowKeyboardTooltip": "แสดงคีย์บอร์ด",
   "HideKeyboardTooltip": "ซ่อนคีย์บอร์ด",
   "Size": "ขนาด",
+  "Move": "เลื่อน",
   "Mute": "ปิดเสียง",
   "Unmute": "เลิกปิดเสียง",
   "Mute_Headset": "ปิดเสียงเครื่องสวมศีรษะ",
