--- a/resources/webinterface/dashboard/localization/dashboard_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_vietnamese.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Thiết lập video",
   "Desktop": "Desktop",
   "Desktop_X": "Desktop %1$s",
+  "NoDesktopFound": "Không thấy desktop.",
+  "DesktopViewsUpdating": "Cập nhật cửa sổ xem desktop...",
+  "AddView": "Thêm cửa sổ",
+  "CloseView": "Đóng cửa sổ",
+  "DockHere": "Đặt cố định ở đây",
+  "DockOnLeftController": "Đặt cố định trên tay cầm trái",
+  "UndockFromLeftController": "Gỡ cố định khỏi tay cầm trái",
+  "DockedOnLeftController": "Cố định trên tay cầm trái.",
+  "DockOnRightController": "Đặt cố định trên tay cầm phải",
+  "UndockFromRightController": "Gỡ cố định khỏi tay cầm phải",
+  "DockedOnRightController": "Cố định trên tay cầm phải.",
+  "Undock": "Gỡ cố định",
   "ShowKeyboardLabel": "Bàn phím",
   "ShowKeyboardTooltip": "Hiện bàn phím",
   "HideKeyboardTooltip": "Ẩn bàn phím",
   "Size": "Kích cỡ",
+  "Move": "Di chuyển",
   "Mute": "Tắt tiếng",
   "Unmute": "Mở tiếng",
   "Mute_Headset": "Tắt âm mũ chụp",
