--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -35,10 +35,10 @@
 	"SystemStatus_FrameRate_15sec": "15 seg",
 	"VRDevFiles_PathHandles": "Path Handles",
 	"VRDevFiles_JSON": "JSON",
-	"VRDevFiles_Logging": "Registo",
+	"VRDevFiles_Logging": "Registro",
 	"VRDevFiles_Configuration": "Configuração",
 	"VRDevFiles_USBDevices": "Dispositivos USB",
-	"VRDevConsole_ShowLogName": "Exibir nome do registo",
+	"VRDevConsole_ShowLogName": "Exibir nome do registro",
 	"VRDevConsole_Showtimestamp": "Exibir horário",
 	"VRMonitor_DevNav_Console": "Console",
 	"VRMonitor_DevNav_RoomOverview": "Visão geral do cômodo",
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Espelhamento de áudio",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Controla separado do volume do espelhamento (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Controlar o volume do espelhamento separadamente (Beta)",
 	"Settings_Audio_Default": "Sistema-padrão",
 	"Settings_Audio_Current_Setting_Unknown": "(O dispositivo selecionado não está presente)",
 	"Settings_Audio_HDMIGain": "Redução de ganho no áudio HDMI do VIVE",
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Permite simultaneamente o áudio pelo conector de fones de ouvido 3,5 mm e pelos alto-falantes do headset",
 	"Settings_Audio_Single": "Única",
 	"Settings_Audio_Dual": "Dupla",
+	"Settings_Audio_MicMonitor": "Monitoramento do mic.",
+	"Settings_Audio_Active": "Ativado",
+	"Settings_Audio_Muted": "Silenciado",
 	"Settings_SectionTitle_Advanced": "Avançado",
 	"Settings_SectionTitle_Developer": "Desenvolvedor",
 	"Settings_SectionTitle_Dashboard": "Painel",
@@ -72,16 +75,16 @@
 	"Settings_SectionTitle_StartupShutdown": "Iniciar / Desligar",
 	"Settings_SectionTitle_Home": "Página inicial",
 	"Settings_SectionTitle_PlayArea": "Área de jogo",
-	"Settings_SectionTitle_BaseStation": "Estações-base",
+	"Settings_SectionTitle_BaseStation": "Estações base",
 	"Settings_SectionTitle_Controller": "Controles",
 	"Advanced_AllowSavingOfTimingInfo": "Permitir salvamento de informações de tempo",
 	"Advanced_AutoSaveTimingInfoOnExit": "Salvar informações de tempo automaticamente ao sair",
 	"Settings_EnableWebHelperDebugger": "Ativar depurador de Web Helper",
-	"Settings_EnableWebHelperDebuggerDesc": "Ativar o servidor de depuração para anexar as ferramentas de desenvolvedor e depurador de Chromium a páginas de Chromium integradas. Sempre ativo em versões Perforce.",
-	"Advanced_PerfGraphInHMD": "Mostrar gráfico de desempenho do GPU no headset",
+	"Settings_EnableWebHelperDebuggerDesc": "Ativa o servidor de depuração para anexar as ferramentas de desenvolvedor e depurador de Chromium a páginas de Chromium integradas. Sempre ativo em versões Perforce.",
+	"Advanced_PerfGraphInHMD": "Mostrar gráfico de desempenho da placa de vídeo no headset",
 	"Advanced_SaveFrameDataNow": "Salvar dados de quadro",
 	"Explanation_DisableEnhancedPowerManagement": "Desative o Gerenciador Avançado de Energia do Windows para dispositivos USB SteamVR caso enfrente perda misteriosa de rastreamento ou impossibilidade de pareamento de controles sem fio. ",
-	"Explanation_QuickCalibrate": "Redefinir rapidamente a preparação do cômodo. Para RV em posição sentada e cômodo completo, novos limites serão centralizados no seu headset no chão do centro do seu cômodo.",
+	"Explanation_QuickCalibrate": "Redefinir rapidamente a preparação do cômodo. Para RV na posição em pé e no cômodo completo, novos limites serão estabelecidos no chão do seu cômodo e centralizados a partir do seu headset.",
 	"Explanation_RebootVive": "Reinicia o headset — isto pode resolver problemas relacionados com USB.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "Remove todos os dispositivos relacionados ao USB do sistema para reinstalação dos drivers.",
 	"Explanation_ResetDismissableWarnings": "Os avisos descartados serão exibidos novamente quando ocorrerem.",
@@ -92,14 +95,15 @@
 	"MenuAction_RemoveAllSteamVRUSBDevices": "Remover todos os dispositivos USB do SteamVR",
 	"MenuAction_ResetDismissableWarnings": "Descartar avisos",
 	"MenuAction_SetConfigDirectory": "Criar diretório de configuração",
-	"MenuAction_SetLogDirectory": "Criar diretório de relatórios",
-	"Settings_Advanced_AllowSupersampleFiltering": "Filtragem de superamostra avançada",
+	"MenuAction_SetLogDirectory": "Criar diretório de registros",
+	"Settings_Advanced_AllowSupersampleFiltering": "Filtragem de superamostragem avançada",
+	"Settings_Video_HDCP14LegacyCompatibility": "Compatibilidade com HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Caminhos",
-	"Settings_Advanced_Reset_Header": "Restaurar",
+	"Settings_Advanced_Reset_Header": "Reiniciar",
 	"Settings_Advanced_Status_Header": "Verificação de estado",
 	"Settings_ShowSettingsInDashboard": "Mostrar aba de configurações",
 	"Settings_ShowPowerMenu": "Exibir opções de energia",
-	"Settings_AllowAppQuitting": "Permitir saída de aplicativos a partir do painel",
+	"Settings_AllowAppQuitting": "Permitir fechar aplicativos a partir do painel",
 	"Settings_ShowDesktopViews": "Exibir abas da área de trabalho",
 	"Settings_CheckForSteam": "Verificar Steam",
 	"Settings_DebugInputBindings": "Ativar opções de depuração na interface de configuração de entrada",
@@ -127,7 +131,7 @@
 	"Settings_ShowPlaylistMenu": "Exibir menu de reprodução",
 	"Settings_SmallSpace": "Cômodo pequeno",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR sempre visível",
+	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR sempre no topo",
 	"Settings_StatusWindowMinimizeToTray_Text": "Minimizar a janela de estado do SteamVR na bandeja do sistema",
 	"Settings_SuppressWarnings_Text": "Suprimir avisos e alertas quando o estado do SteamVR for minimizado",
 	"StatusCheckInterval_Never": "Nunca",
@@ -137,14 +141,14 @@
 	"Settings_KnockKnock_Button": "Toc toc",
 	"Settings_KnockKnock_Desc": "Permite que pessoas fora da RV chamem a atenção do usuário",
 	"Settings_CreateSystemReport_Button": "Criar relatório de sistema",
-	"Settings_ViewLogs_Button": "Ver relatórios",
+	"Settings_ViewLogs_Button": "Ver registros",
 	"Settings_Video_RefreshRate_Header": "Taxa de atualização",
 	"Settings_Video_RefreshRate_HzSuffix": " Hz",
 	"Settings_Video_RefreshRate_Label_Hz": "Taxa de atualização (Hz)",
 	"Settings_Video_RefreshRate_NotFound": "O seu headset é compatível com outras taxas de atualização, mas as mesmas não foram detectadas pela placa de vídeo. Verifique se o firmware e a placa de vídeo do seu headset estão atualizados.",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "O seu headset é compatível com outras taxas de atualização, mas o SteamVR não pode geri-las quando o headset está em modo estendido.",
 	"Settings_Video_RefreshRate_EnableDirectModeAction": "Ativar modo direto",
-	"Settings_Video_RefreshRate_OneSupported": "O seu sistema é compatível com uma única taxa de atualização.",
+	"Settings_Video_RefreshRate_OneSupported": "O seu sistema é compatível com apenas uma taxa de atualização.",
 	"Settings_Video_AppResFooter": "A configuração atual renderiza uma imagem a %1$s para cada olho",
 	"Settings_Advanced_MotionSmoothing_Header": "Suavização de movimento",
 	"Settings_Advanced_MotionSmoothing_Description": "Sintetiza quadros novos para manter a qualidade da experiência quando o aplicativo em uso não é capaz de manter uma taxa de quadros aceitável.",
@@ -158,7 +162,7 @@
 	"Settings_Advanced_SupersamplingManualOverride": "Ativar ajustes de resolução",
 	"Settings_Advanced_Supersampline_ResolutionPerEye": "Resolução por olho",
 	"Explanation_Supersampling_Header": "O SteamVR define a resolução do aplicativo automaticamente baseado no desempenho da sua placa de vídeo.",
-	"Explanation_Supersampling": "* Alguns aplicativos precisam ser reiniciados para que a alteração seja aplicada.",
+	"Explanation_Supersampling": "*Alguns aplicativos precisam ser reiniciados para que a alteração seja aplicada.",
 	"Explanation_SupersamplingFiltering": "Opções de filtragem de superamostragem:",
 	"Explanation_Supersampling_ResolutionPerEye": "Resolução por olho",
 	"Settings_PerApplication_ChooseApplication": "Selecione um aplicativo",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Marcar esta opção desativará a reprojeção assíncrona para este título.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Substituir taxa de atualização",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opção permitirá especificar uma taxa de atualização diferente da configuração global para este aplicativo.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "O limite de quadros por segundo e a previsão de quadros são aplicados automaticamente conforme o desempenho medido, mas alguns aplicativos podem se beneficiar da execução em uma taxa de quadros fixa em prol de uma experiência mais suave.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Limite de taxa de quadros",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Ao selecionar uma taxa de quadros fixa aqui, a limitação automática da taxa será desativada para este aplicativo.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fixo",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automático",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Limitar taxa de quadros (QPS) do aplicativo a:",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Previsão adicional (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Substitua o dimensionamento do aplicativo ao ajustar o movimento da cabeça e a separação dos olhos.",
+	"Settings_PerApplication_WorldScale_Label": "Substituir dimensão do mundo",
+	"Settings_PerApplication_WorldScale_Off": "Desativado",
+	"Settings_PerApplication_WorldScale_Fine": "Pequena",
+	"Settings_PerApplication_WorldScale_Normal": "Normal",
+	"Settings_PerApplication_WorldScale_Extreme": "Extrema",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% a %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Aviso: essas alterações podem exigir a reinicialização do aplicativo e/ou modificar interações de formas inesperadas. Dependendo do aplicativo, alguns recursos (como lançamento de objetos) podem ser afetados.",
+	"Settings_PerApplication_FovScale_Description": "Também há a opção de reduzir o campo de visão no aplicativo, abdicando da visão periférica para melhorar a clareza. Aviso: em muitos casos, o aplicativo precisará ser reiniciado para que a alteração seja devidamente aplicada.",
+	"Settings_PerApplication_FovScale_Label": "Campo de visão",
+	"Settings_PerApplication_FovScale_Multiplier": "Dimensão personalizada",
 	"Settings_MimeTypes_Pancake_Header": "Seleciona em qual aplicativo iniciar aplicações 2D",
 	"Settings_Camera_EnableCamera": "Ativar câmera",
 	"Settings_Camera_ShowOnController": "Exibir câmera no controle",
@@ -198,7 +220,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translúcido",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaco",
 	"Settings_Camera_RoomView3D_Experimental": "A visualização de cômodo 3D é experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "O headset ou o sistema não é compatível com a visualização de cômodo 3D.",
+	"Settings_Camera_RoomView3D_Unsupported": "A configuração do headset ou do sistema operacional não é compatível com a visualização de cômodo 3D.",
 	"Settings_CameraTest": "Testar câmera e desempenho",
 	"Settings_StartCameraTest": "Iniciar teste",
 	"CameraTest_CheckingCamera": "Verificar câmera...",
@@ -212,11 +234,11 @@
 	"CameraTestStatus_Failure": "Falha",
 	"Advanced_Appearance": "Aparência",
 	"Settings_Appearance_Background": "Imagem de fundo",
-	"Settings_Appearance_Background_NoSteam": "Iniciar Steam para ver quaisquer imagens de fundos adicionais.",
+	"Settings_Appearance_Background_NoSteam": "Iniciar Steam para ver quaisquer imagens de fundo adicionais.",
 	"Settings_Appearance_Background_Select": "Alterar imagem de fundo",
 	"Settings_Appearance_BackgroundDesc": "Selecione uma imagem de fundo para o espaço padrão",
 	"Settings_Appearance_UseDomeProjection": "Usar projeção em cúpula",
-	"Settings_Appearance_UseDomeProjectionDesc": "Altera o estilo de projeção da imagem de fundo. Algumas imagens de fundo usam este recurso para criar uma experiência mais imersiva. Caso a imagem de fundo que tenha escolhido estiver distorcida, ative esta opção",
+	"Settings_Appearance_UseDomeProjectionDesc": "Altera o estilo de projeção da imagem de fundo. Algumas imagens de fundo usam este recurso para criar uma experiência mais imersiva. Caso a imagem de fundo que tenha escolhido esteja distorcida, ative esta opção",
 	"Settings_Appearance_DomeCameraHeight": "Altura da câmera",
 	"Settings_Appearance_DomeCameraHeightDesc": "Ajustar a altura da câmera em relação à imagem de fundo",
 	"Settings_Appearance_DomeCameraRadius": "Raio da cúpula",
@@ -246,7 +268,7 @@
 	"Settings_General_RightThumbstickAngle_NoValue": "Ângulo da alavanca analógica direita",
 	"Settings_Dashboard_ShowProgressIndicator": "Indicador de progresso de pressionar longo",
 	"Settings_Dashboard_Position": "Posição do painel",
-	"Settings_Classic": "Clássicas",
+	"Settings_Classic": "Clássica",
 	"Settings_Near": "Próximo",
 	"Settings_Middle": "Meio",
 	"Settings_Far": "Distante",
@@ -282,7 +304,7 @@
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Sempre exibir limites do chão",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
 	"Settings_Appearance_Controller": "Alterar o modelo de controle",
-	"Settings_Appearance_Base": "Alterar o modelo da base de rastreio",
+	"Settings_Appearance_Base": "Alterar o modelo da estação base",
 	"Settings_Appearance_Environment": "Alterar o ambiente inicial",
 	"Settings_ConnectAnHMD": "Conecte um headset.",
 	"Settings_Loading": "Carregando...",
@@ -295,9 +317,9 @@
 	"Settings_2D": "2D",
 	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Configurações do SteamVR",
-	"Settings_MustRestart_Description": "O SteamVR precisa ser reiniciado para que algumas alterações surtam efeito.",
+	"Settings_MustRestart_Description": "O SteamVR precisa ser reiniciado para que algumas alterações sejam implementadas.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Reiniciar SteamVR",
-	"Settings_MustQuitApp_Description": "Por favor, saia do jogo atual para que as alterações surtam efeito.",
+	"Settings_MustQuitApp_Description": "É preciso sair do jogo atual para que as alterações sejam implementadas.",
 	"Settings_MustQuitApp_QuitCurrentGame_Button": "Sair do jogo",
 	"Settings_NotSupported": "Incompatível",
 	"Settings_AdvancedSettings": "Configurações avançadas",
@@ -305,9 +327,9 @@
 	"Settings_Hide": "Ocultar",
 	"Settings_ViveTracker": "Rastreador do Vive",
 	"Settings_ViveTrackers": "Rastreadores do Vive",
-	"Settings_ViveTracker_Role": "Funçºao do rastreador",
+	"Settings_ViveTracker_Role": "Função do rastreador",
 	"Settings_ViveTracker_Hand": "Mão",
-	"Settings_ViveTracker_Identify_NotConnected": "Rastreador Vive não conectado.",
+	"Settings_ViveTracker_Identify_NotConnected": "Rastreador Vive não está conectado.",
 	"Settings_ViveTracker_Identify_NotIdentifiable": "Rastreador Vive não é capaz de identificar.",
 	"Settings_ViveTracker_Connected": "Conectado",
 	"Settings_ViveTracker_Disconnected": "Desconectado",
@@ -321,7 +343,7 @@
 	"Settings_ShowOldBindingUI": "Exibir interface de comandos antiga",
 	"Settings_ManageVideoSettingsForApp": "Gerenciar configurações de vídeo para:",
 	"Settings_ManageControllerBindingSettingsForApp": "Gerenciar comandos de controle para:",
-	"Settings_ActiveControllerBinding": "Comando ativo do controle",
+	"Settings_ActiveControllerBinding": "Comando do controle ativo",
 	"Settings_ActiveBinding": "Comando ativo",
 	"Settings_ShowThumbstickSettings": "Editar configurações da alavanca analógica",
 	"Settings_ThumbstickSettings": "Configurações da alavanca analógica",
@@ -343,6 +365,6 @@
 	"OpenXR_Error": "Erro ao buscar componente",
 	"OpenXR_OculusRuntime": "Oculus",
 	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
-	"TestControllerTitle": "Testando o controle %1$s",
+	"TestControllerTitle": "Teste do controle %1$s em andamento",
 	"TestController_NoController": "Ligue um controle para testá-lo."
 }
