--- a/resources/webinterface/dashboard/localization/vrmonitor_danish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_danish.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Tillader lyd gennem både 3,5 mm jackstikket og off-ear-høretelefoner",
 	"Settings_Audio_Single": "Enkelt",
 	"Settings_Audio_Dual": "Dual",
+	"Settings_Audio_MicMonitor": "Mikrofonovervågning (sidetone)",
+	"Settings_Audio_Active": "Aktiv",
+	"Settings_Audio_Muted": "Dæmpet",
 	"Settings_SectionTitle_Advanced": "Avanceret",
 	"Settings_SectionTitle_Developer": "Udvikler",
 	"Settings_SectionTitle_Dashboard": "Instrumentbræt",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Angiv konfigurationsmappe",
 	"MenuAction_SetLogDirectory": "Angiv logmappe",
 	"Settings_Advanced_AllowSupersampleFiltering": "Avanceret supersamplingsfiltrering",
+	"Settings_Video_HDCP14LegacyCompatibility": "Kompatibel med den ældre HDCP 1.4-udgave",
 	"Settings_Advanced_Paths_Header": "Stier",
 	"Settings_Advanced_Reset_Header": "Nulstil",
 	"Settings_Advanced_Status_Header": "Statustjek",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Hvis dette felt markeres, deaktiveres asynkron genprojicering for denne titel.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Tilsidesæt opdateringshastighed",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Hvis dette felt markeres, kan du angive en anden opdateringshastighed end applikationens globale indstilling.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Begrænsning og forudsigelse håndteres automatisk baseret på målt ydeevne, men nogle applikationer kan give en generelt jævnere oplevelse, hvis de tvinges til at køre med en fast lavere billedhastighed.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Begrænsningsfunktion",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Automatisk begrænsning bliver deaktiveret for denne applikation, hvis du vælger en fast begrænsningsværdi her.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fast",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automatisk",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Lås applikationens billedhastighed (maks. FPS):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Yderligere forudsigelse (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Overskriv applikationens opfattede skalering ved at justere hovedbevægelse og afstand mellem øjnene.",
+	"Settings_PerApplication_WorldScale_Label": "Overskriv verdensskalering",
+	"Settings_PerApplication_WorldScale_Off": "Fra",
+	"Settings_PerApplication_WorldScale_Fine": "Detaljeret",
+	"Settings_PerApplication_WorldScale_Normal": "Normal",
+	"Settings_PerApplication_WorldScale_Extreme": "Ekstrem",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% til %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Bemærk: Ændringer kræver muligvis, at applikationen skal genstartes og/eller ændres på uventede måder. Afhængigt af applikationen kan handlinger som eksempelvis at kaste blive påvirket.",
+	"Settings_PerApplication_FovScale_Description": "Du kan evt. reducere applikationens synsfelt for at få klarhed i stedet for sidesyn. Bemærk: I mange tilfælde skal applikationen genstartes, før ændringen træder ordentligt i kraft.",
+	"Settings_PerApplication_FovScale_Label": "Synsfelt",
+	"Settings_PerApplication_FovScale_Multiplier": "Tilpasset skalering",
 	"Settings_MimeTypes_Pancake_Header": "Vælg en applikation, som 2D-applikationer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå kamera til",
 	"Settings_Camera_ShowOnController": "Vis kamera på controller",
