--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -26,7 +26,7 @@
 	"VRMonitor_Overview_QuickLinks_Knock_Desc": "Aandacht van de headsetgebruiker krijgen",
 	"VRMonitor_Overview_QuickLinks_RoomSetup": "Kamerinstelling",
 	"VRMonitor_Overview_QuickLinks_RoomSetup_Desc": "Chaperone-grenzen configureren",
-	"VRMonitor_Overview_QuickLinks_Tutorial": "SteamVR-tutorial",
+	"VRMonitor_Overview_QuickLinks_Tutorial": "SteamVR-introductie",
 	"VRMonitor_Overview_QuickLinks_Tutorial_Desc": "Leer je VR-headset gebruiken",
 	"SystemStatus_FrameRate_Good": "Goede framerate",
 	"SystemStatus_FrameRate_MissedFrames": "Gemiste frames",
@@ -55,10 +55,13 @@
 	"Settings_Audio_Default": "Systeemstandaard",
 	"Settings_Audio_Current_Setting_Unknown": "(Momenteel geselecteerde apparaat is niet gevonden)",
 	"Settings_Audio_HDMIGain": "Versterkingsvermindering voor VIVE HDMI-audio",
-	"Settings_Audio_SpeakerJackOutput": "Speaker / 3.5mm Jack Output",
-	"Settings_Audio_SpeakerJackOutput_Title": "Allows simultaneous audio through both the 3.5mm jack and the off-ear speakers",
-	"Settings_Audio_Single": "Single",
-	"Settings_Audio_Dual": "Dual",
+	"Settings_Audio_SpeakerJackOutput": "Luidspreker / output met 3,5 mm-aansluiting ",
+	"Settings_Audio_SpeakerJackOutput_Title": "Maakt gelijktijdige audio mogelijk via zowel de 3,5 mm-aansluiting als de off-earluidsprekers",
+	"Settings_Audio_Single": "Enkel",
+	"Settings_Audio_Dual": "Duo",
+	"Settings_Audio_MicMonitor": "Mic controleren (sidetone)",
+	"Settings_Audio_Active": "Actief",
+	"Settings_Audio_Muted": "Gedempt",
 	"Settings_SectionTitle_Advanced": "Geavanceerd",
 	"Settings_SectionTitle_Developer": "Ontwikkelaar",
 	"Settings_SectionTitle_Dashboard": "Dashboard",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Configuratiemap instellen",
 	"MenuAction_SetLogDirectory": "Logboekmap instellen",
 	"Settings_Advanced_AllowSupersampleFiltering": "Geavanceerd supersamplefilteren",
+	"Settings_Video_HDCP14LegacyCompatibility": "Bestaande compatibiliteit HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Paden",
 	"Settings_Advanced_Reset_Header": "Herstellen",
 	"Settings_Advanced_Status_Header": "Status controleren",
@@ -123,7 +127,7 @@
 	"Settings_Animations": "Animaties",
 	"Settings_MediumSpace": "Middelgrote ruimte",
 	"Settings_NightModeCheck": "Nachtmodus",
-	"Settings_NightModeDesc": "Dimt de headset tot 05:00 (of tot SteamVR wordt herstart).",
+	"Settings_NightModeDesc": "Dimt de headset tot 5 u. (of tot SteamVR wordt herstart).",
 	"Settings_ShowPlaylistMenu": "Afspeellijstmenu",
 	"Settings_SmallSpace": "Kleine ruimte",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
@@ -137,7 +141,7 @@
 	"Settings_KnockKnock_Button": "Klop, klop",
 	"Settings_KnockKnock_Desc": "Hiermee kunnen mensen buiten VR de aandacht vragen van degene die de headset gebruikt",
 	"Settings_CreateSystemReport_Button": "Systeemrapport maken",
-	"Settings_ViewLogs_Button": "Logboeken",
+	"Settings_ViewLogs_Button": "Logboeken weergeven",
 	"Settings_Video_RefreshRate_Header": "Vernieuwingsfrequentie",
 	"Settings_Video_RefreshRate_HzSuffix": " Hz",
 	"Settings_Video_RefreshRate_Label_Hz": "Vernieuwingsfrequentie (Hz)",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Door deze optie in te schakelen wordt asynchrone reprojectie voor deze titel uitgeschakeld.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Vernieuwingsfrequentie overschrijven",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Als je deze optie aanvinkt, kun je een andere vernieuwingsfrequentie invoeren voor deze toepassing.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Snelheidsbeperking en voorspelling worden automatisch beheerd, gebaseerd op prestaties. Bij sommige applicaties kan een lagere frequentie echter een voordeel opleveren en zorgen voor een vlottere ervaring in het algemeen.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Snelheidsbeperking",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Als je hier een vaste waarde kiest voor snelheidsbeperking, schakelt dit automatische snelheidsbeperking uit voor deze applicatie.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Opgelost",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Auto",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Beeldfrequentie voor app vergrendelen op (max. fps):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Extra voorspelling (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Hef de door de applicatie vastgestelde schaal op door hoofdbeweging en oogafstand bij te stellen.",
+	"Settings_PerApplication_WorldScale_Label": "Wereldschaal overschrijven",
+	"Settings_PerApplication_WorldScale_Off": "Uit",
+	"Settings_PerApplication_WorldScale_Fine": "Fijn",
+	"Settings_PerApplication_WorldScale_Normal": "Normaal",
+	"Settings_PerApplication_WorldScale_Extreme": "Extreem",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% t/m %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Opmerking: Voor veranderingen kan herstarten nodig zijn. Veranderingen kunnen mogelijk ook interacties onverwacht wijzigingen. Afhankelijk van de applicatie kunnen functies zoals werpen worden beïnvloed.",
+	"Settings_PerApplication_FovScale_Description": "Je kunt optioneel het gezichtsveld van de applicatie verlagen. Dit vermindert je perifeer zicht, maar zorgt voor een helderder beeld. Opmerking: In veel gevallen is het nodig om de applicatie te herstarten om de verandering correct toe te passen.",
+	"Settings_PerApplication_FovScale_Label": "Gezichtsveld",
+	"Settings_PerApplication_FovScale_Multiplier": "Aangepaste schaal",
 	"Settings_MimeTypes_Pancake_Header": "Selecteer een toepassing om 2D-toepassingen in te starten",
 	"Settings_Camera_EnableCamera": "Camera",
 	"Settings_Camera_ShowOnController": "Camera op controller tonen",
@@ -198,7 +220,7 @@
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Doorzichtige doorvoer",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Ondoorzichtige doorvoer",
 	"Settings_Camera_RoomView3D_Experimental": "3D-kamerweergave is experimenteel.",
-	"Settings_Camera_RoomView3D_Unsupported": "3D-kamerweergave wordt niet ondersteund op deze headset- en systeemconfiguratie.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-kamerweergave wordt niet ondersteund op deze headset- of systeemconfiguratie.",
 	"Settings_CameraTest": "Camera en prestaties testen",
 	"Settings_StartCameraTest": "Test starten",
 	"CameraTest_CheckingCamera": "Camera controleren...",
@@ -208,7 +230,7 @@
 	"CameraTest_Success": "Cameratest geslaagd",
 	"CameraTest": "Cameratest",
 	"CameraTestStatus_Evaluating": "Controleren",
-	"CameraTestStatus_Success": "Succesvol",
+	"CameraTestStatus_Success": "Gelukt",
 	"CameraTestStatus_Failure": "Mislukt",
 	"Advanced_Appearance": "Uiterlijk",
 	"Settings_Appearance_Background": "Achtergrond",
@@ -335,12 +357,12 @@
 	"Settings_Drivers_UnblockAllTip": "OPMERKING: Het wordt aanbevolen om één uitbreiding per keer te deblokkeren en te testen.",
 	"Settings_Drivers_SomeBlocked": "Door een recentelijke crash zijn sommige SteamVR-uitbreidingen automatisch geblokkeerd.",
 	"Settings_CurrentOpenXRRuntime_None": "Geen",
-	"Settings_CurrentOpenXRRuntime": "Huidige OpenXR runtime:",
-	"Settings_SetAsOpenXRRuntime": "SteamVR instellen als OpenXR runtime",
+	"Settings_CurrentOpenXRRuntime": "Huidige OpenXR-runtime:",
+	"Settings_SetAsOpenXRRuntime": "SteamVR instellen als OpenXR-runtime",
 	"OpenXR_AnotherSteamVR": "Nog een kopie van SteamVR",
 	"OpenXR_SteamVR": "SteamVR",
 	"OpenXR_None": "Geen",
-	"OpenXR_Error": "Fout bij het vinden van runtime",
+	"OpenXR_Error": "Kon runtime niet terugvinden",
 	"OpenXR_OculusRuntime": "Oculus",
 	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Controller %1$s testen",
