--- a/resources/webinterface/dashboard/localization/vrmonitor_french.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_french.json
@@ -3,7 +3,7 @@
 	"VRMonitor_Nav_Overview": "Présentation",
 	"VRMonitor_Nav_Settings": "Paramètres",
 	"VRMonitor_Nav_Help": "Aide",
-	"VRMonitor_Nav_Developer": "Développeur",
+	"VRMonitor_Nav_Developer": "Développement",
 	"Settings_ControllerSettings": "Paramètres du contrôleur",
 	"Settings_Controller_ShowBindingCallouts": "Afficher la configuration des contrôleurs",
 	"Settings_Controller_ShowBindingCalloutsInVR": "Afficher la configuration des contrôleurs en VR",
@@ -56,11 +56,14 @@
 	"Settings_Audio_Current_Setting_Unknown": "(Le périphérique sélectionné n'est pas détecté)",
 	"Settings_Audio_HDMIGain": "Réduction de gain sur la sortie audio HDMI du VIVE",
 	"Settings_Audio_SpeakerJackOutput": "Écouteurs externes/prise jack de 3,5 mm",
-	"Settings_Audio_SpeakerJackOutput_Title": "Retransmettre l'audio à la fois dans les écouteurs externes et au périphérique branché à la prise jack de 3,5 mm.",
-	"Settings_Audio_Single": "Unique",
-	"Settings_Audio_Dual": "Double",
+	"Settings_Audio_SpeakerJackOutput_Title": "L'audio sort à la fois par les écouteurs externes et par le périphérique branché à la prise jack de 3,5 mm.",
+	"Settings_Audio_Single": "Une seule sortie",
+	"Settings_Audio_Dual": "Double sortie",
+	"Settings_Audio_MicMonitor": "Contrôle du micro (retour)",
+	"Settings_Audio_Active": "Activé",
+	"Settings_Audio_Muted": "Désactivé",
 	"Settings_SectionTitle_Advanced": "Avancé",
-	"Settings_SectionTitle_Developer": "Développeur",
+	"Settings_SectionTitle_Developer": "Développement",
 	"Settings_SectionTitle_Dashboard": "Tableau de bord",
 	"Settings_SectionTitle_General": "Général",
 	"Settings_SectionTitle_Applications": "Applications",
@@ -82,7 +85,7 @@
 	"Advanced_SaveFrameDataNow": "Sauvegarde fréq. affichage",
 	"Explanation_DisableEnhancedPowerManagement": "Désactivez la gestion avancée d'alimentation Windows pour les périph. USB SteamVR si vous rencontrez des problèmes de suivi de mouvement ou si vous ne pouvez pas associer de contrôleurs. ",
 	"Explanation_QuickCalibrate": "Réinitialisation rapide de la configuration de pièce. Pour les positions debout et échelle de la pièce, l'espace sera centré sur le casque posé au sol au milieu de la pièce.",
-	"Explanation_RebootVive": "Redémarre le casque Vive - peut corriger des erreurs liées aux ports USB du casque.",
+	"Explanation_RebootVive": "Redémarre le casque VIVE - peut corriger des erreurs liées aux ports USB du casque.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "Désinstalle tous les périphériques USB associés à SteamVR sur ce système pour permettre la réinstallation des pilotes.",
 	"Explanation_ResetDismissableWarnings": "Alertes temporaires réinitialisées. Elles s'afficheront à nouveau si nécessaire.",
 	"MenuAction_DisableEnhancedPowerManagement": "Désactiver la gestion de l'alimentation",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Définir le répertoire de configuration",
 	"MenuAction_SetLogDirectory": "Définir le répertoire des journaux",
 	"Settings_Advanced_AllowSupersampleFiltering": "Filtrage avancé de supersampling",
+	"Settings_Video_HDCP14LegacyCompatibility": "Rétrocompatibilité avec HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Répertoires",
 	"Settings_Advanced_Reset_Header": "Réinitialiser",
 	"Settings_Advanced_Status_Header": "Vérification de l'état",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Activez cette option pour désactiver la reprojection asynchrone pour ce titre.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Remplacer la fréquence de rafraîchissement",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Cochez cette option si vous voulez définir une nouvelle fréquence de rafraîchissement pour cette application depuis les paramètres généraux.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "La limitation et la prédiction sont gérées automatiquement à partir des performances mesurées. Toutefois, pour certaines applications, vous pouvez obtenir une expérience plus fluide en forçant la fréquence d'images à une valeur fixe plus faible.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Comportement des limitations",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Sélectionnez une nouvelle limite fixe afin de désactiver la limitation automatique pour cette application.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fixe",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automatique",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Bloquer la fréquence d'images à (FPS max.) :",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Prédiction complémentaire (ms) :",
+	"Settings_PerApplication_WorldScale_Description": "Remplace l'échelle perçue de l'application en ajustant les mouvements de la tête et l'écart pupillaire.",
+	"Settings_PerApplication_WorldScale_Label": "Redimensionnement du monde virtuel",
+	"Settings_PerApplication_WorldScale_Off": "Désactivé",
+	"Settings_PerApplication_WorldScale_Fine": "Léger",
+	"Settings_PerApplication_WorldScale_Normal": "Normal",
+	"Settings_PerApplication_WorldScale_Extreme": "Extrême",
+	"Settings_PerApplication_WorldScale_Range": "[De %1$s à %2$s %]",
+	"Settings_PerApplication_WorldScale_Warning": "Remarque : pour appliquer les changements, vous devrez peut-être redémarrer l'application. Certaines interactions peuvent être modifiées de manière inattendue. Suivant l'application, des fonctionnalités comme le lancer d'objets peuvent être affectées.",
+	"Settings_PerApplication_FovScale_Description": "Option facultative : réduit le champ de vision de l'application pour obtenir une meilleure clarté en contrepartie d'une limitation de la vision périphérique. Remarque : dans de nombreux cas, l'application devra être redémarrée pour que les changements soient correctement appliqués.",
+	"Settings_PerApplication_FovScale_Label": "Champ de vision",
+	"Settings_PerApplication_FovScale_Multiplier": "Échelle personnalisée",
 	"Settings_MimeTypes_Pancake_Header": "Sélectionnez l'application avec laquelle lancer les applications 2D",
 	"Settings_Camera_EnableCamera": "Activer la caméra",
 	"Settings_Camera_ShowOnController": "Afficher la caméra sur le contrôleur",
@@ -232,13 +254,13 @@
 	"Settings_General_Notifications_Label": "Notifications",
 	"Settings_General_Notifications_Text": "Autoriser les notifications pendant la VR",
 	"Settings_General_ShowBindingUI": "Modifier la configuration du contrôleur de jeu",
-	"Settings_General_ShowTrackerUI": "Gérer les Vive Trackers",
+	"Settings_General_ShowTrackerUI": "Gérer les VIVE Trackers",
 	"Settings_General_Cancel": "Annuler",
 	"Settings_General_Confirm": "Confirmer",
 	"Settings_General_Close": "Fermer",
 	"Settings_General_CalibrateThumbstick": "Calibrer le stick analogique",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Connecter un contrôleur avec un stick analogique.",
-	"Settings_General_NotEnoughSamples": "Veuillez déplacer le stick analogique vers le haut %1$s fois de plus pour terminer la calibration.",
+	"Settings_General_NotEnoughSamples": "Veuillez déplacer le stick analogique vers le haut %1$s fois de plus pour terminer le calibrage.",
 	"Settings_General_InviteMoreSamples": "Angle calculé : %1$s degrés. Continuez à déplacer le stick analogique vers le haut pour obtenir une valeur plus précise ou appuyez sur Confirmer pour continuer.",
 	"Settings_General_LeftThumbstickAngle": "Angle du stick analogique gauche : %1$s degrés",
 	"Settings_General_RightThumbstickAngle": "Angle du stick analogique droit : %1$s degrés",
@@ -303,12 +325,12 @@
 	"Settings_AdvancedSettings": "Voir les paramètres avancés",
 	"Settings_Show": "Voir",
 	"Settings_Hide": "Non",
-	"Settings_ViveTracker": "Vive Tracker",
-	"Settings_ViveTrackers": "Vive Trackers",
-	"Settings_ViveTracker_Role": "Rôle du Vive Tracker",
+	"Settings_ViveTracker": "VIVE Tracker",
+	"Settings_ViveTrackers": "VIVE Trackers",
+	"Settings_ViveTracker_Role": "Rôle du VIVE Tracker",
 	"Settings_ViveTracker_Hand": "Main",
-	"Settings_ViveTracker_Identify_NotConnected": "Le Vive Tracker n'est pas connecté.",
-	"Settings_ViveTracker_Identify_NotIdentifiable": "Le Vive Tracker ne peut pas être identifié.",
+	"Settings_ViveTracker_Identify_NotConnected": "Le VIVE Tracker n'est pas connecté.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Le VIVE Tracker ne peut pas être identifié.",
 	"Settings_ViveTracker_Connected": "Connecté",
 	"Settings_ViveTracker_Disconnected": "Déconnecté",
 	"Settings_PerApplication_VideoSettings": "Paramètres vidéo par application",
