--- a/resources/webinterface/dashboard/localization/vrmonitor_german.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_german.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Ermöglicht simultanes Audio sowohl über 3,5-mm-Klinkenstecker als auch über Off-Ear-Kopfhörer",
 	"Settings_Audio_Single": "Einzel",
 	"Settings_Audio_Dual": "Doppelt",
+	"Settings_Audio_MicMonitor": "Mikrofonüberwachung (Mithörton)",
+	"Settings_Audio_Active": "Aktiv",
+	"Settings_Audio_Muted": "Stumm",
 	"Settings_SectionTitle_Advanced": "Erweitert",
 	"Settings_SectionTitle_Developer": "Entwickler",
 	"Settings_SectionTitle_Dashboard": "Dashboard",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Konfigurationsverzeichnis festlegen",
 	"MenuAction_SetLogDirectory": "Protokollverzeichnis festlegen",
 	"Settings_Advanced_AllowSupersampleFiltering": "Erweiterter Supersampling-Filter",
+	"Settings_Video_HDCP14LegacyCompatibility": "Kompatibilitätsmodus für HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Pfade",
 	"Settings_Advanced_Reset_Header": "Zurücksetzen",
 	"Settings_Advanced_Status_Header": "Statusüberprüfung",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Markieren dieser Option deaktiviert Bewegungsglättung für diesen Titel.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Aktualisierungsrate überschreiben",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Bei Auswahl dieser Aktion kann eine benutzerdefinierte Aktualisierungsrate festgelegt werden.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Drosselung und Vorhersage werden automatisch basierend auf der gemessenen Leistung durchgeführt. Einige Anwendungen erzielen jedoch ggf. ein insgesamt ausgeglicheneres Erlebnis, wenn sie gezwungen werden, mit einer festgelegten langsameren Geschwindigkeit zu laufen.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Drosselungsverhalten",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Wenn Sie hier einen festen Drosselungswert auswählen, wird die automatische Drosselung für diese Anwendung deaktiviert.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Festgelegt",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automatisch",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Bildfrequenz der Anwendung auf folgenden max. Wert (in FPS) festsetzen:",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Zusätzliche Vorhersage (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Passen Sie die Kopfbewegung und den Augenabstand an, um die wahrgenommene Skalierung der Anwendung zu überschreiben.",
+	"Settings_PerApplication_WorldScale_Label": "Globale Skalierung überschreiben",
+	"Settings_PerApplication_WorldScale_Off": "Aus",
+	"Settings_PerApplication_WorldScale_Fine": "Fein",
+	"Settings_PerApplication_WorldScale_Normal": "Normal",
+	"Settings_PerApplication_WorldScale_Extreme": "Extrem",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s % bis %2$s %]",
+	"Settings_PerApplication_WorldScale_Warning": "Hinweis: Änderungen können einen Neustart der Anwendung erfordern und/oder Interaktionen auf unerwartete Art und Weise verändern. Abhängig von der Anwendung können Funktionen wie Werfen beeinflusst werden.",
+	"Settings_PerApplication_FovScale_Description": "Reduzieren Sie optional das Sichtfeld der Anwendung, um einen Kompromiss zwischen der peripheren Sicht und der Schärfe zu erzielen. Hinweis: In vielen Fällen muss die Anwendung neu gestartet werden, damit die Änderung ordnungsgemäß angewendet wird.",
+	"Settings_PerApplication_FovScale_Label": "Sichtfeld",
+	"Settings_PerApplication_FovScale_Multiplier": "Benutzerdefinierte Skalierung",
 	"Settings_MimeTypes_Pancake_Header": "Wählen Sie eine Anwendung zum Ausführen von 2D-Anwendungen",
 	"Settings_Camera_EnableCamera": "Kamera aktivieren",
 	"Settings_Camera_ShowOnController": "Kamera auf Controller anzeigen",
