--- a/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
@@ -44,7 +44,7 @@
 	"VRMonitor_DevNav_RoomOverview": "Szobaáttekintés",
 	"VRMonitor_DevNav_Files": "Fájlok",
 	"Settings_SelectAnOption": "Válassz lehetőséget...",
-	"Settings_BluetoothSettings": "Bluetooth beállítások",
+	"Settings_BluetoothSettings": "Bluetooth-beállítások",
 	"Settings_BaseStationSettings": "Bázisállomás beállítások",
 	"Settings_Audio_Playback_Automatic_Label": "Hangkimeneti eszköz",
 	"Settings_Audio_Recording_Automatic_Label": "Hangbemeneti eszköz",
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Engedélyezi a 3,5 mm-es csatlakozón és a fület nem érintő fejhallgatón keresztüli egyidejű hangot.",
 	"Settings_Audio_Single": "Egyedüli",
 	"Settings_Audio_Dual": "Kettős",
+	"Settings_Audio_MicMonitor": "Mikrofonfigyelés (önhang)",
+	"Settings_Audio_Active": "Aktív",
+	"Settings_Audio_Muted": "Némítva",
 	"Settings_SectionTitle_Advanced": "Haladó",
 	"Settings_SectionTitle_Developer": "Fejlesztői",
 	"Settings_SectionTitle_Dashboard": "Műszerfal",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Konfigurációs könyvtár beállítása",
 	"MenuAction_SetLogDirectory": "Naplókönyvtár beállítása",
 	"Settings_Advanced_AllowSupersampleFiltering": "Fejlett többletmintavételezés szűrés",
+	"Settings_Video_HDCP14LegacyCompatibility": "1.4-es hagyományos HDCP-kompatibilitás",
 	"Settings_Advanced_Paths_Header": "Útvonalak",
 	"Settings_Advanced_Reset_Header": "Alaphelyzet",
 	"Settings_Advanced_Status_Header": "Állapotellenőrzés",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "E lehetőség bejelölése kikapcsolja az aszinkron újravetítést ennél az alkalmazásnál.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Frissítési frekvencia felülbírálás",
 	"Settings_Perapplication_RefreshRateOverride_Description": "E lehetőség bejelölése lehetővé teszi a globálistól eltérő frissítési frekvencia megadását ehhez az alkalmazáshoz.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "A teljesítményszabályzás és a predikció a számított teljesítmény alapján automatikusan van kezelve, egyes alkalmazásoknak azonban jót tehet egy kényszerített, fix, lassabb értéken futtatás az összességében simább élmény biztosítása érdekében.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Teljesítményszabályzási viselkedés",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "A fix teljesítményszabályzási érték választása kikapcsolja az automatikus teljesítményszabályzást ehhez az alkalmazáshoz.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fix",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automatikus",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Alkalmazás képkockaszámának zárolása erre (max. FPS):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "További predikció (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Az alkalmazás érzékelt léptékének felülbírálása a fejmozgás és szemtávolság állításával.",
+	"Settings_PerApplication_WorldScale_Label": "Világlépték felülbírálása",
+	"Settings_PerApplication_WorldScale_Off": "Ki",
+	"Settings_PerApplication_WorldScale_Fine": "Finom",
+	"Settings_PerApplication_WorldScale_Normal": "Normál",
+	"Settings_PerApplication_WorldScale_Extreme": "Extrém",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% - %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Megjegyzés: A változtatások az alkalmazás újraindítását igényelhetik, illetve váratlan módon módosíthatják az interakciókat. Az alkalmazástól függően olyan funkciókra lehet hatással, mint a dobás.",
+	"Settings_PerApplication_FovScale_Description": "Opcionálisan csökkentsd az alkalmazás látómezejét, a periférikus látást tisztaságra cserélve. Megjegyzés: a változtatás megfelelő életbe lépéséhez az alkalmazást számos esetben újra kell indítani.",
+	"Settings_PerApplication_FovScale_Label": "Látómező",
+	"Settings_PerApplication_FovScale_Multiplier": "Egyedi méret",
 	"Settings_MimeTypes_Pancake_Header": "Válassz alkalmazást a 2D-s alkalmazások futtatásához",
 	"Settings_Camera_EnableCamera": "Kamera bekapcsolása",
 	"Settings_Camera_ShowOnController": "Kamera mutatása a játékvezérlőn",
