--- a/resources/webinterface/dashboard/localization/vrmonitor_italian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_italian.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Consente l'audio simultaneo tramite il jack da 3,5 mm e gli altoparlanti esterni",
 	"Settings_Audio_Single": "Singolo",
 	"Settings_Audio_Dual": "Doppio",
+	"Settings_Audio_MicMonitor": "Monitoraggio del microfono (sidetone)",
+	"Settings_Audio_Active": "Attivo",
+	"Settings_Audio_Muted": "Silenziato",
 	"Settings_SectionTitle_Advanced": "Avanzate",
 	"Settings_SectionTitle_Developer": "Sviluppatore",
 	"Settings_SectionTitle_Dashboard": "Dashboard",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Imposta cartella di configurazione",
 	"MenuAction_SetLogDirectory": "Imposta cartella di registro",
 	"Settings_Advanced_AllowSupersampleFiltering": "Filtraggio di supercampionamento avanzato",
+	"Settings_Video_HDCP14LegacyCompatibility": "Compatibilità legacy HDPC 1.4",
 	"Settings_Advanced_Paths_Header": "Percorsi",
 	"Settings_Advanced_Reset_Header": "Ripristina",
 	"Settings_Advanced_Status_Header": "Verifica dello stato",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Quando questa opzione è selezionata, disabilita la riproiezione asincrona per questo titolo.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Sostituisci frequenza di aggiornamento",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Attivare questa opzione consentirà di specificare una frequenza di aggiornamento diversa da quella predefinita per questa applicazione.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Il throttling e la predizione sono gestiti automaticamente in base alle prestazioni rilevate, tuttavia, alcune applicazioni potrebbero beneficiare di un'esecuzione forzata a un tasso di aggiornamento fisso e inferiore in modo da fornire un'esperienza complessiva più fluida.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Comportamento del throttling",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Selezionando un valore fisso di throttling qui, disattiverai il throttling automatico per questa applicazione.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fisso",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automatico",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Blocca il framerate dell'applicazione a (fps massimi):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Predizione aggiuntiva (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Ignora il ridimensionamento percepito dell'applicazione regolando il movimento della testa e la separazione degli occhi.",
+	"Settings_PerApplication_WorldScale_Label": "Ignora ridimensionamento del mondo",
+	"Settings_PerApplication_WorldScale_Off": "No",
+	"Settings_PerApplication_WorldScale_Fine": "Leggero",
+	"Settings_PerApplication_WorldScale_Normal": "Normale",
+	"Settings_PerApplication_WorldScale_Extreme": "Estremo",
+	"Settings_PerApplication_WorldScale_Range": "[Da %1$s% a %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Nota: le modifiche potrebbero richiedere il riavvio dell'applicazione, e/o modificare le interazioni in maniera inaspettata. In base all'applicazione, le funzionalità come il lancio potrebbero essere influenzate.",
+	"Settings_PerApplication_FovScale_Description": "Facoltativamente puoi ridurre il campo visivo dell'applicazione a vantaggio della visuale periferica. Nota: in molti casi, l'applicazione dovrà essere riavviata perché la modifica venga applicata correttamente.",
+	"Settings_PerApplication_FovScale_Label": "Campo visivo",
+	"Settings_PerApplication_FovScale_Multiplier": "Dimensione personalizzata",
 	"Settings_MimeTypes_Pancake_Header": "Seleziona un'applicazione per avviare le applicazioni 2D",
 	"Settings_Camera_EnableCamera": "Attiva la telecamera",
 	"Settings_Camera_ShowOnController": "Mostra telecamera sul controller",
