--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -55,10 +55,13 @@
 	"Settings_Audio_Default": "システムデフォルト",
 	"Settings_Audio_Current_Setting_Unknown": "（現在選択されているデバイスは存在しません）",
 	"Settings_Audio_HDMIGain": "VIVE HDMIオーディオのゲインリダクション",
-	"Settings_Audio_SpeakerJackOutput": "Speaker / 3.5mm Jack Output",
-	"Settings_Audio_SpeakerJackOutput_Title": "Allows simultaneous audio through both the 3.5mm jack and the off-ear speakers",
-	"Settings_Audio_Single": "Single",
-	"Settings_Audio_Dual": "Dual",
+	"Settings_Audio_SpeakerJackOutput": "スピーカー／3.5mmジャック出力",
+	"Settings_Audio_SpeakerJackOutput_Title": "3.5mmジャックとオフイヤースピーカー両方からの同時オーディを許可",
+	"Settings_Audio_Single": "シングル",
+	"Settings_Audio_Dual": "デュアル",
+	"Settings_Audio_MicMonitor": "マイクモニタリング（サイドトーン）",
+	"Settings_Audio_Active": "有効",
+	"Settings_Audio_Muted": "ミュート状態",
 	"Settings_SectionTitle_Advanced": "詳細",
 	"Settings_SectionTitle_Developer": "開発者",
 	"Settings_SectionTitle_Dashboard": "ダッシュボード",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "設定ディレクトリを設定",
 	"MenuAction_SetLogDirectory": "ログディレクトリを設定",
 	"Settings_Advanced_AllowSupersampleFiltering": "高度なスーパーサンプルフィルター",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4レガシー互換性",
 	"Settings_Advanced_Paths_Header": "パス",
 	"Settings_Advanced_Reset_Header": "リセット",
 	"Settings_Advanced_Status_Header": "ステータス確認",
@@ -181,24 +185,42 @@
 	"Settings_PerApplication_Reprojection_Description": "このオプションにチェックを付けると、このタイトルの非同期再投影を無効にします。",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "リフレッシュレートを上書き",
 	"Settings_Perapplication_RefreshRateOverride_Description": "このオプションにチェックを付けると、このアプリケーションのグローバル設定とは異なるリフレッシュレートを指定できます。",
+	"Settings_PerApplication_ThrottlingOverride_Description": "スロットル調整と予測は、測定されたパフォーマンスに基づいて自動的に処理されますが、一部のアプリケーションでは、強制的に一定の遅い速度で動作させることにより、全体的によりスムーズな体験を実現できる場合があります。",
+	"Settings_PerApplication_ThrottlingOverride_Label": "スロットルの動作",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "ここで固定のスロットル値を選択すると、このアプリケーションの自動スロットルが無効になります。",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "固定",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "自動",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "アプリケーションのフレームレートを（最大fps）にロック：",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "追加予測（ms）：",
+	"Settings_PerApplication_WorldScale_Description": "頭の動きや目の間隔を調整することで、アプリケーションの知覚スケールをオーバーライドします。",
+	"Settings_PerApplication_WorldScale_Label": "ワールドスケールをオーバーライド",
+	"Settings_PerApplication_WorldScale_Off": "オフ",
+	"Settings_PerApplication_WorldScale_Fine": "極小",
+	"Settings_PerApplication_WorldScale_Normal": "中",
+	"Settings_PerApplication_WorldScale_Extreme": "極大",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s%から%2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "注：変更の際には、アプリケーションの再起動を必要とする場合や、インタラクションが予期せぬ形で変更される場合があります。アプリケーションによっては、投げる機能などに影響が出る場合があります。",
+	"Settings_PerApplication_FovScale_Description": "周辺視野よりも明瞭度を優先するために、必要に応じてアプリケーションの視野角を下げます。注：多くの場合、変更を正しく適用するには、アプリケーションの再起動が必要です。",
+	"Settings_PerApplication_FovScale_Label": "視野",
+	"Settings_PerApplication_FovScale_Multiplier": "カスタムスケール",
 	"Settings_MimeTypes_Pancake_Header": "2Dアプリケーションを起動するアプリケーションを選択",
 	"Settings_Camera_EnableCamera": "カメラを有効化",
-	"Settings_Camera_ShowOnController": "Show Camera on Controller",
-	"Settings_Camera_ShowOnController_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
+	"Settings_Camera_ShowOnController": "コントローラにカメラを表示",
+	"Settings_Camera_ShowOnController_Desc": "ダッシュボードが表示されている時に、コントローラにアタッチされたカメラウィンドウを開きます。",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "ルーム境界にカメラを表示",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Room View",
+	"Settings_Camera_AllowCameraForRoomView": "ルームビュー",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "システムボタンのダブルクリックでいつでもルームビューにアクセス",
 	"Settings_Camera_Compatibility": "カメラレート",
 	"Settings_Camera_Rate_Hz": "カメラレート（Hz）",
 	"Settings_Camera_CompatibilityExplanation": "トラッキングが停止した場合は、カメラレートを下げる、カメラを無効にする、または他のUSBポートを試してください。",
-	"Settings_Camera_RoomViewStyle": "Room View Style",
-	"Settings_Camera_RoomViewStyle_EdgeA": "Colored Edges",
-	"Settings_Camera_RoomViewStyle_EdgeB": "Colored Ghosts",
-	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translucent Pass-Through",
-	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaque Pass-Through",
-	"Settings_Camera_RoomView3D_Experimental": "Room View 3D is experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "Room View 3D is not supported on this headset / system configuration.",
+	"Settings_Camera_RoomViewStyle": "ルームビュースタイル",
+	"Settings_Camera_RoomViewStyle_EdgeA": "色付き境界線",
+	"Settings_Camera_RoomViewStyle_EdgeB": "色付きゴースト",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "半透過パススルー",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "不透過パススルー",
+	"Settings_Camera_RoomView3D_Experimental": "ルームビュー3Dは試験的です。",
+	"Settings_Camera_RoomView3D_Unsupported": "ルームビュー3Dはこのヘッドセット／システム構成ではサポートされていません。",
 	"Settings_CameraTest": "カメラとパフォーマンスをテストする",
 	"Settings_StartCameraTest": "テスト開始",
 	"CameraTest_CheckingCamera": "カメラをチェック中...",
@@ -334,13 +356,13 @@
 	"Settings_Drivers_UnblockAll": "すべてブロック解除",
 	"Settings_Drivers_UnblockAllTip": "注：アドオンのブロック解除とテストは一度に1つを推奨しています。",
 	"Settings_Drivers_SomeBlocked": "最近のクラッシュにより、一部のSteamVRのアドオンは自動的にブロックされています。",
-	"Settings_CurrentOpenXRRuntime_None": "None",
-	"Settings_CurrentOpenXRRuntime": "Current OpenXR Runtime:",
-	"Settings_SetAsOpenXRRuntime": "Set SteamVR as OpenXR Runtime",
-	"OpenXR_AnotherSteamVR": "Another copy of SteamVR",
+	"Settings_CurrentOpenXRRuntime_None": "なし",
+	"Settings_CurrentOpenXRRuntime": "現在のOpenXRランタイム：",
+	"Settings_SetAsOpenXRRuntime": "SteamVRをOpenXRランタイムとして設定",
+	"OpenXR_AnotherSteamVR": "SteamVRの別のコピー",
 	"OpenXR_SteamVR": "SteamVR",
-	"OpenXR_None": "None",
-	"OpenXR_Error": "Error Finding Runtime",
+	"OpenXR_None": "なし",
+	"OpenXR_Error": "ランタイム検索中にエラーが発生しました",
 	"OpenXR_OculusRuntime": "Oculus",
 	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "コントローラ%1$sをテスト中",
