--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -53,12 +53,15 @@
 	"Settings_Audio_Mirroring_Label": "오디오 미러링",
 	"Settings_Audio_Mirroring_Independent_Volume_Label": "미러링 음량 별도 제어 (베타)",
 	"Settings_Audio_Default": "시스템 기본값",
-	"Settings_Audio_Current_Setting_Unknown": "(현재, 선택한 디바이스는 존재하지 않습니다)",
+	"Settings_Audio_Current_Setting_Unknown": "(현재, 선택한 기기는 존재하지 않습니다)",
 	"Settings_Audio_HDMIGain": "VIVE HDMI 오디오 게인 감소",
 	"Settings_Audio_SpeakerJackOutput": "스피커 / 3.5mm 잭 출력",
 	"Settings_Audio_SpeakerJackOutput_Title": "3.5mm 잭과 귀에 닿지 않는 오프 이어(off-ear) 스피커를 통한 동시 오디오를 사용할 수 있습니다.",
 	"Settings_Audio_Single": "싱글",
 	"Settings_Audio_Dual": "듀얼",
+	"Settings_Audio_MicMonitor": "마이크 모니터링(사이드톤)",
+	"Settings_Audio_Active": "활성화",
+	"Settings_Audio_Muted": "음성 차단됨",
 	"Settings_SectionTitle_Advanced": "고급",
 	"Settings_SectionTitle_Developer": "개발자",
 	"Settings_SectionTitle_Dashboard": "대시보드",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "구성 디렉터리 설정",
 	"MenuAction_SetLogDirectory": "로그 디렉터리 설정",
 	"Settings_Advanced_AllowSupersampleFiltering": "고급 슈퍼샘플 필터링",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4 레거시 호환성",
 	"Settings_Advanced_Paths_Header": "경로",
 	"Settings_Advanced_Reset_Header": "초기화",
 	"Settings_Advanced_Status_Header": "상태 검사",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "이 옵션을 선택하면 이 타이틀에 비동기 중복 프로젝션을 비활성화 합니다.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "새로 고침 빈도 재정의",
 	"Settings_Perapplication_RefreshRateOverride_Description": "이 옵션을 선택하면 이 애플리케이션의 전체 설정과 다른 새로고침 빈도를 설정할 수 있습니다.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "조절과 예측은 측정된 성능에 따라 자동 처리되지만, 일부 애플리케이션의 경우 원활한 경험을 제공하기 위해 고정된 낮은 속도로 실행하는 것이 도움이 될 수 있습니다.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "조절 동작",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "고정된 조절 값을 선택하면 이 애플리케이션에 대한 자동 조절 기능이 비활성화됩니다.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "고정",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "자동",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "애플리케이션 프레임 속도 고정(최대 fps):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "추가 예측(ms):",
+	"Settings_PerApplication_WorldScale_Description": "머리의 움직임과 눈의 거리를 조정하여 애플리케이션에 인식된 스케일링을 재정의합니다.",
+	"Settings_PerApplication_WorldScale_Label": "가상 세계 스케일 재정의",
+	"Settings_PerApplication_WorldScale_Off": "사용 안 함",
+	"Settings_PerApplication_WorldScale_Fine": "작게",
+	"Settings_PerApplication_WorldScale_Normal": "보통",
+	"Settings_PerApplication_WorldScale_Extreme": "크게",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s%~%2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "참고: 변경 시에는 애플리케이션을 다시 시작해야 하거나 예상치 못한 방식으로 상호 작용이 변경될 수 있습니다. 애플리케이션에 따라 던지기와 같은 기능이 영향을 받을 수 있습니다.",
+	"Settings_PerApplication_FovScale_Description": "선택 사항으로 주변 시야를 절충하는 대신 선명도를 높이기 위해 애플리케이션의 시야를 낮출 수 있습니다. 참고: 대부분의 경우 변경 사항을 제대로 적용하려면 애플리케이션을 다시 시작해야 합니다.",
+	"Settings_PerApplication_FovScale_Label": "시야(FOV)",
+	"Settings_PerApplication_FovScale_Multiplier": "사용자 지정 스케일",
 	"Settings_MimeTypes_Pancake_Header": "2D 애플리케이션을 실행하는 데 사용할 애플리케이션 선택",
 	"Settings_Camera_EnableCamera": "카메라 활성화",
 	"Settings_Camera_ShowOnController": "컨트롤러에 카메라 표시",
@@ -197,8 +219,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "고스팅 처리로 색상 표시",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "투명 통과",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "불투명 통과",
-	"Settings_Camera_RoomView3D_Experimental": "Room View 3D is experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "Room View 3D is not supported on this headset / system configuration.",
+	"Settings_Camera_RoomView3D_Experimental": "3D 방 보기는 시험 중입니다.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D 방 보기는 본 헤드셋/시스템 구성에서 지원되지 않습니다.",
 	"Settings_CameraTest": "카메라 및 성능 테스트",
 	"Settings_StartCameraTest": "테스트 시작",
 	"CameraTest_CheckingCamera": "카메라 확인 중...",
@@ -222,7 +244,7 @@
 	"Settings_Appearance_DomeCameraRadius": "돔 반경",
 	"Settings_Appearance_DomeCameraRadiusDesc": "돔의 크기를 변경합니다.",
 	"Settings_Appearance_ResetDomeProjectionSettings": "돔 프로젝션을 기본값으로 초기화",
-	"Settings_Appearance_PlayAreaColorDesc": "플레이 구역의 스타일을 조정하세요. 이것은 게임을 불러올 때 또는 SteamVR Home 베타를 취소하면 표시됩니다",
+	"Settings_Appearance_PlayAreaColorDesc": "플레이 구역의 스타일을 조정하세요. 이것은 게임을 불러올 때 또는 SteamVR Home 베타를 비활성화하면 표시됩니다",
 	"Settings_Appearance_PlayArea_FloorColor": "플레이 구역 바닥 색상",
 	"Settings_Appearance_MoreEnvironments": "SteamVR Home 환경 더 불러오기",
 	"Settings_Power_ReturnToWatchdogTimeout": "SteamVR 종료 대기 시간",
@@ -285,7 +307,7 @@
 	"Settings_Appearance_Base": "베이스 스테이션 모델 변경",
 	"Settings_Appearance_Environment": "홈 환경 변경",
 	"Settings_ConnectAnHMD": "헤드셋을 연결하세요.",
-	"Settings_Loading": "불러오는 중..",
+	"Settings_Loading": "불러오는 중...",
 	"Settings_ResetToDefault": "기본 설정으로 초기화",
 	"Settings_ResetPageToDefault": "페이지를 기본 페이지로 초기화",
 	"Settings_ToggleButton_On": "켜기",
@@ -331,16 +353,16 @@
 	"Settings_Drivers_Number_Disabled": "%1$s 비활성화됨",
 	"Settings_Drivers_Header": "SteamVR 애드온 관리",
 	"Settings_Drivers_Unblock": "차단 해제",
-	"Settings_Drivers_UnblockAll": "모두 차단",
+	"Settings_Drivers_UnblockAll": "모두 차단 해제",
 	"Settings_Drivers_UnblockAllTip": "참고: 한 번에 하나의 애드온을 차단 해제하고 테스트할 것을 권장합니다.",
 	"Settings_Drivers_SomeBlocked": "최근 크래시로 인해 일부 SteamVR 애드온이 자동 차단되었습니다.",
-	"Settings_CurrentOpenXRRuntime_None": "None",
-	"Settings_CurrentOpenXRRuntime": "Current OpenXR Runtime:",
-	"Settings_SetAsOpenXRRuntime": "Set SteamVR as OpenXR Runtime",
-	"OpenXR_AnotherSteamVR": "Another copy of SteamVR",
+	"Settings_CurrentOpenXRRuntime_None": "없음",
+	"Settings_CurrentOpenXRRuntime": "현재 OpenXR 런타임:",
+	"Settings_SetAsOpenXRRuntime": "SteamVR을 OpenXR 런타임으로 설정",
+	"OpenXR_AnotherSteamVR": "SteamVR의 또 다른 사본",
 	"OpenXR_SteamVR": "SteamVR",
-	"OpenXR_None": "None",
-	"OpenXR_Error": "Error Finding Runtime",
+	"OpenXR_None": "없음",
+	"OpenXR_Error": "런타임을 검색 시 오류 발생",
 	"OpenXR_OculusRuntime": "Oculus",
 	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "컨트롤러 테스트 %1$s",
