--- a/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Gjør det mulig å spille av lyd samtidig gjennom både 3,5 mm jackplugg og ørehøyttalerne",
 	"Settings_Audio_Single": "Enkelt",
 	"Settings_Audio_Dual": "Dobbelt",
+	"Settings_Audio_MicMonitor": "Mikrofonovervåkning (sidetone)",
+	"Settings_Audio_Active": "Slått på",
+	"Settings_Audio_Muted": "Dempet",
 	"Settings_SectionTitle_Advanced": "Avansert",
 	"Settings_SectionTitle_Developer": "Utvikler",
 	"Settings_SectionTitle_Dashboard": "Dashbord",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Angi konfigurasjonsmappe",
 	"MenuAction_SetLogDirectory": "Angi loggmappe",
 	"Settings_Advanced_AllowSupersampleFiltering": "Avansert supersamplingsfiltrering",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4 klassisk kompatibilitet",
 	"Settings_Advanced_Paths_Header": "Stier",
 	"Settings_Advanced_Reset_Header": "Tilbakestill",
 	"Settings_Advanced_Status_Header": "Statussjekk",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Hvis du velger dette alternativet, slås asynkron omprojeksjon av for dette produktet.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Overstyr oppdateringsfrekvens",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Hvis du velger dette alternativet, kan du angi en annen oppdateringsfrekvens for dette programmet enn den globale innstillingen.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Begrensning og forutsigelse håndteres automatisk basert på målt ytelse, men visse programmer kan gi en generelt jevnere opplevelse hvis de tvinges til å kjøre med en fast, lavere bildefrekvens.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Begrensningsfunksjon",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Automatisk begrensning blir slått av for dette programmet hvis du velger en fast begrensningsverdi her.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fast",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automatisk",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Lås programmets bildefrekvens til (maks):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Ytterligere forutsigelse (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Overstyr programmets oppfattede skalering ved å justere hodebevegelse og øyeavstand.",
+	"Settings_PerApplication_WorldScale_Label": "Overstyr verdensskalering",
+	"Settings_PerApplication_WorldScale_Off": "Av",
+	"Settings_PerApplication_WorldScale_Fine": "Subtilt",
+	"Settings_PerApplication_WorldScale_Normal": "Vanlig",
+	"Settings_PerApplication_WorldScale_Extreme": "Drastisk",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s % til %2$s %]",
+	"Settings_PerApplication_WorldScale_Warning": "Merk: Endringer krever muligens at du starter programmet på nytt, og/eller de kan endre interaksjoner på uventet vis. Avhengig av programmet, kan handlinger som f.eks. kasting bli påvirket.",
+	"Settings_PerApplication_FovScale_Description": "Du kan eventuelt redusere programmets synsfelt for å bytte sidesyn mot klarhet. Merk: Programmet må i mange tilfeller startes på nytt for at endringene skal tre ordentlig i kraft.",
+	"Settings_PerApplication_FovScale_Label": "Synsfelt",
+	"Settings_PerApplication_FovScale_Multiplier": "Tilpasset skalering",
 	"Settings_MimeTypes_Pancake_Header": "Velg et program som 2D-programmer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå på kamera",
 	"Settings_Camera_ShowOnController": "Vis kamera på kontroller",
