--- a/resources/webinterface/dashboard/localization/vrmonitor_polish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_polish.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Pozwala na równoczesne odtwarzanie dźwięku przez wejście 3,5 mm oraz głośniki przyuszne.",
 	"Settings_Audio_Single": "Pojedyncze",
 	"Settings_Audio_Dual": "Podwójne",
+	"Settings_Audio_MicMonitor": "Kontrola mikrofonu (twój głos)",
+	"Settings_Audio_Active": "Aktywna",
+	"Settings_Audio_Muted": "Wyciszono",
 	"Settings_SectionTitle_Advanced": "Zaawansowane",
 	"Settings_SectionTitle_Developer": "Programistyczne",
 	"Settings_SectionTitle_Dashboard": "Panel główny",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Ustaw katalog konfiguracji",
 	"MenuAction_SetLogDirectory": "Ustaw katalog dzienników",
 	"Settings_Advanced_AllowSupersampleFiltering": "Zaawansowane filtrowanie supersamplingowe",
+	"Settings_Video_HDCP14LegacyCompatibility": "Kompatybilność ze starszą wersją HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Ścieżki",
 	"Settings_Advanced_Reset_Header": "Zresetuj",
 	"Settings_Advanced_Status_Header": "Sprawdzenie stanu",
@@ -163,7 +167,7 @@
 	"Explanation_Supersampling_ResolutionPerEye": "Rozdzielczość na oko",
 	"Settings_PerApplication_ChooseApplication": "Wybierz aplikację",
 	"Settings_PerApplication_AppResTitle": "Obecny mnożnik rozdzielczości",
-	"Settings_PerApplication_AppResHeader": "To ustawienie jest mnożnikiem obecnej globalnej rozdzielczości dla aplikacji znajdującej się w zakładce „%1$s” po lewo. Możliwe, że konieczne będzie ponownie uruchomienie aplikacji do wprowadzenia zmian (domyślna wartość to 100%).",
+	"Settings_PerApplication_AppResHeader": "To ustawienie jest mnożnikiem obecnej globalnej rozdzielczości dla aplikacji znajdującej się w zakładce „%1$s” po lewej. Możliwe, że konieczne będzie ponownie uruchomienie aplikacji do wprowadzenia zmian (domyślna wartość to 100%).",
 	"Settings_PerApplication_OverlayVisibleHeader": "Aplikacje-nakładki są dostępne jako karty w panelu głównym SteamVR.",
 	"Settings_PerApplication_OverlayVisibleCheckbox": "Uruchom tę aplikację-nakładkę podczas uruchomienia SteamVR.",
 	"Settings_PerApplication_DashboardSuffix": "(aplikacja-nakładka)",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Włączenie tej opcji wyłączy asynchroniczną reprojekcję dla tego tytułu.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Obejście częstotliwości odświeżania",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Włączenie tej opcji umożliwi określanie dla tej aplikacji częstotliwości odświeżania innej od ustawienia globalnego.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Nakładanie ograniczeń i przewidywanie są ustalane automatycznie na podstawie pomiarów działania. Mimo to niektóre aplikacje mogą zyskać na wymuszeniu działania w stałej, mniejszej liczbie klatek celem uzyskania lepszej ogólnej płynności.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Zachowanie nakładania ograniczeń",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Wybranie w tym miejscu stałej wartości nakładanych ograniczeń spowoduje wyłączenie opcji automatycznej dla tej aplikacji.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Stałe",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automatyczne",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Ogranicz liczbę klatek do (maksymalna liczba klatek na sekundę):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Dodatkowe przewidywanie (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Nadpisz postrzegane skalowanie danej aplikacji, dostosowując ruch głowy i rozstaw oczu.",
+	"Settings_PerApplication_WorldScale_Label": "Nadpisanie skali świata",
+	"Settings_PerApplication_WorldScale_Off": "Wyłączone",
+	"Settings_PerApplication_WorldScale_Fine": "Nieznaczne",
+	"Settings_PerApplication_WorldScale_Normal": "Normalne",
+	"Settings_PerApplication_WorldScale_Extreme": "Ekstremalne",
+	"Settings_PerApplication_WorldScale_Range": "[od %1$s% do %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Uwaga: zmiany mogą wymagać ponownego uruchomienia aplikacji i/lub doprowadzić do nieoczekiwanych zmian interakcji. W zależności od aplikacji może to mieć wpływ na różne funkcje, takie jak rzucanie.",
+	"Settings_PerApplication_FovScale_Description": "Możesz też zmniejszyć pole widzenia dla aplikacji, aby zwiększyć czytelność kosztem widzenia peryferyjnego. Uwaga: w wielu przypadkach aplikacja będzie musiała zostać ponownie uruchomiona, aby zmiana została wprowadzona.",
+	"Settings_PerApplication_FovScale_Label": "Pole widzenia",
+	"Settings_PerApplication_FovScale_Multiplier": "Niestandardowa skala",
 	"Settings_MimeTypes_Pancake_Header": "Wybierz aplikację służącą do uruchamiania aplikacji 2D",
 	"Settings_Camera_EnableCamera": "Włącz kamerę",
 	"Settings_Camera_ShowOnController": "Pokaż kamerę na kontrolerze",
