--- a/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
@@ -27,7 +27,7 @@
 	"VRMonitor_Overview_QuickLinks_RoomSetup": "Configurarea încăperii",
 	"VRMonitor_Overview_QuickLinks_RoomSetup_Desc": "Configurează limitele chaperone-ului",
 	"VRMonitor_Overview_QuickLinks_Tutorial": "Tutorial SteamVR",
-	"VRMonitor_Overview_QuickLinks_Tutorial_Desc": "Află cum să-ți folosești headsetul de RV",
+	"VRMonitor_Overview_QuickLinks_Tutorial_Desc": "Află cum să-ți folosești casca de RV",
 	"SystemStatus_FrameRate_Good": "Rată a cadrelor bună",
 	"SystemStatus_FrameRate_MissedFrames": "Cadre pierdute",
 	"SystemStatus_FrameRate_now": "acum",
@@ -48,7 +48,7 @@
 	"Settings_BaseStationSettings": "Base Station Settings",
 	"Settings_Audio_Playback_Automatic_Label": "Audio output device",
 	"Settings_Audio_Recording_Automatic_Label": "Audio input device",
-	"Settings_Audio_Headset": "Headset",
+	"Settings_Audio_Headset": "Cască",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Audio mirroring",
 	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Permite audiția simultană atât prin mufa de 3,5 mm cât și prin căști",
 	"Settings_Audio_Single": "Singur",
 	"Settings_Audio_Dual": "Dual",
+	"Settings_Audio_MicMonitor": "Monitorizare microfon (sidetone)",
+	"Settings_Audio_Active": "Activ",
+	"Settings_Audio_Muted": "Amuțit",
 	"Settings_SectionTitle_Advanced": "Avansate",
 	"Settings_SectionTitle_Developer": "Dezvoltator",
 	"Settings_SectionTitle_Dashboard": "Dashboard",
@@ -81,7 +84,7 @@
 	"Advanced_PerfGraphInHMD": "Arată graficul de performanță al plăcii grafice în headset",
 	"Advanced_SaveFrameDataNow": "Salvează informațiile cadrelor",
 	"Explanation_DisableEnhancedPowerManagement": "Dezactivează gestionarea complexă de alimentare specifică Windows pentru dispozitivele USB SteamVR dacă întâmpini o problemă misterioasă de urmărire a mișcării sau o inabilitate de a asocia controlerele wireless. ",
-	"Explanation_QuickCalibrate": "Resetează rapid configurarea încăperii tale. Pentru RV la scala încăperii sau în picioare, limitele noi vor fi centrate pe headsetul tău de pe podeaua din centrul spațiului tău.",
+	"Explanation_QuickCalibrate": "Resetează rapid configurarea încăperii tale. Pentru RV la scara încăperii sau în picioare, limitele noi vor fi centrate pe casca ta de pe podeaua din centrul spațiului tău.",
 	"Explanation_RebootVive": "Resetează-ți headsetul Vive. Acest lucru poate remedia unele probleme ale headsetului legate de USB.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "Înlătură toate dispozitivele USB SteamVR pentru a reinstala driverele.",
 	"Explanation_ResetDismissableWarnings": "Avertismentele temporare sunt resetate și se vor reda la nevoie.",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Setează directorul cu configurații",
 	"MenuAction_SetLogDirectory": "Setează directorul pentru jurnale",
 	"Settings_Advanced_AllowSupersampleFiltering": "Advanced Supersample Filtering",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4 – Compatibilitate moștenită",
 	"Settings_Advanced_Paths_Header": "Căi",
 	"Settings_Advanced_Reset_Header": "Resetează",
 	"Settings_Advanced_Status_Header": "Verificare de stare",
@@ -111,7 +115,7 @@
 	"Settings_HomeAppDesc": "Bucură-te de medii virtuale, caracteristici sociale și multe altele.",
 	"Settings_LargeSpace": "Spațiu mare",
 	"Settings_LockedModeCheck": "Modul blocat",
-	"Settings_LockedModeDesc": "Permite randarea către headset atunci când calculatorul este blocat.",
+	"Settings_LockedModeDesc": "Permite randarea către cască atunci când calculatorul este blocat.",
 	"Settings_PauseOnStandby": "Pause VR when headset is idle",
 	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_OverlayRenderQuality": "Overlay Render Quality",
@@ -123,7 +127,7 @@
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Spațiu mediu",
 	"Settings_NightModeCheck": "Modul nocturn",
-	"Settings_NightModeDesc": "Redu luminozitatea headsetului până la ora 5:00 AM (sau până când SteamVR este repornit).",
+	"Settings_NightModeDesc": "Redu luminozitatea căștii până la ora 5:00 AM (sau până când SteamVR este repornit).",
 	"Settings_ShowPlaylistMenu": "Arată meniul pentru lista de redare",
 	"Settings_SmallSpace": "Spațiu mic",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
@@ -135,7 +139,7 @@
 	"StatusCheckInterval_Often": "Des (100 de msec.)",
 	"StatusCheckInterval_Seldom": "Rar (5 sec.)",
 	"Settings_KnockKnock_Button": "Cioc, cioc",
-	"Settings_KnockKnock_Desc": "Va permite oamenilor din afara RV să atragă atenția utilizatorului de headset",
+	"Settings_KnockKnock_Desc": "Această setare permite oamenilor din afara RV să atragă atenția utilizatorului căștii.",
 	"Settings_CreateSystemReport_Button": "Creează un raport de sistem",
 	"Settings_ViewLogs_Button": "Vezi jurnalele",
 	"Settings_Video_RefreshRate_Header": "Refresh Rate",
@@ -143,7 +147,7 @@
 	"Settings_Video_RefreshRate_Label_Hz": "Refresh Rate (Hz)",
 	"Settings_Video_RefreshRate_NotFound": "Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date.",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode.",
-	"Settings_Video_RefreshRate_EnableDirectModeAction": "Enable Direct Mode",
+	"Settings_Video_RefreshRate_EnableDirectModeAction": "Activează modul direct",
 	"Settings_Video_RefreshRate_OneSupported": "Only one refresh rate is supported for your system.",
 	"Settings_Video_AppResFooter": "Setarea din prezent randează fiecare ochi cu %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Netezirea mișcării",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Checking this option will disable asynchronous reprojection for this title.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Limitarea și predicția sunt gestionate automat în funcție de performanțele detectate. Cu toate acestea, este posibil ca unele aplicații să ofere o experiență de mai mare finețe dacă sunt forțate să ruleze la o frecvență de reîmprospătare mai mică fixă.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Comportamentul limitării",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Dacă selectezi aici o valoare de limitare fixă, limitarea automată va fi dezactivată pentru această aplicație.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fixă",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Auto",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Blochează frecvența de reîmprospătare a aplicației la (max cps):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Predicție suplimentară (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Reglează mișcarea capului și distanța interpupilară pentru a suprascrie scara percepută de aplicație.",
+	"Settings_PerApplication_WorldScale_Label": "Suprascrie scara globală",
+	"Settings_PerApplication_WorldScale_Off": "Oprită",
+	"Settings_PerApplication_WorldScale_Fine": "Fină",
+	"Settings_PerApplication_WorldScale_Normal": "Normală",
+	"Settings_PerApplication_WorldScale_Extreme": "Extremă",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% la %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Notă: schimbările pot necesita repornirea aplicației și/sau modifica interacțiunile în mod neașteptat. În funcție de aplicație, caracteristici precum aruncarea obiectelor pot fi afectate.",
+	"Settings_PerApplication_FovScale_Description": "Opțional: poți face un compromis și reduce câmpul vizual al aplicației pentru a obține o claritate mai bună. Notă: în multe cazuri, aplicația va necesita o repornire pentru ca modificarea să fie realizată corespunzător.",
+	"Settings_PerApplication_FovScale_Label": "Câmp vizual",
+	"Settings_PerApplication_FovScale_Multiplier": "Scară personalizată",
 	"Settings_MimeTypes_Pancake_Header": "Selectează o aplicație în care să lansezi aplicațiile 2D",
 	"Settings_Camera_EnableCamera": "Activează camera",
 	"Settings_Camera_ShowOnController": "Show Camera on Controller",
