--- a/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "允许同时通过 3.5 mm 插孔和离耳扬声器播放音频",
 	"Settings_Audio_Single": "单",
 	"Settings_Audio_Dual": "双",
+	"Settings_Audio_MicMonitor": "麦克风监测（侧音）",
+	"Settings_Audio_Active": "已启用",
+	"Settings_Audio_Muted": "已静音",
 	"Settings_SectionTitle_Advanced": "高级",
 	"Settings_SectionTitle_Developer": "开发者",
 	"Settings_SectionTitle_Dashboard": "主面板",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "设置配置路径",
 	"MenuAction_SetLogDirectory": "设置日志路径",
 	"Settings_Advanced_AllowSupersampleFiltering": "高级超级采样过滤",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4 传统兼容性",
 	"Settings_Advanced_Paths_Header": "路径",
 	"Settings_Advanced_Reset_Header": "重置",
 	"Settings_Advanced_Status_Header": "状态检测",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "勾选此选项将禁用此产品的异步再投影。",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "刷新率替代",
 	"Settings_Perapplication_RefreshRateOverride_Description": "勾选此选项将允许为此应用程序指定不同于全局设置的刷新率。",
+	"Settings_PerApplication_ThrottlingOverride_Description": "限制和预测是基于测量的性能自动处理的，不过，为了提供更为流畅的整体体验，强制在某个固定的较低速率运行对某些应用程序来说也许会有益处。",
+	"Settings_PerApplication_ThrottlingOverride_Label": "限制行为",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "在此处选择一个固定限制值将会禁用此应用程序的自动限制。",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "固定",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "自动",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "将应用程序帧率锁定为（最大 fps）：",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "额外预测（ms）：",
+	"Settings_PerApplication_WorldScale_Description": "通过调整头部运动和双眼间隔，替代应用程序感知的比例。",
+	"Settings_PerApplication_WorldScale_Label": "替代虚拟世界比例",
+	"Settings_PerApplication_WorldScale_Off": "关闭",
+	"Settings_PerApplication_WorldScale_Fine": "微调",
+	"Settings_PerApplication_WorldScale_Normal": "普通",
+	"Settings_PerApplication_WorldScale_Extreme": "大调",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% 至 %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "注意：进行更改可能需要重启应用程序，和/或可能会以非预期的方式修改交互方式。视应用程序而定，诸如投掷一类的功能可能会受到影响。",
+	"Settings_PerApplication_FovScale_Description": "可以选择降低应用程序的视场，牺牲一些外围视野换取清晰度。注意：在很多情况下，需要重启应用程序才能正确地应用更改。",
+	"Settings_PerApplication_FovScale_Label": "视场",
+	"Settings_PerApplication_FovScale_Multiplier": "自定义比例",
 	"Settings_MimeTypes_Pancake_Header": "选择一个要在其中启动 2D 应用程序的应用程序",
 	"Settings_Camera_EnableCamera": "启动摄像头",
 	"Settings_Camera_ShowOnController": "显示控制器摄像头",
