--- a/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Permite audio simultáneo a través del conector de 3,5 mm y los altavoces externos",
 	"Settings_Audio_Single": "Única",
 	"Settings_Audio_Dual": "Dual",
+	"Settings_Audio_MicMonitor": "Monitoreo de micrófono (tono lateral)",
+	"Settings_Audio_Active": "Activo",
+	"Settings_Audio_Muted": "Silenciado",
 	"Settings_SectionTitle_Advanced": "Avanzado",
 	"Settings_SectionTitle_Developer": "Desarrollador",
 	"Settings_SectionTitle_Dashboard": "Menú principal",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Establecer directorio de configuración",
 	"MenuAction_SetLogDirectory": "Establecer directorio de registro",
 	"Settings_Advanced_AllowSupersampleFiltering": "Filtrado de supermuestreo avanzado",
+	"Settings_Video_HDCP14LegacyCompatibility": "Compatibilidad heredada de HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Rutas",
 	"Settings_Advanced_Reset_Header": "Restablecer",
 	"Settings_Advanced_Status_Header": "Comprobación de estado",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Seleccionar esta opción desactivará la reproyección asíncrona para este título.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Anular la frecuencia de actualización",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opción permitirá especificar una frecuencia de actualización diferente de la preferencia global para esta aplicación.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "La limitación y la predicción se manejan automáticamente basándose en el rendimiento medido, sin embargo, algunas aplicaciones se pueden beneficiar de verse forzadas a funcionar a una velocidad fija más lenta, de modo que proporcionen una experiencia general más fluida.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Comportamiento de limitación",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Seleccionar aquí un valor fijo de limitación desactiva la limitación automática para esta aplicación.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fija",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automática",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Fijar la velocidad de fotogramas de la aplicación en (FPS máx.):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Predicción adicional (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Cambia la escala percibida de la aplicación al ajustar el movimiento de la cabeza y la separación de los ojos.",
+	"Settings_PerApplication_WorldScale_Label": "Cambiar el tamaño del mundo",
+	"Settings_PerApplication_WorldScale_Off": "Desactivada",
+	"Settings_PerApplication_WorldScale_Fine": "Fina",
+	"Settings_PerApplication_WorldScale_Normal": "Normal",
+	"Settings_PerApplication_WorldScale_Extreme": "Extrema",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s % al %2$s %]",
+	"Settings_PerApplication_WorldScale_Warning": "Nota: Estos cambios pueden requerir el reinicio de la aplicación y/o modificar las interacciones de formas inesperadas. Dependiendo de la aplicación se pueden ver afectadas características como el lanzamiento de objetos.",
+	"Settings_PerApplication_FovScale_Description": "Como alternativa se puede disminuir el campo de visión de la aplicación para encontrar un equilibrio entre visión periférica y claridad. Nota: En muchos casos la aplicación necesitará reiniciarse para que el cambio se aplique adecuadamente.",
+	"Settings_PerApplication_FovScale_Label": "Campo de visión",
+	"Settings_PerApplication_FovScale_Multiplier": "Escala personalizada",
 	"Settings_MimeTypes_Pancake_Header": "Selecciona una aplicación para lanzar aplicaciones 2D en",
 	"Settings_Camera_EnableCamera": "Activar cámara",
 	"Settings_Camera_ShowOnController": "Mostrar cámara en el mando",
