--- a/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Gör det möjligt att spela upp ljud både genom 3,5 mm-anslutningen och off-ear-högtalarna",
 	"Settings_Audio_Single": "Enkel",
 	"Settings_Audio_Dual": "Dubbel",
+	"Settings_Audio_MicMonitor": "Mikrofonövervakning (medlyssning)",
+	"Settings_Audio_Active": "Aktiv",
+	"Settings_Audio_Muted": "Tystad",
 	"Settings_SectionTitle_Advanced": "Avancerat",
 	"Settings_SectionTitle_Developer": "Utvecklare",
 	"Settings_SectionTitle_Dashboard": "Instrumentpanel",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Välj konfigmapp",
 	"MenuAction_SetLogDirectory": "Välj loggmapp",
 	"Settings_Advanced_AllowSupersampleFiltering": "Avancerad supersample-filtrering",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4 bakåtkompatibilitet",
 	"Settings_Advanced_Paths_Header": "Sökvägar",
 	"Settings_Advanced_Reset_Header": "Återställ",
 	"Settings_Advanced_Status_Header": "Statuskontroll",
@@ -177,10 +181,28 @@
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "Varning: Applikationen kommer köras i halverad bildfrekvens",
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "Aktivera rörelseutjämning för denna applikation",
 	"Settings_PerApplication_Reprojection_Header": "Återprojicering",
-	"Settings_PerApplication_Reprojection_Checkbox": "Använd äldre återprojiceringsläge",
+	"Settings_PerApplication_Reprojection_Checkbox": "Använd klassiskt återprojiceringsläge",
 	"Settings_PerApplication_Reprojection_Description": "Om du markerar detta alternativ, inaktiveras asynkron återprojicering för denna titeln.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Överskrid uppdateringsfrekvens",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Om du markerar detta alternativ, kan du specificera en annan uppdateringsfrekvens än den globala inställningen för denna applikation.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Begränsning och förutsägelse hanteras automatiskt baserat på uppmätt prestanda, men vissa applikationer kan dra nytta av att tvingas köra med en fast, långsammare hastighet för en jämnare upplevelse.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Begränsningsfunktion",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Om du väljer ett fast begränsningsvärde här kommer den automatiska begränsningen att inaktiveras för denna applikation.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fast",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automatisk",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Lås applikationens bildfrekvens till (max fps):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Ytterligare förutsägelse (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Åsidosätt applikationens upplevda skalning genom att justera huvudets rörelse och avstånd mellan ögonen.",
+	"Settings_PerApplication_WorldScale_Label": "Åsidosätt världsskalan",
+	"Settings_PerApplication_WorldScale_Off": "Av",
+	"Settings_PerApplication_WorldScale_Fine": "Diskret",
+	"Settings_PerApplication_WorldScale_Normal": "Normal",
+	"Settings_PerApplication_WorldScale_Extreme": "Extrem",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% till %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Obs! Ändringar kan kräva omstart av program och kan modifiera interaktioner på oväntade sätt. Beroende på applikationen kan vissa handlingar påverkas, som exempelvis att kasta.",
+	"Settings_PerApplication_FovScale_Description": "Sänk alternativt applikationens synfält (FOV) för att få klarhet istället för perifert synfält. Vanligtvis måste applikationen startas om för att ändringen ska kunna tillämpas korrekt.",
+	"Settings_PerApplication_FovScale_Label": "Synfält (FOV)",
+	"Settings_PerApplication_FovScale_Multiplier": "Anpassad skala",
 	"Settings_MimeTypes_Pancake_Header": "Välj en applikation att starta 2D-applikationer i",
 	"Settings_Camera_EnableCamera": "Aktivera kamera",
 	"Settings_Camera_ShowOnController": "Visa kamera på kontroll",
