--- a/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "允許同時透過 3.5mm 耳機輸出孔和離耳喇叭播音",
 	"Settings_Audio_Single": "單聲道",
 	"Settings_Audio_Dual": "雙聲道",
+	"Settings_Audio_MicMonitor": "麥克風監聽（側音）",
+	"Settings_Audio_Active": "啟用",
+	"Settings_Audio_Muted": "靜音",
 	"Settings_SectionTitle_Advanced": "進階",
 	"Settings_SectionTitle_Developer": "開發人員",
 	"Settings_SectionTitle_Dashboard": "主控台",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "設定設定檔目錄",
 	"MenuAction_SetLogDirectory": "設定紀錄檔目錄",
 	"Settings_Advanced_AllowSupersampleFiltering": "進階超取樣濾鏡",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4 舊版相容性",
 	"Settings_Advanced_Paths_Header": "路徑",
 	"Settings_Advanced_Reset_Header": "重設",
 	"Settings_Advanced_Status_Header": "狀態檢查",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "勾選此項將為此遊戲停用非同步再投影。",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "更新率覆寫",
 	"Settings_Perapplication_RefreshRateOverride_Description": "勾選此項將允許針對此應用程式設定不同於全域設定的更新率。",
+	"Settings_PerApplication_ThrottlingOverride_Description": "節流與預測是基於測得的效能來自動處理。然而，某些應用程式則更適合強制以固定的較低速率運作，如此可提供更順暢的整體體驗。",
+	"Settings_PerApplication_ThrottlingOverride_Label": "節流行為",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "在此選擇固定的節流值將停用此應用程式的自動節流。",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "固定",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "自動",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "鎖定應用程式幀率至（最高 FPS）：",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "額外預測（毫秒）：",
+	"Settings_PerApplication_WorldScale_Description": "調整頭部動作與兩眼間隔以覆寫應用程式原有的縮放比例。",
+	"Settings_PerApplication_WorldScale_Label": "覆寫世界比例",
+	"Settings_PerApplication_WorldScale_Off": "關閉",
+	"Settings_PerApplication_WorldScale_Fine": "微調",
+	"Settings_PerApplication_WorldScale_Normal": "一般",
+	"Settings_PerApplication_WorldScale_Extreme": "大調",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% 至 %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "請注意：進行變更可能需要重新啟動應用程式和 / 或對互動方式造成不可預期的調整。取決於應用程式，如投擲等功能可能受到影響。",
+	"Settings_PerApplication_FovScale_Description": "可選擇性地將應用程式的視野調窄，犧牲周邊視覺來換取清晰度。請注意：大部分情況下，都需要重新啟動應用程式才能正確地做出變更。",
+	"Settings_PerApplication_FovScale_Label": "視野",
+	"Settings_PerApplication_FovScale_Multiplier": "自訂比例",
 	"Settings_MimeTypes_Pancake_Header": "選擇用以啟動 2D 應用程式的應用程式",
 	"Settings_Camera_EnableCamera": "啟用鏡頭",
 	"Settings_Camera_ShowOnController": "顯示控制器鏡頭",
