--- a/resources/webinterface/dashboard/localization/vrmonitor_thai.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_thai.json
@@ -11,7 +11,7 @@
 	"Settings_Controller_ControllerBindingPrompt": "การกำหนดปุ่มคอนโทรลเลอร์",
 	"Settings_Controller_DefaultBinding": "ค่าเริ่มต้น",
 	"Settings_Controller_CustomBinding": "กำหนดเอง",
-	"Settings_ThumbstickDeadzone_Text": "Deadzone ของทัมสติก",
+	"Settings_ThumbstickDeadzone_Text": "เดดโซนของทัมสติก",
 	"Settings_ThumbstickDeadzone_Desc": "ปรับเดดโซนของทัมสติกทั้งหมด",
 	"Settings_DominantHand": "มือที่ถนัด",
 	"Settings_DominantHand_Left": "ซ้าย",
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "ทำให้สามารถรับฟังเสียงผ่านทั้งช่องเสียบหูฟังขนาด 3.5 มม. และลำโพงนอกหูได้พร้อม ๆ กัน",
 	"Settings_Audio_Single": "เดี่ยว",
 	"Settings_Audio_Dual": "คู่",
+	"Settings_Audio_MicMonitor": "การมอนิเตอร์ไมโครโฟน (ไซด์โทน)",
+	"Settings_Audio_Active": "เปิดใช้งานอยู่",
+	"Settings_Audio_Muted": "ปิดเสียง",
 	"Settings_SectionTitle_Advanced": "ขั้นสูง",
 	"Settings_SectionTitle_Developer": "ผู้พัฒนา",
 	"Settings_SectionTitle_Dashboard": "กระดานรวม",
@@ -94,13 +97,14 @@
 	"MenuAction_SetConfigDirectory": "กำหนดไดเรกทอรีของคอนฟิก",
 	"MenuAction_SetLogDirectory": "กำหนดไดเรกทอรีของล็อก",
 	"Settings_Advanced_AllowSupersampleFiltering": "การกรองซูเปอร์แซมเพิลขั้นสูง",
+	"Settings_Video_HDCP14LegacyCompatibility": "ความเข้ากันได้กับรุ่น HDCP 1.4 ดั้งเดิม",
 	"Settings_Advanced_Paths_Header": "ตำแหน่ง",
 	"Settings_Advanced_Reset_Header": "รีเซ็ต",
 	"Settings_Advanced_Status_Header": "ตรวจสอบสถานะ",
 	"Settings_ShowSettingsInDashboard": "แสดงแท็บการตั้งค่า",
 	"Settings_ShowPowerMenu": "แสดงตัวเลือกพลังงาน",
 	"Settings_AllowAppQuitting": "อนุญาตให้แอปออกจากกระดานรวมได้",
-	"Settings_ShowDesktopViews": "แสดงแท็บเดสก์ทอป",
+	"Settings_ShowDesktopViews": "แสดงแท็บเดสก์ท็อป",
 	"Settings_CheckForSteam": "ตรวจหา Steam",
 	"Settings_DebugInputBindings": "เปิดการใช้งานตัวเลือกดีบักในอินเตอร์เฟซผู้ใช้สำหรับการกำหนดปุ่มอุปกรณ์ควบคุม",
 	"Advanced_GlobalActionSetPriority": "เปิดการใช้งานอุปกรณ์ควบคุมหลักจากโอเวอร์เลย์ (รุ่นทดลอง)",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "การทำเครื่องหมายที่ตัวเลือกนี้จะปิดการใช้งานรีโปรเจกชันแบบอะซิงโครนัสสำหรับเกมนี้",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "เขียนทับอัตรารีเฟรช",
 	"Settings_Perapplication_RefreshRateOverride_Description": "การทำเครื่องหมายที่ตัวเลือกนี้จะทำให้ระบุอัตรารีเฟรชแตกต่างจากการตั้งค่าหลักสำหรับแอปพลิเคชันนี้ได้",
+	"Settings_PerApplication_ThrottlingOverride_Description": "การควบคุมปริมาณและการคาดคะเนมีการจัดการแบบอัตโนมัติตามประสิทธิภาพที่วัดได้ แต่บางแอปพลิเคชันอาจได้รับประโยชน์จากการบังคับให้ทำงานที่อัตราช้าลงแบบคงที่ เพื่อให้เกิดประสบการณ์โดยรวมที่ราบรื่นขึ้นกว่าเดิม",
+	"Settings_PerApplication_ThrottlingOverride_Label": "พฤติกรรมการควบคุมปริมาณ",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "หากเลือกค่าการควบคุมปริมาณแบบคงที่ไว้ที่นี่ ระบบจะปิดการใช้งานการควบคุมปริมาณโดยอัตโนมัติสำหรับแอปพลิเคชันนี้",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "คงที่",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "อัตโนมัติ",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "ล็อกอัตราเฟรมของแอปพลิเคชันไว้ที่ (FPS สูงสุด):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "การคาดคะเนเพิ่มเติม (มิลลิวินาที):",
+	"Settings_PerApplication_WorldScale_Description": "กำหนดค่าทับสัดส่วนที่แอปพลิเคชันรับรู้ โดยการปรับการเคลื่อนไหวของศีรษะและระยะห่างระหว่างดวงตา",
+	"Settings_PerApplication_WorldScale_Label": "กำหนดค่าทับสเกลโลก",
+	"Settings_PerApplication_WorldScale_Off": "ปิด",
+	"Settings_PerApplication_WorldScale_Fine": "ละเอียด",
+	"Settings_PerApplication_WorldScale_Normal": "ปกติ",
+	"Settings_PerApplication_WorldScale_Extreme": "สุดสเกล",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% ถึง %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "หมายเหตุ: การเปลี่ยนแปลงอาจจำเป็นต้องรีสตาร์ทแอปพลิเคชัน หรือปรับเปลี่ยนการโต้ตอบในลักษณะที่ไม่คาดคิด คุณสมบัติต่าง ๆ เช่น การขว้าง อาจได้รับผลกระทบ ทั้งนี้ขึ้นอยู่กับแอปพลิเคชัน",
+	"Settings_PerApplication_FovScale_Description": "อีกทางเลือกหนึ่งคือ ลดระยะการมองเห็นในฉากของแอปพลิเคชันเพื่อแลกการมองเห็นด้านข้างกับความชัดเจน หมายเหตุ: ในหลายกรณี การเปลี่ยนแปลงดังกล่าวจะยังไม่นำไปใช้อย่างถูกต้องจนกว่าจะเริ่มแอปพลิเคชันอีกครั้งก่อน",
+	"Settings_PerApplication_FovScale_Label": "ระยะการมองเห็นในฉาก",
+	"Settings_PerApplication_FovScale_Multiplier": "สเกลแบบกำหนดเอง",
 	"Settings_MimeTypes_Pancake_Header": "เลือกแอปพลิเคชันเพื่อเปิดแอปพลิเคชันแบบ 2D ใน",
 	"Settings_Camera_EnableCamera": "เปิดการใช้งานกล้อง",
 	"Settings_Camera_ShowOnController": "แสดงกล้องบนคอนโทรลเลอร์",
@@ -250,9 +272,9 @@
 	"Settings_Near": "ใกล้",
 	"Settings_Middle": "กลาง",
 	"Settings_Far": "ห่าง",
-	"Settings_DesktopScale": "ขนาดเดสก์ทอป",
+	"Settings_DesktopScale": "ขนาดเดสก์ท็อป",
 	"Settings_DashboardScale": "ขนาดกระดานรวม",
-	"Settings_DesktopDarkMode": "เดสก์ทอปโหมดมืด",
+	"Settings_DesktopDarkMode": "เดสก์ท็อปโหมดมืด",
 	"Settings_ToggleDarkMode": "สลับโหมดมืด",
 	"Settings_Dark": "มืด",
 	"SettingsTime_5s": "5 วินาที",
