--- a/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Дозволяє одночасний вивід звуку через динаміки й аудіороз’єм 3,5 мм",
 	"Settings_Audio_Single": "Одиничний",
 	"Settings_Audio_Dual": "Подвійний",
+	"Settings_Audio_MicMonitor": "Моніторинг мікрофона (власний голос)",
+	"Settings_Audio_Active": "Увімкнено",
+	"Settings_Audio_Muted": "Заглушено",
 	"Settings_SectionTitle_Advanced": "Розширені",
 	"Settings_SectionTitle_Developer": "Розробник",
 	"Settings_SectionTitle_Dashboard": "Панель навігації",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Вказати теку конфігурації",
 	"MenuAction_SetLogDirectory": "Вказати теку журналів",
 	"Settings_Advanced_AllowSupersampleFiltering": "Розширене фільтрування надлишкової вибірки",
+	"Settings_Video_HDCP14LegacyCompatibility": "Режим сумісності з HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Шляхи",
 	"Settings_Advanced_Reset_Header": "Скинути",
 	"Settings_Advanced_Status_Header": "Перевірка стану",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Вибір цього параметру вимкне асинхронну репроекцію для цього застосунку.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Перезапис частоти оновлення",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Вибір цього параметра дозволить вказати іншу частоту оновлення у глобальних налаштуваннях для цього застосунку.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Регулювання та розрахунок здійснюються автоматично на основі виміряної продуктивності. Однак у випадку деяких застосунків примусовий запуск із фіксованою меншою частотою кадрів може стати в пригоді для забезпечення кращого досвіду загалом.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Поведінка регулювання",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Встановлення фіксованого значення регулювання вимкне автоматичне регулювання для цього застосунку.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Фікс.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Авто",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Максимальна частота кадрів застосунку:",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Додатковий розрахунок (мс):",
+	"Settings_PerApplication_WorldScale_Description": "Перевизначати стандартне масштабування застосунку шляхом регулювання руху голови й відстані між очима.",
+	"Settings_PerApplication_WorldScale_Label": "Перевизначати масштабування середовища",
+	"Settings_PerApplication_WorldScale_Off": "Вимк.",
+	"Settings_PerApplication_WorldScale_Fine": "Точн.",
+	"Settings_PerApplication_WorldScale_Normal": "Звичайн.",
+	"Settings_PerApplication_WorldScale_Extreme": "Екстрем.",
+	"Settings_PerApplication_WorldScale_Range": "[Від %1$s% до %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Зауважте: для застосування змін може знадобитися перезапуск застосунку. Ці зміни можуть непередбачувано вплинути на взаємодію з оточенням у ВР. Залежно від застосунку, це може вплинути на такі функції, як кидання.",
+	"Settings_PerApplication_FovScale_Description": "Ви можете зменшити значення поля зору застосунку для покращення чіткості ціною погіршення периферійного зору. Зауважте: у багатьох випадках для належного застосування зміни знадобиться перезапуск застосунку.",
+	"Settings_PerApplication_FovScale_Label": "Поле зору",
+	"Settings_PerApplication_FovScale_Multiplier": "Нестандартне масштабування",
 	"Settings_MimeTypes_Pancake_Header": "Оберіть застосунок, у якому слід запустити двомірний застосунок",
 	"Settings_Camera_EnableCamera": "Увімкнути камеру",
 	"Settings_Camera_ShowOnController": "Показати камеру на контролері",
