--- a/resources/webinterface/dashboard/localization/webhelper_japanese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_japanese.json
@@ -15,8 +15,8 @@
 	"Button_Retry": "再試行",
 	"Settings": "設定",
 	"PowerMenuResetSeatedPosition": "着席位置のリセット",
-	"PowerMenuResetStandingPosition": "Reset Standing Position",
-	"Resetting_Countdown": "Resetting...",
+	"PowerMenuResetStandingPosition": "立ち位置をリセット",
+	"Resetting_Countdown": "リセットしています...",
 	"PowerMenuTurnOffController": "コントローラの電源を切る",
 	"PowerMenuQuitSceneApp": "%1$sを終了",
 	"PowerMenuQuitSceneApp_NoApp": "アプリを終了",
