--- a/resources/webinterface/dashboard/localization/webhelper_romanian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_romanian.json
@@ -16,17 +16,17 @@
 	"Settings": "Setări",
 	"PowerMenuResetSeatedPosition": "Resetează poziția din șezut",
 	"PowerMenuResetStandingPosition": "Resetează poziția din picioare",
-	"Resetting_Countdown": "Resetting...",
+	"Resetting_Countdown": "Se resetează...",
 	"PowerMenuTurnOffController": "Oprește controlerul",
 	"PowerMenuQuitSceneApp": "Ieși din %1$s",
-	"PowerMenuQuitSceneApp_NoApp": "Exit App",
+	"PowerMenuQuitSceneApp_NoApp": "Părăsește aplicația",
 	"PowerMenuExitVR": "Ieși din RV",
 	"PowerMenuCancel": "Anulează",
 	"PowerMenuSteamOverlay": "Steam",
 	"PowerMenuHeader": "Meniul de alimentare",
 	"IPD_Description": "Distanța dintre lentile",
 	"NoSteamWarning": "Steam nu este disponibil. Este posibil ca unele caracteristici să fie dezactivate.",
-	"WakingUpBaseStations": "Se trezesc stațiile de bază...",
+	"WakingUpBaseStations": "Se activează stațiile de bază...",
 	"/input/joystick": "Joystick",
 	"/input/trackpad": "Trackpad",
 	"/input/trigger": "Trigger",
@@ -69,6 +69,6 @@
 	"OriginString_ControllerSource": "%3$s %2$s",
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
-	"KeyboardDone": "Done",
+	"KeyboardDone": "Gata",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
