--- a/resources/webinterface/dashboard/localization/webhelper_turkish.json
+++ b/resources/webinterface/dashboard/localization/webhelper_turkish.json
@@ -16,7 +16,7 @@
 	"Settings": "Ayarlar",
 	"PowerMenuResetSeatedPosition": "Oturma Pozisyonunu Sıfırla",
 	"PowerMenuResetStandingPosition": "Ayakta Durma Pozisyonunu Sıfırla",
-	"Resetting_Countdown": "Resetting...",
+	"Resetting_Countdown": "Sıfırlanıyor...",
 	"PowerMenuTurnOffController": "Kontrolcüyü Kapat",
 	"PowerMenuQuitSceneApp": "Çıkış: %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Uygulamadan Çık",
@@ -52,7 +52,7 @@
 	"/user/hand/secondary": "Diğer El",
 	"/user/hand/any": "Her İki El",
 	"/user/stylus": "Stylus",
-	"/user/gamepad": "Gamepad",
+	"/user/gamepad": "Oyun Kumandası",
 	"/user/foot/left": "Sol Ayak",
 	"/user/foot/right": "Sağ Ayak",
 	"/user/shoulder/left": "Sol Omuz",
