--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_french.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_french.json
@@ -13,12 +13,12 @@
 	"pairing_nodongles_instr": "Assurez-vous que votre casque est connecté.",
 	"pairing_selectdevice_title": "Sélectionnez le type de contrôleur",
 	"pairingdevice_knuckles_controllername": "Contrôleur Valve Index",
-	"pairingdevice_vivewand_shortname": "Contrôleur HTC Vive",
-	"pairingdevice_vivetracker_shortname": "Tracker HTC Vive",
+	"pairingdevice_vivewand_shortname": "Contrôleur HTC VIVE",
+	"pairingdevice_vivetracker_shortname": "Tracker HTC VIVE",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
 	"pairingdevice_a_knuckles_controllername": "un contrôleur Valve Index",
-	"pairingdevice_a_vivewand_shortname": "un contrôleur HTC Vive",
-	"pairingdevice_a_vivetracker_shortname": "un tracker HTC Vive",
+	"pairingdevice_a_vivewand_shortname": "un contrôleur HTC VIVE",
+	"pairingdevice_a_vivetracker_shortname": "un tracker HTC VIVE",
 	"pairingdevice_a_logitechvrinkpilotedition_shortname": "un Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "Associer %1$s",
 	"pairinginstructions_generic_desc": "Réglez votre contrôleur en mode association",
