--- a/resources/webinterface/dashboard/localization/bindingui_romanian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_romanian.json
@@ -18,7 +18,7 @@
   "SourceInputMode_Force_Sensor": "Senzor de forță",
   "SourceInputMode_trigger": "Trigger",
   "SourceInputMode_Click": "Clic",
-  "SourceInputMode_TriggerClick": "Click",
+  "SourceInputMode_TriggerClick": "Clic",
   "SourceInputMode_Touch": "Atingere",
   "SourceInputMode_Held": "Ținut",
   "SourceInputMode_Single": "Singur",
@@ -30,11 +30,11 @@
   "SourceInputMode_West": "Vest",
   "SourceInputMode_Center": "Centru",
   "SourceInputMode_Scroll": "Derulare",
-  "SourceInputMode_Trackpad_Scroll": "Scroll",
+  "SourceInputMode_Trackpad_Scroll": "Derulare",
   "SourceInputMode_Position": "Poziție",
   "SourceInputMode_Pull": "Tragere",
   "SourceInputMode_Force": "Forță",
-  "SourceInputMode_Proximity": "Proximity",
+  "SourceInputMode_Proximity": "Proximitate",
   "SourceInputMode_Edit": "Editează",
   "SourceInputMode_AddMode": "Adaugă",
   "SourceInputMode_Delete": "Şterge",
@@ -50,56 +50,56 @@
   "SourceInputMode_TouchInitialState": "Acțiunea de atingere ținută inițial:",
   "SourceInputMode_OverlapPercent": "Procentaj de suprapunere:",
   "SourceInputMode_DeadzonePercent": "Procentaj pentru zona moartă:",
-  "SourceInputMode_Maxzone": "Max zone Percentage:",
-  "SourceInputMode_Exponent": "Curve Exponent:",
+  "SourceInputMode_Maxzone": "Procentaj maxim pentru zonă:",
+  "SourceInputMode_Exponent": "Exponentul curbei:",
   "SourceInputMode_StickyDpad": "Persistă padul direcțional după activare",
   "SourceInputMode_LongPressDelay": "Întârziere pentru apăsare lungă:",
   "SourceInputMode_DoublePressDelay": "Întârziere pentru apăsare dublă:",
-  "SourceInputMode_DeadZone": "DeadZone",
-  "SourceInputMode_button_tooltip": "Use this control like a Button. Handles touches, clicks, holds, double clicks, and long presses.",
-  "SourceInputMode_trackpad_tooltip": "Use this control like a Trackpad. XY positioning, touches, and presses.",
-  "SourceInputMode_joystick_tooltip": "Use this control like a Joystick. XY positioning, touches, and presses.",
-  "SourceInputMode_toggle_button_tooltip": "Use this control like a toggle. One press for on, one press for off.",
-  "SourceInputMode_dpad_click_tooltip": "Use this control like a DPAD being clicked. Clicks in North, East, South, and West quadrants.",
-  "SourceInputMode_dpad_touch_tooltip": "Use this control like a DPAD being touched. North, East, South, and West quadrants.",
-  "SourceInputMode_dpad_tooltip": "Use this control like a DPAD being clicked or touched. Split up in North, East, South, and West quadrants.",
-  "SourceInputMode_scroll_tooltip": "Use this control as a scroll wheel. Reports horizontal and vertical scrolling amounts.",
-  "SourceInputMode_Force_Sensor_tooltip": "Gives analog actions a 0-1 value indicating how much force the user is applying to the control.",
-  "SourceInputMode_trigger_tooltip": "Use this control as if it was a trigger. Touch (or any press), Click if there is a physical click at the end of the trigger, and the amount (0-1) the trigger is depressed.",
-  "SourceInputMode_Grab_tooltip": "Combines capacitive sensors and force sensors to report a more reliable grab.",
-  "SourceInputMode_Scalar_Constant_tooltip": "Allows you to use a digital (on/off) control to set an analog (0-1) value.",
-  "SourceInputMode_Click_tooltip": "For controls that are physical buttons this engages on press down. Otherwise engages when a configurable threshold has been passed.",
-  "SourceInputMode_TriggerClick_tooltip": "The physical click at the end of a trigger.",
-  "SourceInputMode_Touch_tooltip": "True when the control is being touched.",
-  "SourceInputMode_Held_tooltip": "True while the button is down before the amount of time specified in Long Press Delay has passed.",
-  "SourceInputMode_Single_tooltip": "For controls that are physical buttons this engages on press down. Otherwise engages when a configurable threshold has been passed.",
-  "SourceInputMode_Double_tooltip": "True after a double click has been executed (down / up and down / up again)",
-  "SourceInputMode_Long_tooltip": "True when a click has been engaged for the configured amount of seconds.",
-  "SourceInputMode_North_tooltip": "The North or top section of the control.",
-  "SourceInputMode_South_tooltip": "The South or bottom section of the control.",
-  "SourceInputMode_East_tooltip": "The East or right section of the control.",
-  "SourceInputMode_West_tooltip": "The West or left section of the control.",
-  "SourceInputMode_Center_tooltip": "The center of the control.",
-  "SourceInputMode_Position_tooltip": "The position you are touching on a touchpad or the position you've pushed a joystick to.",
-  "SourceInputMode_Pull_tooltip": "A value (0-1) representing what percentage you have depressed a trigger.",
-  "SourceInputMode_Force_tooltip": "The amount of force (0-1) applied to the control.",
-  "SourceInputMode_Proximity_tooltip": "True when the control is close to something.",
-  "SourceInputMode_ClickActivateThreshold_tooltip": "The threshold that must be passed for the click to be true.",
-  "SourceInputMode_TouchActivateThreshold_tooltip": "The threshold that must be passed for the touch to be true.",
-  "SourceInputMode_ClickDeactivateThreshold_tooltip": "The threshold that the value must fall under for the click to be false.",
-  "SourceInputMode_TouchDeactivateThreshold_tooltip": "The threshold that the value must fall under for the touch to be false.",
-  "SourceInputMode_OverlapPercent_tooltip": "The percentage of side to side overlap that the NESW zones will have.",
-  "SourceInputMode_DeadzonePercent_tooltip": "The percentage from the center that the stick will need to pass to engage.",
-  "SourceInputMode_StickyDpad_tooltip": "If you engage one zone then you can not accidentally engage another zone until you have disengaged. (ex. pushing stick North will engage North but if you then push the stick West it will remain engaging North until you release)",
-  "SourceInputMode_LongPressDelay_tooltip": "The amount of time the button must be down before the long click is engaged.",
-  "SourceInputMode_DoublePressDelay_tooltip": "The maximum amount of time between the end of the first click and the start of the second.",
-  "SourceInputMode_DeadZone_tooltip": "The percentage from the center that the zones will need to pass to trigger.",
-  "SourceInputMode_InvertYAxis_tooltip": "(ex. a value of -0.75 would become 0.75)",
-  "SourceInputMode_InvertXAxis_tooltip": "(ex. a value of -0.75 would become 0.75)",
-  "SourceInputMode_StickyClick_tooltip": "Keep thumbstick clicked while stick is deflected",
-  "SourceInputMode_StickyClick_Activate_tooltip": "How much you have to deflect the stick to engage.",
-  "SourceInputMode_StickyClick_Deactivate_tooltip": "How much you have to relax the stick for it to disengage.",
-  "SourceInputMode_TouchyClick_tooltip": "Keep button clicked as long as it's touched",
+  "SourceInputMode_DeadZone": "Zonă moartă",
+  "SourceInputMode_button_tooltip": "Utilizează acest control ca un buton. Poate fi folosit la atingere, clic, ținere, dublu-clic și apăsare lungă.",
+  "SourceInputMode_trackpad_tooltip": "Utilizează acest control ca un trackpad. Poziționare XY, atingere și apăsare.",
+  "SourceInputMode_joystick_tooltip": "Utilizează acest control ca un joystick. Poziționare XY, atingere și apăsare.",
+  "SourceInputMode_toggle_button_tooltip": "Utilizează acest control ca un comutator. O apăsare pentru activare, o apăsare pentru dezactivare.",
+  "SourceInputMode_dpad_click_tooltip": "Utilizează acest control ca un DPAD pe care faci clic în cadranele nord, est, sud și vest.",
+  "SourceInputMode_dpad_touch_tooltip": "Utilizează acest control ca un DPAD pe care atingi în cadranele nord, est, sud și vest.",
+  "SourceInputMode_dpad_tooltip": "Utilizează acest control ca un DPAD pe care faci clic sau îl atingi, divizat în cadranele nord, est, sud și vest.",
+  "SourceInputMode_scroll_tooltip": "Utilizează acest control ca o rotiță de derulare. Raportează valorile de derulare orizontală și verticală.",
+  "SourceInputMode_Force_Sensor_tooltip": "Furnizează acțiunilor analoge o valoare 0-1 care indică câtă forță aplică utilizatorul acestui control.",
+  "SourceInputMode_trigger_tooltip": "Utilizează acest control ca pe un trigger. Atinge (sau apasă) sau dă clic dacă există un clic fizic la capătul triggerului și valoarea forței (0-1) de apăsare a triggerului.",
+  "SourceInputMode_Grab_tooltip": "Combină senzorii capacitivi și senzorii de forță pentru a raporta o prindere de mai mare încredere.",
+  "SourceInputMode_Scalar_Constant_tooltip": "Permite utilizarea unui control digital (pornit/oprit) pentru a configura o valoare analogă (0-1).",
+  "SourceInputMode_Click_tooltip": "Pentru controalele care sunt butoanele fizice, se activează la apăsare. Altfel, se activează la depășirea unui prag configurabil.",
+  "SourceInputMode_TriggerClick_tooltip": "Clic fizic la capătul triggerului.",
+  "SourceInputMode_Touch_tooltip": "„Adevărat” la atingerea controlului.",
+  "SourceInputMode_Held_tooltip": "„Adevărat” în timp ce butonul este apăsat înainte să fie depășită durata de timp specificată pentru „apăsare lungă”.",
+  "SourceInputMode_Single_tooltip": "Pentru controalele care sunt butoanele fizice, se activează la apăsare. Altfel, se activează la depășirea unui prag configurabil.",
+  "SourceInputMode_Double_tooltip": "„Adevărat” după executarea unui dublu-clic (jos/sus și jos/sus din nou)",
+  "SourceInputMode_Long_tooltip": "„Adevărat” dacă un clic a fost efectuat cu durata numărului configurat de secunde.",
+  "SourceInputMode_North_tooltip": "Nordul sau partea de sus a controlului.",
+  "SourceInputMode_South_tooltip": "Sudul sau partea de jos a controlului.",
+  "SourceInputMode_East_tooltip": "Estul sau partea dreaptă a controlului.",
+  "SourceInputMode_West_tooltip": "Vestul sau partea stîngă a controlului.",
+  "SourceInputMode_Center_tooltip": "Centrul controlului.",
+  "SourceInputMode_Position_tooltip": "Poziția pe care o atingi pe touchpad sau poziția în care ai împins joystickul.",
+  "SourceInputMode_Pull_tooltip": "O valoare (0-1) care reprezintă procentajul de apăsare a trăgaciului.",
+  "SourceInputMode_Force_tooltip": "Valoarea forței (0-1) aplicată controlului.",
+  "SourceInputMode_Proximity_tooltip": "„Adevărat” când controlul se află în apropiere de ceva.",
+  "SourceInputMode_ClickActivateThreshold_tooltip": "Valoarea prag care trebuie depășită pentru a fi „adevărat” la efectuarea clicului.",
+  "SourceInputMode_TouchActivateThreshold_tooltip": "Valoarea prag care trebuie depășită pentru a fi „adevărat” la efectuarea atingerii.",
+  "SourceInputMode_ClickDeactivateThreshold_tooltip": "Valoarea prag sub care este „fals” la efectuarea clicului.",
+  "SourceInputMode_TouchDeactivateThreshold_tooltip": "Valoarea prag sub care este „fals” la efectuarea apăsării.",
+  "SourceInputMode_OverlapPercent_tooltip": "Procentajul de suprapunere a marginilor pe care îl vor avea noile zone NESV.",
+  "SourceInputMode_DeadzonePercent_tooltip": "Procentajul plecând de la centru pe care stickul trebuie să-l depășească pentru a se activa.",
+  "SourceInputMode_StickyDpad_tooltip": "Dacă activezi o zonă nu poți activa accidental o altă zonă până când nu ai dezactivat (de exemplu, deplasând stickul spre nord, vei activa nordul, dar dacă apoi împingi stickul spre vest, nordul va rămâne activat până când eliberezi stickul)",
+  "SourceInputMode_LongPressDelay_tooltip": "Durata pentru care butonul trebuie apăsat pentru a activa apăsarea lungă.",
+  "SourceInputMode_DoublePressDelay_tooltip": "Durata maximă de timp între finalul primului clic și începera celui de-al doilea.",
+  "SourceInputMode_DeadZone_tooltip": "Procentajul plecând de la centru pe care zonele trebuie să-l depășească pentru a se activa.",
+  "SourceInputMode_InvertYAxis_tooltip": "(de exemplu o valoare de -0,75 va deveni 0,75)",
+  "SourceInputMode_InvertXAxis_tooltip": "(de exemplu o valoare de -0,75 va deveni 0,75)",
+  "SourceInputMode_StickyClick_tooltip": "Menține apăsat stickul în timp ce este deviat",
+  "SourceInputMode_StickyClick_Activate_tooltip": "Cât de mult trebuie să deviezi stickul pentru a se activa.",
+  "SourceInputMode_StickyClick_Deactivate_tooltip": "Cât de mult trebuie să eliberezi stickul pentru a se dezactiva.",
+  "SourceInputMode_TouchyClick_tooltip": "Menține butonul apăsat cât timp este atins",
   "SourceInputMode_ButtonModeInputForce_Click_tooltip": "Optionally get the value for this from the force sensor (how much pressure is applied) or the capacitive sensor (how close a finger is).",
   "SourceInputMode_CapsenseEnableThreshold_tooltip": "At what point to enable the grab due to a finger being close to the grip.",
   "SourceInputMode_GrabThreshold_tooltip": "The combined activation thresholds for the capacitive sensor and the force sensor.",
