--- a/resources/webinterface/dashboard/localization/dashboard_dutch.json
+++ b/resources/webinterface/dashboard/localization/dashboard_dutch.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Video-instellingen",
   "Desktop": "Bureaublad",
   "Desktop_X": "Bureaublad %1$s",
+  "NoDesktopFound": "Geen desktop gevonden.",
+  "DesktopViewsUpdating": "Desktopweergaves updaten...",
+  "AddView": "Weergave toevoegen",
+  "CloseView": "Weergave sluiten",
+  "DockHere": "Hier koppelen",
+  "DockOnLeftController": "Linkercontroller koppelen",
+  "UndockFromLeftController": "Linkercontroller loskoppelen",
+  "DockedOnLeftController": "Linkercontroller is gekoppeld.",
+  "DockOnRightController": "Rechtercontroller koppelen",
+  "UndockFromRightController": "Rechtercontroller loskoppelen",
+  "DockedOnRightController": "Rechtercontroller is gekoppeld.",
+  "Undock": "Loskoppelen",
   "ShowKeyboardLabel": "Toetsenbord",
   "ShowKeyboardTooltip": "Toetsenbord tonen",
   "HideKeyboardTooltip": "Toetsenbord verbergen",
   "Size": "Grootte",
+  "Move": "Verplaatsen",
   "Mute": "Dempen",
   "Unmute": "Dempen opheffen",
   "Mute_Headset": "Headset dempen",
