--- a/resources/webinterface/dashboard/localization/dashboard_romanian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_romanian.json
@@ -27,12 +27,12 @@
   "Desktops": "Desktops",
   "Volume": "Volume",
   "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
+  "Store": "Magazin",
   "BrowseAllGames": "Browse All Games",
   "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
+  "StoreSection_TopSingleplayer": "Cele mai bune jocuri pentru un jucător",
+  "StoreSection_TopMultiplayer": "Cele mai bune titluri multiplayer",
+  "StoreSection_TopFree": "Cele mai bune jocuri gratuite",
   "Library": "Library",
   "RecentlyPlayed": "Recently Played",
   "Return_To_Game": "Return to Game",
@@ -41,17 +41,30 @@
   "App_Video_Settings": "Video Settings",
   "Desktop": "Desktop",
   "Desktop_X": "Desktop %1$s",
+  "NoDesktopFound": "Nu a fost găsit niciun desktop.",
+  "DesktopViewsUpdating": "Se actualizează vizualizările desktopului...",
+  "AddView": "Adaugă o vizualizare",
+  "CloseView": "Închide vizualizarea",
+  "DockHere": "Fixează aici",
+  "DockOnLeftController": "Fixează pe controlerul stâng",
+  "UndockFromLeftController": "Detașează de pe controlerul stâng",
+  "DockedOnLeftController": "Fixat pe controlerul stâng.",
+  "DockOnRightController": "Fixează pe controlerul drept",
+  "UndockFromRightController": "Detașează de pe controlerul drept",
+  "DockedOnRightController": "Fixat pe controlerul drept.",
+  "Undock": "Detașează",
   "ShowKeyboardLabel": "Keyboard",
   "ShowKeyboardTooltip": "Show Keyboard",
   "HideKeyboardTooltip": "Hide Keyboard",
   "Size": "Size",
+  "Move": "Mută",
   "Mute": "Mute",
   "Unmute": "Unmute",
   "Mute_Headset": "Mute Headset",
   "Unmute_Headset": "Unmute Headset",
   "WelcomeHeader": "No Games?",
   "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
+  "WelcomeBrowseStore": "Răsfoiește magazinul",
   "WelcomeInstall": "Install Games",
   "Play": "Play"
 }
