--- a/resources/webinterface/dashboard/localization/dashboard_turkish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_turkish.json
@@ -1,57 +1,70 @@
 {
   "UI_Unknown": "Bilinmiyor",
-  "Now_Starting": "Sonraki",
-  "Now_Starting_HomeApp": "Eve Dönülüyor",
+  "Now_Starting": "Sıradaki",
+  "Now_Starting_HomeApp": "Eve Dönülüyor:",
   "Now_Playing": "Oyunda",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
+  "Now_Playing_HomeApp": "Ev",
+  "Now_Quitting": "Çıkılıyor",
   "Now_Waiting": "Bekleniyor...",
   "BackToApp": "Uygulamaya Geri Dön",
   "Toggle_Room_View": "Oda Görünüşünü Aç/Kapat",
-  "GoHome": "Go Home",
+  "GoHome": "Eve Git",
   "QuitApp": "Uygulamadan Çık",
   "DashboardPower_Header": "Sistem",
   "BindingCallout_Header": "Kontrolleri Göster",
   "MutedLabel": "Susturuldu",
-  "MuteAudioMirror": "Mute Audio Mirror",
-  "UnmuteAudioMirror": "Unmute Audio Mirror",
-  "HeadsetVolume": "Headset Volume",
-  "AudioMirrorVolume": "Audio Mirror Volume",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
-  "MicrophoneVolume": "Microphone Volume",
-  "SteamVR_Home": "SteamVR Ev",
-  "Exit_SteamVR_Home": "SteamVR Ev'den Çık",
+  "MuteAudioMirror": "Yansıma Sesi Sustur",
+  "UnmuteAudioMirror": "Yansıma Sesi Aç",
+  "HeadsetVolume": "Başlık Sesi",
+  "AudioMirrorVolume": "Ses Yansıtmasının Ses Düzeyi",
+  "MuteMicrophone": "Mikrofonun Sesini Kapat",
+  "UnmuteMicrophone": "Mikrofonun Sesini Aç",
+  "MicrophoneVolume": "Mikrofon Ses Düzeyi",
+  "SteamVR_Home": "SteamVR Evi",
+  "Exit_SteamVR_Home": "SteamVR Evi'nden Çık",
   "Exit_Game": "Oyundan Çık",
   "Menu": "Menü",
-  "Desktops": "Masaüstü bilgisayarlar",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
+  "Desktops": "Masaüstleri",
+  "Volume": "Ses Düzeyi",
+  "X_More_Overlays": "%1$s Arayüz Daha",
+  "Store": "Mağaza",
+  "BrowseAllGames": "Tüm Oyunlara Göz At",
+  "BrowseAll": "Tümüne Göz At",
+  "StoreSection_TopSingleplayer": "En İyi Tek Oyunculu Oyunlar",
+  "StoreSection_TopMultiplayer": "En İyi Çok Oyunculu Oyunlar",
+  "StoreSection_TopFree": "En İyi Ücretsiz Oyunlar",
   "Library": "Kütüphane",
-  "RecentlyPlayed": "En Son Oynanan",
+  "RecentlyPlayed": "En Son Oynananlar",
   "Return_To_Game": "Oyuna Geri Dön",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
+  "Return_To_Home": "Eve Geri Dön",
+  "Controller_Bindings": "Kontrolcü Atamaları",
   "App_Video_Settings": "Video Ayarları",
   "Desktop": "Masaüstü",
-  "Desktop_X": "Masaüstü%1$s",
+  "Desktop_X": "Masaüstü %1$s",
+  "NoDesktopFound": "Masaüstü bulunamadı.",
+  "DesktopViewsUpdating": "Masaüstü görünümleri güncelleniyor...",
+  "AddView": "Görünüm Ekle",
+  "CloseView": "Görünümü Kapat",
+  "DockHere": "Buraya Yerleştir",
+  "DockOnLeftController": "Sol Kontrolcüye Yerleştir",
+  "UndockFromLeftController": "Sol Kontrolcüden Çıkar",
+  "DockedOnLeftController": "Sol kontrolcüye yerleştirildi.",
+  "DockOnRightController": "Sağ Kontrolcüye Yerleştir",
+  "UndockFromRightController": "Sağ Kontrolcüden Çıkar",
+  "DockedOnRightController": "Sağ kontrolcüye yerleştirildi.",
+  "Undock": "Çıkar",
   "ShowKeyboardLabel": "Klavye",
   "ShowKeyboardTooltip": "Klavyeyi Göster",
   "HideKeyboardTooltip": "Klavyeyi Sakla",
   "Size": "Boyut",
+  "Move": "Hareket Ettir",
   "Mute": "Sustur",
-  "Unmute": "Sesini Aç",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games",
-  "Play": "Play"
+  "Unmute": "Sesi Aç",
+  "Mute_Headset": "Başlığın Sesini Kapat",
+  "Unmute_Headset": "Başlığın Sesini Aç",
+  "WelcomeHeader": "Oyununuz yok mu?",
+  "WelcomeMessage": "Donanımınız değişse bile sizin olmaya devam edecek VR oyunlarının yer aldığı bir kütüphane oluşturmak hiç bu kadar kolay olmamıştı.",
+  "WelcomeBrowseStore": "Mağazaya Göz At",
+  "WelcomeInstall": "Oyunları Yükle",
+  "Play": "Oyna"
 }
