--- a/resources/webinterface/dashboard/localization/dashboard_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_ukrainian.json
@@ -41,10 +41,23 @@
   "App_Video_Settings": "Налаштування відео",
   "Desktop": "Комп’ютер",
   "Desktop_X": "Робочий стіл %1$s",
+  "NoDesktopFound": "Робочий стіл не знайдено.",
+  "DesktopViewsUpdating": "Оновлення меню робочого столу…",
+  "AddView": "Додати меню",
+  "CloseView": "Закрити меню",
+  "DockHere": "Закріпити тут",
+  "DockOnLeftController": "Закріпити за лівим контролером",
+  "UndockFromLeftController": "Відкріпити від лівого контролера",
+  "DockedOnLeftController": "Закріплено за лівим контролером.",
+  "DockOnRightController": "Закріпити за правим контролером",
+  "UndockFromRightController": "Відкріпити від правого контролера",
+  "DockedOnRightController": "Закріплено за правим контролером.",
+  "Undock": "Відкріпити",
   "ShowKeyboardLabel": "Клавіатура",
   "ShowKeyboardTooltip": "Показати клавіатуру",
   "HideKeyboardTooltip": "Приховати клавіатуру",
   "Size": "Розмір",
+  "Move": "Перемістити",
   "Mute": "Приглушити",
   "Unmute": "Усунути приглушення",
   "Mute_Headset": "Приглушити шолом",
