--- a/resources/webinterface/dashboard/localization/vrmonitor_czech.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_czech.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Umožňuje přehrávání zvuku zároveň skrze výstup 3,5 mm a nepřímá sluchátka",
 	"Settings_Audio_Single": "Neduplikovat",
 	"Settings_Audio_Dual": "Duplikovat",
+	"Settings_Audio_MicMonitor": "Monitorování mikrofonu (naslouchání)",
+	"Settings_Audio_Active": "Aktivní",
+	"Settings_Audio_Muted": "Umlčeno",
 	"Settings_SectionTitle_Advanced": "Pokročilé",
 	"Settings_SectionTitle_Developer": "Pro vývojáře",
 	"Settings_SectionTitle_Dashboard": "Hlavní obrazovka",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Nastavit adresář nastavení",
 	"MenuAction_SetLogDirectory": "Nastavit adresář záznamů",
 	"Settings_Advanced_AllowSupersampleFiltering": "Pokročilý supersampling",
+	"Settings_Video_HDCP14LegacyCompatibility": "Zpětná kompatibilita s HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Cesty",
 	"Settings_Advanced_Reset_Header": "Reset",
 	"Settings_Advanced_Status_Header": "Kontrola stavu",
@@ -177,10 +181,28 @@
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "Upozornění: Aplikace poběží s polovičním FPS",
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "Zapnout vyhlazování pohybu pro tuto aplikaci",
 	"Settings_PerApplication_Reprojection_Header": "Reprojekce",
-	"Settings_PerApplication_Reprojection_Checkbox": "Použít starší režim reprojekce",
+	"Settings_PerApplication_Reprojection_Checkbox": "Starší režim reprojekce",
 	"Settings_PerApplication_Reprojection_Description": "Zaškrtnutím této možnosti zakážete pro tuto aplikaci asynchronní reprojekci.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Přepsání obnovovací frekvence",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Zaškrtnutím této možnosti Vám bude umožněno nastavit pro tuto aplikaci obnovovací frekvenci, která se liší od globálního nastavení.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Omezování a předpovídání jsou funkce, které jsou spravovány automaticky v závislosti na aktuálním výkonu, nicméně některé aplikace mohou po vynucení fixní nižší snímkové frekvence nabídnout kvalitnější zážitek.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Logika omezování",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Pokud zde určíte fixní hodnotu omezení, bude pro tuto aplikaci zakázáno automatické omezování.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fixní",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Auto.",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Maximální snímková frekvence aplikace (FPS):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Dodatečné předvídání (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Umožňuje skrze úpravu pohybů hlavy a vzdálenosti mezi očima přepsat simulované měřítko (nebo chcete-li „velikost“) virtuálního světa.",
+	"Settings_PerApplication_WorldScale_Label": "Přepsání měřítka virtuálního světa",
+	"Settings_PerApplication_WorldScale_Off": "Ne",
+	"Settings_PerApplication_WorldScale_Fine": "Mírné",
+	"Settings_PerApplication_WorldScale_Normal": "Normální",
+	"Settings_PerApplication_WorldScale_Extreme": "Extrémní",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s % až %2$s %]",
+	"Settings_PerApplication_WorldScale_Warning": "Poznámka: Změny mohou vyžadovat restartování aplikace a/nebo nečekanými způsoby změnit virtuální interakce. V závislosti na aplikaci mohou být ovlivněny akce jako například házení.",
+	"Settings_PerApplication_FovScale_Description": "Chcete-li, můžete snížením zorného pole aplikace obětovat periferní vidění za ostřejší obraz. Poznámka: Aby byla změna správně použita, nejspíš bude nutné aplikaci restartovat.",
+	"Settings_PerApplication_FovScale_Label": "Zorné pole",
+	"Settings_PerApplication_FovScale_Multiplier": "Vlastní měřítko",
 	"Settings_MimeTypes_Pancake_Header": "Aplikace pro spouštění 2D aplikací",
 	"Settings_Camera_EnableCamera": "Povolit kameru",
 	"Settings_Camera_ShowOnController": "Zobrazovat kameru na ovladači",
