--- a/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
@@ -26,7 +26,7 @@
 	"VRMonitor_Overview_QuickLinks_Knock_Desc": "Herätä VR-lasien käyttäjän huomio",
 	"VRMonitor_Overview_QuickLinks_RoomSetup": "Huoneen asetukset",
 	"VRMonitor_Overview_QuickLinks_RoomSetup_Desc": "Määritä virtuaaliesteen rajat",
-	"VRMonitor_Overview_QuickLinks_Tutorial": "SteamVR-opas",
+	"VRMonitor_Overview_QuickLinks_Tutorial": "SteamVR-tutoriaali",
 	"VRMonitor_Overview_QuickLinks_Tutorial_Desc": "Opettele käyttämään VR-laseja",
 	"SystemStatus_FrameRate_Good": "Hyvä kuvataajuus",
 	"SystemStatus_FrameRate_MissedFrames": "Puuttuvia ruutuja",
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Mahdollistaa äänen yhtäaikaa 3,5-millisen liitännän ja off-ear-kaiuttimien kautta.",
 	"Settings_Audio_Single": "Yksittäinen",
 	"Settings_Audio_Dual": "Pari",
+	"Settings_Audio_MicMonitor": "Mikrofoniseuranta (sivuääni)",
+	"Settings_Audio_Active": "Aktiivinen",
+	"Settings_Audio_Muted": "Mykistetty",
 	"Settings_SectionTitle_Advanced": "Lisäasetukset",
 	"Settings_SectionTitle_Developer": "Kehittäjä",
 	"Settings_SectionTitle_Dashboard": "Työpöytä",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Määritä määrityshakemisto",
 	"MenuAction_SetLogDirectory": "Määritä logihakemisto",
 	"Settings_Advanced_AllowSupersampleFiltering": "Edistynyt supersämpläyksen suodatus",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4 legacy -yhteensopivuus",
 	"Settings_Advanced_Paths_Header": "Polut",
 	"Settings_Advanced_Reset_Header": "Nollaus",
 	"Settings_Advanced_Status_Header": "Tilan tarkistus",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Tämän asetuksen valitseminen poistaa asynkronisen uudelleenprojektion tältä peliltä.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Päivitystiheyden ohitus",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Tämän asetuksen valitseminen mahdollistaa eri päivitystiheyden määrittelyn sovellukselle yleisistä asetuksista.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Rajoittaminen ja ennakointi mukautuvat automaattisesti mitatun suorituskyvyn mukaan, mutta jotkin sovellukset saattavat toimia paremmin, jos määrität pysyvän alhaisemman rajan.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Rajoitusmääritykset",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Määrittämällä pysyvän rajoittamisarvon poistat käytöstä automaattisen rajoittamisen tälle sovellukselle.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Korjattu",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Automaattinen",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Rajaa sovelluksen kuvataajuus – FPS enintään:",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Lisäennakointi (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Ohita sovelluksen nykyinen skaalaus säätämällä pään liikettä ja silmäväliä.",
+	"Settings_PerApplication_WorldScale_Label": "Ohita virtuaalimaailman skaalaus",
+	"Settings_PerApplication_WorldScale_Off": "Pois käytöstä",
+	"Settings_PerApplication_WorldScale_Fine": "Pieni",
+	"Settings_PerApplication_WorldScale_Normal": "Normaali",
+	"Settings_PerApplication_WorldScale_Extreme": "Suuri",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s–%2$s %]",
+	"Settings_PerApplication_WorldScale_Warning": "Huomaa, että muutokset saattavat vaikuttaa pelikokemukseen odottamattomilla tavoilla ja vaatia sovelluksen uudelleenkäynnistämisen. Toiminnot, kuten objektin heittäminen, saattavat toimia arvaamattomasti.",
+	"Settings_PerApplication_FovScale_Description": "Voit vaihtoehtoisesti madaltaa sovelluksen näkökenttää, mikä alentaa ääreisnäön laatua mutta lisää kuvan tarkkuutta. Huomaa, että useimmissa tapauksissa sovellus pitää käynnistää uudelleen, jotta muutokset toimivat kunnolla.",
+	"Settings_PerApplication_FovScale_Label": "Näkökenttä",
+	"Settings_PerApplication_FovScale_Multiplier": "Mukautettu skaalaus",
 	"Settings_MimeTypes_Pancake_Header": "Valitse sovellus, jotta voit käynnistää 2D-sovellukset",
 	"Settings_Camera_EnableCamera": "Ota kamera käyttöön",
 	"Settings_Camera_ShowOnController": "Näytä kamera ohjaimessa",
