--- a/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
@@ -3,7 +3,7 @@
 	"VRMonitor_Nav_Overview": "Geral",
 	"VRMonitor_Nav_Settings": "Definições",
 	"VRMonitor_Nav_Help": "Ajuda",
-	"VRMonitor_Nav_Developer": "Desenvolvedor",
+	"VRMonitor_Nav_Developer": "Developer",
 	"Settings_ControllerSettings": "Definições de comandos",
 	"Settings_Controller_ShowBindingCallouts": "Mostrar controlos nos comandos",
 	"Settings_Controller_ShowBindingCalloutsInVR": "Mostrar controlos nos comandos em R.V.",
@@ -59,8 +59,11 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Permite simultaneamente o áudio pelo conector de 3,5 mm e pelos altifalantes",
 	"Settings_Audio_Single": "Única",
 	"Settings_Audio_Dual": "Dupla",
+	"Settings_Audio_MicMonitor": "Monitorização de mic.",
+	"Settings_Audio_Active": "Ativo",
+	"Settings_Audio_Muted": "Sem som",
 	"Settings_SectionTitle_Advanced": "Avançado",
-	"Settings_SectionTitle_Developer": "Desenvolvedor",
+	"Settings_SectionTitle_Developer": "Developer",
 	"Settings_SectionTitle_Dashboard": "Painel",
 	"Settings_SectionTitle_General": "Geral",
 	"Settings_SectionTitle_Applications": "Aplicações",
@@ -77,7 +80,7 @@
 	"Advanced_AllowSavingOfTimingInfo": "Permitir que dados dos tempos sejam guardados",
 	"Advanced_AutoSaveTimingInfoOnExit": "Guardar automaticamente dados dos tempos ao sair",
 	"Settings_EnableWebHelperDebugger": "Ativar debugger de Web Helper",
-	"Settings_EnableWebHelperDebuggerDesc": "Ativa o servidor de debugging para anexar as ferramentas de desenvolvedor e o debugger de Chromium a páginas de Chromium integradas. Sempre ativo em versões Perforce.",
+	"Settings_EnableWebHelperDebuggerDesc": "Ativa o servidor de debugging para anexar as ferramentas de developer e o debugger de Chromium a páginas de Chromium integradas. Sempre ativo em versões Perforce.",
 	"Advanced_PerfGraphInHMD": "Mostrar gráfico de desempenho do GPU no headset",
 	"Advanced_SaveFrameDataNow": "Guardar dados das frames",
 	"Explanation_DisableEnhancedPowerManagement": "Desativa a \"Melhor Gestão de Energia\" do Windows para os dispositivos USB do SteamVR caso haja perdas de deteção ou não consigas emparelhar comandos sem fios. ",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Definir diretório de config.",
 	"MenuAction_SetLogDirectory": "Definir diretório de relatórios",
 	"Settings_Advanced_AllowSupersampleFiltering": "Filtragem de super-sampling avançada",
+	"Settings_Video_HDCP14LegacyCompatibility": "Compatibilidade com HDCP 1.4",
 	"Settings_Advanced_Paths_Header": "Diretórios",
 	"Settings_Advanced_Reset_Header": "Restaurar",
 	"Settings_Advanced_Status_Header": "Verificação do estado",
@@ -181,6 +185,24 @@
 	"Settings_PerApplication_Reprojection_Description": "Marcar esta opção irá desativar a reprojeção assíncrona para este jogo.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Substituir taxa de atualização",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opção permitirá especificar uma taxa de atualização diferente da definição global para esta aplicação.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "A limitação e previsão de frames são aplicadas automaticamente com base no desempenho medido. Porém, algumas aplicações podem beneficiar de um limite fixo mais baixo para proporcionar uma experiência mais suave.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Comportamento de limitação",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Selecionar um valor fixo aqui irá desativar a limitação automática para esta aplicação.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Fixo",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Autom.",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Limitar taxa de frames máx. da aplicação a:",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Previsão adicional (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Substitui o dimensionamento da aplicação ao ajustar o movimento da cabeça e a separação dos olhos.",
+	"Settings_PerApplication_WorldScale_Label": "Substituir dimensões do mundo",
+	"Settings_PerApplication_WorldScale_Off": "Desligado",
+	"Settings_PerApplication_WorldScale_Fine": "Pequenas",
+	"Settings_PerApplication_WorldScale_Normal": "Normais",
+	"Settings_PerApplication_WorldScale_Extreme": "Extremas",
+	"Settings_PerApplication_WorldScale_Range": "[De %1$s% a %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Atenção: estas alterações podem necessitar que a aplicação seja reiniciada e/ou modificar interações de formas inesperadas. Dependendo da aplicação, algumas funcionalidades (como atirar objetos) podem ser afetadas.",
+	"Settings_PerApplication_FovScale_Description": "Esta opção reduz o campo de visão da aplicação para proporcionar uma maior clareza em troca de visão periférica. Atenção: em muitos casos, a aplicação terá de ser reiniciada para que a alteração seja aplicada devidamente.",
+	"Settings_PerApplication_FovScale_Label": "Campo de visão",
+	"Settings_PerApplication_FovScale_Multiplier": "Dimensões personalizadas",
 	"Settings_MimeTypes_Pancake_Header": "Seleciona em qual aplicação iniciar aplicações 2D",
 	"Settings_Camera_EnableCamera": "Ativar câmara",
 	"Settings_Camera_ShowOnController": "Mostrar câmara no comando",
