--- a/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
@@ -59,6 +59,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title": "Cho phép âm thanh từ cả 2 tín hiệu ra với bộ loa cách tai và jack âm thanh 3.5mm",
 	"Settings_Audio_Single": "Đơn",
 	"Settings_Audio_Dual": "Đôi",
+	"Settings_Audio_MicMonitor": "Theo dõi mic (sidetone)",
+	"Settings_Audio_Active": "Hoạt động",
+	"Settings_Audio_Muted": "Tắt tiếng",
 	"Settings_SectionTitle_Advanced": "Nâng cao",
 	"Settings_SectionTitle_Developer": "Nhà phát triển",
 	"Settings_SectionTitle_Dashboard": "Trang tổng quan",
@@ -94,6 +97,7 @@
 	"MenuAction_SetConfigDirectory": "Đặt thư mục thiết lập",
 	"MenuAction_SetLogDirectory": "Đặt thư mục nhật ký",
 	"Settings_Advanced_AllowSupersampleFiltering": "Tính năng lọc Supersample nâng cao",
+	"Settings_Video_HDCP14LegacyCompatibility": "Tương thích với HDCP 1.4 cũ",
 	"Settings_Advanced_Paths_Header": "Đường dẫn",
 	"Settings_Advanced_Reset_Header": "Đặt lại",
 	"Settings_Advanced_Status_Header": "Kiểm tra trạng thái",
@@ -148,7 +152,7 @@
 	"Settings_Video_AppResFooter": "Thiết lập hiện tại dựng khung hình cho mỗi mắt ở mức %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Làm mượt chuyển động",
 	"Settings_Advanced_MotionSmoothing_Description": "Tổng hợp khung hình mới để duy trì trải nghiệm tốt khi ứng dụng đang chạy không thể bắt kịp.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Làm mượt chuyển động không được hỗ trợ trên GPU / phiên bản driver này (yêu cầu có hỗ trợ tái chiếu không đồng bộ).",
+	"Settings_Advanced_MotionSmoothing_Disabled": "Làm mượt chuyển động không được hỗ trợ trên GPU / phiên bản driver này (yêu cầu có hỗ trợ đệm thêm phi đồng bộ).",
 	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Làm mượt chuyển động không được hỗ trợ trong các phiên bản Windows cũ.",
 	"Settings_Advanced_Supersampling_Auto": "Tự động",
 	"Settings_Advanced_Supersampling_Custom": "Tùy biến",
@@ -176,11 +180,29 @@
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "Ép luôn luôn bật",
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "Cảnh báo: Ứng dụng sẽ chạy với nửa tốc độ khung hình",
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "Bật làm mượt chuyển động cho ứng dụng này",
-	"Settings_PerApplication_Reprojection_Header": "Chiếu lại",
-	"Settings_PerApplication_Reprojection_Checkbox": "Dùng chế độ chiếu lại truyền thống",
-	"Settings_PerApplication_Reprojection_Description": "Lựa chọn này sẽ tắt tái chiếu không đồng bộ cho sản phẩm.",
+	"Settings_PerApplication_Reprojection_Header": "Đệm thêm khung hình",
+	"Settings_PerApplication_Reprojection_Checkbox": "Dùng đệm thêm khung hình kiểu cũ",
+	"Settings_PerApplication_Reprojection_Description": "Đánh dấu tùy chọn này sẽ tắt đệm thêm phi đồng bộ cho sản phẩm này.",
 	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Ghi đè tốc độ cập nhật",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Lựa chọn này cho phép xác định tốc độ làm mới khung hình khác với thiết lập chung cho ứng dụng này.",
+	"Settings_PerApplication_ThrottlingOverride_Description": "Điều chỉnh và dự đoán được xử lý tự động dựa trên hiệu năng đo được, tuy nhiên, một số ứng dụng sẽ phù hợp bị ép hoạt động ở tốc độ chậm hơn để mang lại trải nghiệm mượt hơn.",
+	"Settings_PerApplication_ThrottlingOverride_Label": "Hành vi điều chỉnh",
+	"Settings_PerApplication_ThrottlingOverride_Toggle": "Chọn một giá trị điều chỉnh cố định ở đây sẽ tắt hành vi điều chỉnh tự động cho ứng dụng này.",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_On": "Cố định",
+	"Settings_PerApplication_ThrottlingOverride_Toggle_Off": "Tự động",
+	"Settings_PerApplication_ThrottlingOverride_Framerate": "Khóa lượng khung hình ứng dụng tới (fps tối đa):",
+	"Settings_PerApplication_ThrottlingOverride_Prediction": "Khoảng dự đoán thêm (ms):",
+	"Settings_PerApplication_WorldScale_Description": "Ghi đè giá trị tỉ lệ nhận được bằng cách điểu chỉnh chuyển động đầu và khoảng cách mắt.",
+	"Settings_PerApplication_WorldScale_Label": "Ghi đè tỉ lệ thế giới",
+	"Settings_PerApplication_WorldScale_Off": "Tắt",
+	"Settings_PerApplication_WorldScale_Fine": "Cực thấp",
+	"Settings_PerApplication_WorldScale_Normal": "Bình thường",
+	"Settings_PerApplication_WorldScale_Extreme": "Cực cao",
+	"Settings_PerApplication_WorldScale_Range": "[%1$s% tới %2$s%]",
+	"Settings_PerApplication_WorldScale_Warning": "Lưu ý: Để thay đổi, có thể cần khởi động lại ứng dụng, và/hoặc điều chỉnh tương tác theo cách không mong muốn. Tùy thuộc vào ứng dụng, các tính năng như chuyển động ném có thể bị ảnh hưởng.",
+	"Settings_PerApplication_FovScale_Description": "Có thể tùy chỉnh vùng nhìn của ứng dụng để đổi tầm nhìn ngoại vi lấy độ rõ nét. Lưu ý: Trong một vài trường hợp, ứng dụng sẽ phải khởi động lại để các thay đổi được thực hiện chính xác.",
+	"Settings_PerApplication_FovScale_Label": "Tầm nhìn",
+	"Settings_PerApplication_FovScale_Multiplier": "Tỉ lệ tùy chọn",
 	"Settings_MimeTypes_Pancake_Header": "Chọn một ứng dụng để chạy cùng với các ứng dụng 2D",
 	"Settings_Camera_EnableCamera": "Bật camera",
 	"Settings_Camera_ShowOnController": "Hiện camera trên tay cầm",
