--- a/resources/webinterface/dashboard/localization/webhelper_czech.json
+++ b/resources/webinterface/dashboard/localization/webhelper_czech.json
@@ -69,6 +69,6 @@
 	"OriginString_ControllerSource": "%2$s – %3$s",
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
-	"KeyboardDone": "Hotovo",
+	"KeyboardDone": "OK",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
